--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -1,9 +1,7 @@
+\chapter{运动定律}\label{chapter-law-of-motion}
 
 
-\chapter{运动定律}
-
-
-
+% 
 前一章我们学习了怎样描述物体的运动，但是没有进一步讨论物体为什么做这种或那种运动，要讨论这个问题，必须知道运动和力的关系．这一章我们就来研究运动和力的关系，阐明力是使物体运动状态发生改变的原因，在力学中，只研究物体怎样运动而不涉及运动和力的关系的分科，叫做\textbf{运动学}；研究运动和力的关系的分科，叫做\textbf{动力学}．
 
 根据动力学的知识，如果知道了物体的受力情况，就可以确定物体的运动状况；或者反过来，如果知道了物体的运动状况，也可以确定物体的受力情况．这样，我们就不但能够描述运动，而且能够创造条件来控制物体的运动，使物体的运动符合人们的要求．
@@ -30,13 +28,34 @@
 物体放在一个水平导轨上，并设法使物体和导轨之间形成气层，物体沿这种气垫导轨运动时摩擦很小．推动一下物体，可以看到物体沿气垫导轨的运动很接近匀速直线运动．
 
 \begin{figure}[htp]
-\centering
-\includegraphics[scale=1.2]{fig/3-1.pdf}
-\caption{伽利略的斜面实验}
+    \centering
+    \begin{subfigure} {1\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-1a.pdf} 
+		\caption{}\label{fig_A_3-1a} 
+	\end{subfigure}
+	\\
+	\begin{subfigure} {1\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-1b.pdf} 
+		\caption{}\label{fig_A_3-1b} 
+	\end{subfigure}
+	\\
+	\begin{subfigure} {1\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-1c.pdf} 
+		\caption{}\label{fig_A_3-1c} 
+	\end{subfigure}
+    \caption{伽利略的斜面实验}\label{fig_A_3-1}
 \end{figure}
 
-伽利略还根据下面的理想实验进行推论，如图3.1甲所示，让小球沿一个斜面从静止滚下来，小球将滚上另一个斜面．如果没有摩擦，小球将上升到原来的高度，他推论说，如果减小第二个斜面的倾角（图3.1乙），小球在这个斜面上达
-到原来的高度就要通过更长的距寓，继续减小第二个斜面的倾角，使它最终成为水平面（图3.1丙），小球就再也达不到原来的高度，而要沿着水平面以恒定速度持续运动下去．
+伽利略还根据下面的理想实验进行推论，如图~\ref{fig_A_3-1a} 所示，
+让小球沿一个斜面从静止滚下来，小球将滚上另一个斜面．
+如果没有摩擦，小球将上升到原来的高度，他推论说，
+如果减小第二个斜面的倾角（图~\ref{fig_A_3-1b}），小球在这个斜面上达
+到原来的高度就要通过更长的距寓，继续减小第二个斜面的倾角，
+使它最终成为水平面（图~\ref{fig_A_3-1c}），小球就再也达不到原来的高度，
+而要沿着水平面以恒定速度持续运动下去．
 
 伽利略的实验虽然是想象中的理想实验，但它们是建立在可靠的事实的基础之上的．伽利略把经验事实和抽象思维结合起来，这正是他的工作的卓越之处．由于伽利略细心地研究了理想实验，才使他对动力学做出了重大贡献，这类理想实验在真实的实验基础上，抓住主要因素，忽略次要因素，可以深入地揭示现象的本质，它是科学研究中的一种重要方法．
 
@@ -98,12 +117,12 @@
 物体运动状态的改变，不但跟物体所受的外力有关，而且跟物体本身的性质有关，一辆空车和一辆装满货物的车，在相同牵引力的作用下，空车用较短的时间可以达到某一速度，装满货物的车要较长的时间才能达到相同的速度．空车的质量小，产生的加速度大；装满货物的车质量大，产生的加速度小．这说明，质量不同的物体，它们的运动状态的改变的难易程度并不相同，或者说它们的惯性的大小并不相同．在外力相同的情况下，质量大的物体得到的加速度小，它的运动状态难改变，惯性大；质量小的物体得到的加速度大，它的运动状态容易改变，惯性小，这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大，\textbf{质量是物体惯性大小的量度}．
 
 \begin{figure}[htp]
-\centering
-\includegraphics[scale=.45]{fig/3-2.png}
-\caption{歼击机在战斗前抛掉副油箱}
+    \centering
+    \includegraphics{fig/A/3-2.pdf}
+    \caption{歼击机在战斗前抛掉副油箱}\label{fig_A_3-2}
 \end{figure}
 
-惯性的大小在实际中是经常要加以考虑的．当我们要求物体的运动状态容易改变时，应该尽可能减小物体的质量，歼击机的质量比运输机、轰炸机小得多，在战斗前还要抛掉副油箱（图3.2），以进一步减小质量，就是为了提高歼击机的灵活性．相反，当我们要求物体的运动状态不易改变时，应该尽可能增大物体的质量，电动抽水站的电动机和水泵都固定在很重的机座上，就是要增大它们的质量，以尽量减小它们的振动
+惯性的大小在实际中是经常要加以考虑的．当我们要求物体的运动状态容易改变时，应该尽可能减小物体的质量，歼击机的质量比运输机、轰炸机小得多，在战斗前还要抛掉副油箱（图~\ref{fig_A_3-2}），以进一步减小质量，就是为了提高歼击机的灵活性．相反，当我们要求物体的运动状态不易改变时，应该尽可能增大物体的质量，电动抽水站的电动机和水泵都固定在很重的机座上，就是要增大它们的质量，以尽量减小它们的振动
 或避免因意外的碰撞而移动．
 
 那么，力、质量和加速度之间的关系是怎样的呢？下面我们用实验研究这个问题．
@@ -112,13 +131,13 @@
 \section{加速度和力的关系}
 质量一定时加速度和力的关系是怎样的呢？现在随同老师一起做实验来探讨这个问题．
 
-实验装置如图3.3所示，研究对象是图中所示的小车．小车放在光滑的平面上，前端拴着细绳，细绳跨过定滑轮，下面吊着一个砂桶，桶内装砂，当砂和砂桶的总质量远小于小车的总质量时，小车所受的拉力可以认为等于砂和砂桶的总
+实验装置如图~\ref{fig_A_3-3} 所示，研究对象是图中所示的小车．小车放在光滑的平面上，前端拴着细绳，细绳跨过定滑轮，下面吊着一个砂桶，桶内装砂，当砂和砂桶的总质量远小于小车的总质量时，小车所受的拉力可以认为等于砂和砂桶的总
 重量．因此，用天平称出砂和砂桶的总质量，算出它们的总重量，就得到小车所受的拉力．小车的后面固定一条穿过打点计时器的纸带，随若小车的运动，打点计时器在纸带上打下一列小点，把小车的运动情况记录下来．
 
 \begin{figure}[htp]
-\centering
-\includegraphics[scale=.4]{fig/3-3.png}
-\caption{研究牛顿第二定律的实验装置}
+    \centering
+    \includegraphics{fig/A/3-3.pdf}
+    \caption{研究牛顿第二定律的实验装置}\label{fig_A_3-3}
 \end{figure}
 
 每次实验中小车所受的拉力都是恒定的，小车在恒力的作用下，运动情况是怎样的呢？取下纸带，用实验七中所讲的方法来判断小车是否做匀变速运动，实验结果表明：在恒力的作用下，物体做匀变速运动；也就是说，作用力恒定时，加速度是恒定的，课后同学们可以根据自己实验的记录纸带，来
@@ -133,7 +152,7 @@
 \begin{tabular}{cc}
 \hline
 $F$  & $a$ \\
-（kgf）&（$\msq$）\\
+（kgf）&（$\Umsq$）\\
 \hline
 0.020  &  0.193  \\
 0.040  &  0.392  \\
@@ -144,43 +163,15 @@ $F$  & $a$ \\
 \end{tabular}
 \end{center}
 
-怎样研究这些数据呢？物理实验中最常用的办法是利用图象．取横坐标表示力$F$，纵坐标表示加速度$a$，根据实验数据在坐标平面上画出相应的点，再把这些点连起来作出图象．实验结果表明，得到的图象是一条通过原点的直线（图3.4）．
+怎样研究这些数据呢？物理实验中最常用的办法是利用图象．
+取横坐标表示力$F$，纵坐标表示加速度$a$，根据实验数据在坐标平面上画出相应的点，
+再把这些点连起来作出图象．实验结果表明，得到的图象是一条通过原点的直线（图~\ref{fig_A_3-4}）．
 这说明物体得到的加速度跟物体所受的外力成正比．课后根据你自己的实验数据作出图象，你得到的是什么图象？
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[scale=5, >=stealth, thick]
-
-\draw [<->](0,1.2)node [right]{$a$（$\msq$）}--(0,0)--(1.2,0)node [above]{$F$（kgf）};
-
-\foreach \x in{1,2,3,4,5}
-{
-    \draw(0,\x/5) --(0.03,\x/5);
-    \draw(\x/5,0)--(\x/5,0.03);
-}
-
-\draw [fill=black] (0.020*10  ,  0.193)  circle [radius=.3pt];
-\draw [fill=black]  (0.040*10  ,  0.392 ) circle [radius=.3pt];
-\draw [fill=black]  (0.060*10  ,  0.588 ) circle [radius=.3pt];
-\draw [fill=black]  (0.080*10  ,  0.775)  circle [radius=.3pt];
-\draw [fill=black]  (0.100*10  ,  0.955)circle [radius=.3pt];
-
-\draw[ultra thick](0,0)--(1.1,1.1);
-
-\node at (0,0)[below]{0};
-\node at (0.2,0)[below]{0.02};
-\node at (0.4,0)[below]{0.04};
-\node at (0.6,0)[below]{0.06};
-\node at (0.8,0)[below]{0.08};
-\node at (1,0)[below]{0.100};
-
-\node at (0,0.2)[left]{0.2};
-\node at (0,0.4)[left]{0.4};
-\node at (0,0.6)[left]{0.6};
-\node at (0,0.8)[left]{0.8};
-\node at (0,1)[left]{1.0};
-
-\end{tikzpicture}
-\caption{$a-F$图象}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-4.pdf}
+    \caption{$a-F$图象}\label{fig_A_3-4}
 \end{figure}
 
 
@@ -193,13 +184,13 @@ $F$  & $a$ \\
 或者
 \[a\propto F\]
 
-对于一个确定的物体来说，比如我们从实验确定10牛的力能产生4$\msq$的加速度，那么，根据加速度和力成正比，我们就可以知道任何大小的力对这个物体能产生多大的加速度，如15牛的力产生6$\msq$的加速度，20牛的力产生8$\msq$的加速度，30牛的力产生12$\msq$的加速度等等．
+对于一个确定的物体来说，比如我们从实验确定10牛的力能产生4$\Umsq$的加速度，那么，根据加速度和力成正比，我们就可以知道任何大小的力对这个物体能产生多大的加速度，如15牛的力产生6$\Umsq$的加速度，20牛的力产生8$\Umsq$的加速度，30牛的力产生12$\Umsq$的加速度等等．
 
 \subsection*{练习二}
 \begin{enumerate}
 	\item 根据你的记录纸带，量出有关数值，计算出每次实验的加速度，列出表格，作出$a-F$图象．
 	\item 利用你自己的数据算出每次实验中$a$和$F$的比值，看看这些比值是否大致相同？利用这种办法来研究$a$和$F$的关系，比起用图象来研究，哪种办法方便？
-	\item 5牛的力的作用在一个物体上，能使它产生2$\msq$的加速度，要使它产生5$\msq$的加速度，需要多少牛的力？
+	\item 5牛的力的作用在一个物体上，能使它产生2$\Umsq$的加速度，要使它产生5$\Umsq$的加速度，需要多少牛的力？
 \end{enumerate}
 
 
@@ -212,7 +203,11 @@ $F$  & $a$ \\
 把各次实验中测得的加速度和质量的数据列表记录下来，下表是我们在实验中测得的数据，作为例子写在这里．
 
 用图象来处理上面的数据．取横坐标表示质量$m$,纵坐
-标表示加速度$a$，根据实验数据作出图象．我们看到，画出的图象是一条曲线（图3.5）．我们很难从这个图象得到$a$和$m$是什么定量关系．想想看，怎样才能找出这个定量关系？能不能设法让所画的图象是一条直线呢？从$a-m$图象可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图象是怎样的．为此需要算出$1/m$的数值，下表是
+标表示加速度$a$，根据实验数据作出图象．我们看到，画出的图象是一条曲线（图~\ref{fig_A_3-5}）．
+我们很难从这个图象得到$a$和$m$是什么定量关系．
+想想看，怎样才能找出这个定量关系？能不能设法让所画的图象是一条直线呢？
+从$a-m$图象可以看出其中一个量增加，另一个量减小，于是猜想$a$和$m$可能是反比关系．
+现在改变一下作图方法，取横坐标表示$1/m$，纵坐标表示$a$，看看图象是怎样的．为此需要算出$1/m$的数值，下表是
 $1/m$和相应的$a$的数据．
 
 
@@ -220,7 +215,7 @@ $1/m$和相应的$a$的数据．
 \begin{tabular}{cc}
 \hline
 $m$  & $a$ \\
-（kg）&（$\msq$）\\
+（kg）&（$\Umsq$）\\
 \hline
 0.300  &  1.20  \\
 0.400  &  0.92  \\
@@ -231,61 +226,25 @@ $m$  & $a$ \\
 \end{tabular}
 \end{center}
 
-实验结果表明，得到的图象正是一条通过原点的直线（图3.6）,这表明我们的猜想是正确的，课后同学们可以根据自己
+实验结果表明，得到的图象正是一条通过原点的直线（图~\ref{fig_A_3-6}）,这表明我们的猜想是正确的，课后同学们可以根据自己
 实验的数据，作出$a-1/m$图象．你得到的图象是一条直线吗？
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[scale=10, >=stealth, thick, domain=0.3:0.8]
-
-\draw [<->](0+0.2,.8+0.5)node [right]{$a$（$\msq$）}--(0+0.2,0+0.5)--(.7+0.2,0+0.5)node [below]{$m$（kg）};
-
-\foreach \x in {1,2,3,4,5}
-{
-    \draw(0+0.2,\x/10+0.5) --(0.02+0.2,\x/10+0.5);
-    \draw(\x/10+0.2,0+0.5)--(\x/10+0.2,0.02+0.5);
-}
-
-    \draw(0+0.2,6/10+0.5) --(0.02+0.2,6/10+0.5);
-    \draw(0+0.2,7/10+0.5) --(0.02+0.2,7/10+0.5);
-
-
-\draw [fill=black] (0.3  ,  1.2)  circle [radius=.3pt];
-\draw [fill=black]  (0.4  , 0.92 ) circle [radius=.3pt];
-\draw [fill=black]  (0.5  , .81 ) circle [radius=.3pt];
-\draw [fill=black]  (0.6  ,  .71)  circle [radius=.3pt];
-\draw [fill=black]  (0.7  ,  .62)circle [radius=.3pt];
-
-\draw[color=red, very thick] plot (\x,.41/\x ) ;
-
-\node at (0+0.2,0+0.5)[below]{0.20};
-\node at (0.1+0.2,0+0.5)[below]{0.30};
-\node at (0.2+0.2,0+0.5)[below]{0.40};
-\node at (0.3+0.2,0+0.5)[below]{0.50};
-\node at (0.4+0.2,0+0.5)[below]{0.60};
-\node at (.5+0.2,0+0.5)[below]{0.70};
-
-\node at (0+0.2,0+0.5)[left]{0.5};
-\node at (0+0.2,0.1+0.5)[left]{0.6};
-\node at (0+0.2,0.2+0.5)[left]{0.7};
-\node at (0+0.2,0.3+0.5)[left]{0.8};
-\node at (0+0.2,0.4+0.5)[left]{0.9};
-\node at (0+0.2,.5+0.5)[left]{1.0};
-\node at (0+0.2,.6+0.5)[left]{1.1};
-\node at (0+0.2,.7+0.5)[left]{1.2};
-\end{tikzpicture}
-\caption{$a-F$图象}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-5.pdf}
+    \caption{$a-F$图象}\label{fig_A_3-5}
 \end{figure}
 
 我们从实验中得到的结论是：\textbf{在相同外力作用下，加速度跟质量成反比}．写成公式就是
 \[\frac{a_1}{a_2}=\frac{m_2}{m_1} \]
 或者
 \[a\propto \frac{1}{m} \]
-对于一个确定的力来说，如果我们知道这个力作用在已知质量的物体上产出多大加速度，根据加速度和质量成反比，我们就可以知道这个力对任何质量的物体产生多大加速度．比如一个力作用在1千克的物体上产生10$\msq$的加速度，那么，这个力作用在2千克的物体上就产生5$\msq$的加速度，作用在5千克的物体上就产生2$\msq$的加速度等等．
+对于一个确定的力来说，如果我们知道这个力作用在已知质量的物体上产出多大加速度，根据加速度和质量成反比，我们就可以知道这个力对任何质量的物体产生多大加速度．比如一个力作用在1千克的物体上产生10$\Umsq$的加速度，那么，这个力作用在2千克的物体上就产生5$\Umsq$的加速度，作用在5千克的物体上就产生2$\Umsq$的加速度等等．
 
 \begin{center}
 \begin{tabular}{cc}
 \hline
 $1/m$  & $a$ \\
-（kg）$^{-1}$&（$\msq$）\\
+（kg）$^{-1}$&（$\Umsq$）\\
 \hline
 3.33  &  1.20  \\
 2.50  &  0.92  \\
@@ -296,51 +255,10 @@ $1/m$  & $a$ \\
 \end{tabular}
 \end{center}
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[xscale=2,yscale=5, >=stealth, thick]
-
-\draw [<->](0,1.4)node [right]{$a$（$\msq$）}--(0,.4)--(3.5,0.4)node [above]{$1/m$（kg$^{-1}$）};
-
-\foreach \x in{0.5,0.6,...,1.2}
-{
-    \draw(0,\x) --(0.07,\x);
-}
-\draw(0,1.2) --(0.07,1.2);
-
-
-\foreach \y in{1,2,3}
-{
-
-    \draw(\y,0.4)--(\y,0.03+.4);
-}
-
-
-\draw [fill=black] (3.33  ,  1.2)  circle [radius=.3pt];
-\draw [fill=black]  (2.5  , 0.92 ) circle [radius=.3pt];
-\draw [fill=black]  (2  , .81 ) circle [radius=.3pt];
-\draw [fill=black]  (1.67  ,  .71)  circle [radius=.3pt];
-\draw [fill=black]  (1.43  ,  .62)circle [radius=.3pt];
-
-\draw[ultra thick](0,0.38)--(3.5,1.2);
-
-\node at (0,0.4)[below]{0};
-\node at (1,0.4)[below]{1};
-\node at (2,0.4)[below]{2};
-\node at (3,0.4)[below]{3};
-
-
-\node at (0,0.5)[left]{0.5};
-\node at (0,0.6)[left]{0.6};
-\node at (0,0.7)[left]{0.7};
-\node at (0,0.8)[left]{0.8};
-\node at (0,0.9)[left]{0.5};
-\node at (0,1)[left]{1.0};
-\node at (0,1.1)[left]{1.1};
-\node at (0,1.2)[left]{1.2};
-
-
-\end{tikzpicture}
-\caption{$a-1/m$图象}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-6.pdf}
+    \caption{$a-1/m$图象}\label{fig_A_3-6}
 \end{figure}
 
 
@@ -351,7 +269,7 @@ $1/m$  & $a$ \\
 \item 利用你自己的数据算出每次实验中$m$和$a$的乘积，
 看看乘积的数值是否大致相同？你由此能得出什么结论？利用这种办法来研究$a$和$m$的关系，比起用图象来研究，哪种办法方便？
 \item 你已经用图象研究了$a$和$F$、$a$和$m$的关系，谈谈用图象处理实验数据的好处．
-\item 一辆卡车在空载时质量是$3.5\times 10^3$千克，载货时的质量是$6.0\times 10^3$千克用同样大小的牵引力，如果空载时使卡车产生1.5$\msq$的加速度，载货时产生多大的加速度？（不考虑阻力）
+\item 一辆卡车在空载时质量是$3.5\times 10^3$千克，载货时的质量是$6.0\times 10^3$千克用同样大小的牵引力，如果空载时使卡车产生1.5$\Umsq$的加速度，载货时产生多大的加速度？（不考虑阻力）
 \end{enumerate}
 
 \section{牛顿第二定律}
@@ -366,35 +284,29 @@ $1/m$  & $a$ \\
 牛顿第二定律写成公式就是
 \[a\propto \frac{F}{m}\quad \text{或者}\quad F\propto ma \]
 上式可改写成为等式$F=kma$，其中$k$是比例常数．如果质
-量、加速度和力的单位选择适当，可以使$k=1$，公式得到简化．在国际单位制中，质量的单位是千克，加速度的单位是$\msq$，力的单位牛顿就是根据牛顿第二定律规定的：使质量是1千克的物体产生1$\msq$的加速度的力，叫做1牛顿．根据这个规定，
-\[1{\rm N}=k[1{\rm kg}][1\msq]=k\times 1[{\rm kg}\cdot \msq]\]
+量、加速度和力的单位选择适当，可以使$k=1$，公式得到简化．在国际单位制中，质量的单位是千克，加速度的单位是$\Umsq$，力的单位牛顿就是根据牛顿第二定律规定的：使质量是1千克的物体产生1$\Umsq$的加速度的力，叫做1牛顿．根据这个规定，
+\[1{\rm N}=k[1{\rm kg}][1\Umsq]=k\times 1[{\rm kg}\cdot \Umsq]\]
 可见，如果$m$，$a$和$F$都用国际单位制的单位，则$k=1$，而且
-\[1{\rm N}=1{\rm kg}\cdot \msq\]
+\[1{\rm N}=1{\rm kg}\cdot \Umsq\]
 牛顿第二定律的公式简化为
 \[F=ma\]
 
-等式$F=kma$中的$k$并不是在任何情况下都等于1，例如$m$的单位用千克，$a$的单位用$\msq$，而力的单位用千克力，$k$就不等于1，这一点我们是应该注意的．
+等式$F=kma$中的$k$并不是在任何情况下都等于1，例如$m$的单位用千克，$a$的单位用$\Umsq$，而力的单位用千克力，$k$就不等于1，这一点我们是应该注意的．
 
 \subsection{力的独立作用原理}
 上面讲的是物体受到一个力作用的情况，物体受到几个力的作用时，情况又是怎样的呢？当物体受到几个力的作用时，每个力各自独立地使物体产生一个加速度，就象其他的力不存在一样，这个性质叫做\textbf{力的独立作用原理}．因此物体受到几个力的作用，就产生几个加速度，物体实际的加速度就是这几个加速度的矢量和．
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[yscale=.4,xscale=.6, >=stealth]
-\draw[->,  thick](0,0)--(4,0)node [below]{$a_1$};
-\draw[->,  thick](0,0)--(6,0)node [below]{$F_1$};
-\draw[->,  thick](0,0)--(2,4)node [left]{$a_2$};
-\draw[->,  thick](0,0)--(3,6)node [left]{$F_2$};
-\draw[dashed](6,4)--(2,4);
-\draw[dashed](9,6)--(3,6);
-\draw[dashed](6,4)--(4,0);
-\draw[dashed](9,6)--(6,0);
-\draw[<-, ultra thick](6,4)node [below]{$a$}--(0,0);
-\draw[<-, ultra thick](9,6)node [right]{$F_{\text{合}}$}--(0,0);
-\draw(-1,-.8) rectangle (1,.8);
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-7.pdf}
+    \caption{}\label{fig_A_3-7}
 \end{figure}
 
-如图3.7所示，设物体受到两个力$F_1$和$F_2$的作用，它们各自独立地产生两个加速度$a_1$和$a_2$，物体实际的加速度$a$就是按照平行四边形法则求出的这两个加速度的矢量和，如果再按照平行四边形法则求出力$F_1$和$F_2$的合力$F_{\text{合}}$，就可以看出加速度$a$的方向是跟合力$F_{\text{合}}$的方向相同的．由于$a_1=F_1/m$，$a_2=F_2/m$，所以从图3.7不难得到$a=\frac{F_{\text{合}}}{m}$．可见加速度跟合外力成正比，跟物体的质量成反比．上述结论显然可以推广到物体受到两个以上的力的情况．
+如图~\ref{fig_A_3-7} 所示，设物体受到两个力$F_1$和$F_2$的作用，
+它们各自独立地产生两个加速度$a_1$和$a_2$，物体实际的加速度$a$就是
+按照平行四边形法则求出的这两个加速度的矢量和，如果再按照平行四边
+形法则求出力$F_1$和$F_2$的合力$F_{\text{合}}$，
+就可以看出加速度$a$的方向是跟合力$F_{\text{合}}$的方向相同的．
+由于$a_1=F_1/m$，$a_2=F_2/m$，所以从图~\ref{fig_A_3-7} 不难得到$a=\frac{F_{\text{合}}}{m}$．可见加速度跟合外力成正比，跟物体的质量成反比．上述结论显然可以推广到物体受到两个以上的力的情况．
 
 这样，我们可以把牛顿第二定律进一步表述如下：
 
@@ -411,8 +323,8 @@ $1/m$  & $a$ \\
 \item 一个物体受到一个逐渐减小的力的作用，力的方向跟速度的方向相同，物体的速度怎样改变？
 \item \begin{enumerate}
 \item  质量是0.5千克的物体在一个恒力的作用下得到
-0.1$\msq$的加速度，这个恒力是多大？
-\item 10牛的力使一个物体得到2.0$\msq$的加速度，这个物体的质量是多大？
+0.1$\Umsq$的加速度，这个恒力是多大？
+\item 10牛的力使一个物体得到2.0$\Umsq$的加速度，这个物体的质量是多大？
 \item 质量是0.1千克的物体，在5牛的恒力作用下，得到多大的加速
 度？
 \end{enumerate}
@@ -445,13 +357,13 @@ $1/m$  & $a$ \\
 如果用$G$表示物体的重量，用$m$表示物体的质量，用$g$表
 示重力加速度，那么，根据牛顿第二定律就得到
 \[ G=mg\]
-这就是质量和重量的关系式．在这个公式中，如果质量用${\rm kg}$作单位，重力加速度用$\msq$作单位，重量就要用${\rm N}$作单
-位，例如物体的质量$m=5.0{\rm kg}$，$g=9.8\msq$，它的重量
-\[G=50{\rm kg}\times 9.8\msq=49{\rm N}\]
+这就是质量和重量的关系式．在这个公式中，如果质量用${\rm kg}$作单位，重力加速度用$\Umsq$作单位，重量就要用${\rm N}$作单
+位，例如物体的质量$m=5.0{\rm kg}$，$g=9.8\Umsq$，它的重量
+\[G=50{\rm kg}\times 9.8\Umsq=49{\rm N}\]
 
 上述质量和重量的关系式$G=mg$，我们在初中已经见过，
-那时我们讲的是$g=9.8{\rm N/kg}$，因为$1{\rm N}=1{\rm kg}\cdot \msq$，
-所以不难证明：$9.8{\rm N/kg}=9.8\msq$．
+那时我们讲的是$g=9.8{\rm N/kg}$，因为$1{\rm N}=1{\rm kg}\cdot \Umsq$，
+所以不难证明：$9.8{\rm N/kg}=9.8\Umsq$．
 
 
 一个物体不论在什么地方质量都是相同的，物体的质量
@@ -467,11 +379,10 @@ $1/m$  & $a$ \\
 因此，在一般情况下可以不考虑这个差别，而认为质量是1千
 克的物体在地球上任何地方的重量都是9.8牛．这跟在一般
 情况下可以不考虑重力加速度$g$在地球上不同地方的差别，
-而总是取$g=9.8\msq$是一样的．
+而总是取$g=9.8\Umsq$是一样的．
 
 \begin{table}[htp]\centering
-\caption{重力加速度的数值（$\msq$），标准值：$g=9.80665\msq$
-}
+\caption{重力加速度的数值（$\Umsq$），标准值：$g=9.80665\Umsq$}
 \begin{tabular}{ccc}
 \hline
 地点  &  纬度  &  重力加速度\\
@@ -523,7 +434,7 @@ $1/m$  & $a$ \\
 克的物体在北京的重量是多少牛？
 \item 有一架仪器，质量是3.0千克，把它射到月球上，这
 架仪器的质量是否改变？它在月球上的重量是多少牛？月球表
-面的$g$取1.6$\msq$．
+面的$g$取1.6$\Umsq$．
 \item 仔细看看课文中重力加速度的数值表，从中你可以
 得到什么结论？
 \item 据说以前有个商人，从荷兰那里把5000吨的货物运
@@ -536,9 +447,9 @@ $1/m$  & $a$ \\
 \section{力学单位制}
 \subsection{单位制}
 用公式$v=s/t$来求速度的时候，如果位移用米
-作单位，时间用秒作单位求出的速度一定要用$\ms$作单位．
+作单位，时间用秒作单位求出的速度一定要用$\Ums$作单位．
 同样，用公式$F=ma$来求力的时候，如果质量用千克作单位，
-加速度用$\msq$作单位，求出的力一定要用牛作单位．
+加速度用$\Umsq$作单位，求出的力一定要用牛作单位．
 
 可见物理公式在确定物理量的数量关系的同时，也确定
 了物理量的单位关系．因此，我们可以选定几个物理量的单
@@ -546,9 +457,9 @@ $1/m$  & $a$ \\
 量的关系，推导出其他物理量的单位．例如选定位移的单位
 （米）和时间的单位（秒），利用公式$v=s/t$
 可以推导出速度的单
-位（$\ms$），再利用公式$a=(v_t-v_0)/t$可以推导出加速度的单位
-（$\msq$）．如果再选定质量的单位（千克），利用公式$F=ma$
-就可以推导出力的单位（${\rm kg}\cdot \msq$即牛顿）．这些推导出
+位（$\Ums$），再利用公式$a=(v_t-v_0)/t$可以推导出加速度的单位
+（$\Umsq$）．如果再选定质量的单位（千克），利用公式$F=ma$
+就可以推导出力的单位（${\rm kg}\cdot \Umsq$即牛顿）．这些推导出
 来的单位叫做\textbf{导出单位}．基本单位和导出单位一起组成了\textbf{单
 位制}．
 
@@ -576,8 +487,8 @@ $1/m$  & $a$ \\
 
 利用公式$F= ma$求出$a$，再用公式$v_t= at$求出$v_t$：
 \[\begin{split}
-a&=\frac{F}{m}=\frac{14{\rm N}}{7.0{\rm kg}}=\frac{14{\rm kg}\cdot \msq}{7.0{\rm kg}}=2.0\msq\\
-v_t&=at=2.0\msq \times 5.0{\rm s}=10\ms
+a&=\frac{F}{m}=\frac{14{\rm N}}{7.0{\rm kg}}=\frac{14{\rm kg}\cdot \Umsq}{7.0{\rm kg}}=2.0\Umsq\\
+v_t&=at=2.0\Umsq \times 5.0{\rm s}=10\Ums
 \end{split} \]
 
 我们看到，题中的已知量都用国际单位制的单位来表示，
@@ -598,7 +509,7 @@ v_t&=at=2.0\msq \times 5.0{\rm s}=10\ms
 力的作用，求物体在3.0秒末的速度．先用国际单位制计算，
 再用厘米$\cdot$克$\cdot$秒制计算．
 \item 从炮筒射出的炮弹，质量是10千克，速度是$1.0\times 
-10^8\ms$，炮弹在炮筒内运动的时间是$4.0\times 10^{-8}$秒．求火
+10^8\Ums$，炮弹在炮筒内运动的时间是$4.0\times 10^{-8}$秒．求火
 药爆炸所生气体对炮弹的平均压力．
 
 \end{enumerate}
@@ -616,22 +527,15 @@ v_t&=at=2.0\msq \times 5.0{\rm s}=10\ms
 2.2牛．求物体4.0秒末的速度和4.0秒内发生的位移．
 \end{example}
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth]
-\draw(0,0) rectangle (2,1);
-   \fill [pattern = north east lines] (-2,-.5) rectangle (4, 0);
-\draw(-2,0)--(4,0);
-
-\draw[<->, thick] (-1.5,.5)node [above]{$F$}--(2.5,.5)node [above]{$f$};
-\draw[<->, thick] (1,-.8)node [below]{$G$}--(1,1.8)node [above]{$N$};
-\draw [fill=black] (1 ,  .5)  circle [radius=2pt];
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-8.pdf}
+    \caption{}\label{fig_A_3-8}
 \end{figure}
 
 \begin{solution}
 这个题目就是根据已知的受力情况来求物体的运动情
-况．物体受到四个力的作用（图3.8）：水平拉力$F$，滑动摩擦
+况．物体受到四个力的作用（图~\ref{fig_A_3-8}）：水平拉力$F$，滑动摩擦
 力$f$，物体的重量$G$，平面的支持力$N$．物体在竖直方向没有
 加速度，重力$a$和支持力$N$大小相等，方向相反，彼此平衡．合
 外力就是水平方向的外力$F$和$f$的合力．这里顺便提一下：象
@@ -643,13 +547,13 @@ v_t&=at=2.0\msq \times 5.0{\rm s}=10\ms
 
     取水平向左的方向作为正方向，则$F_{\text{合}}=F-f$，根据牛顿
 第二定律就有
-\[a=\frac{F-f}{m}=\frac{4.4-2.2}{2.0}\msq=1.1\msq \]
+\[a=\frac{F-f}{m}=\frac{4.4-2.2}{2.0}\Umsq=1.1\Umsq \]
  
  物体的初速度$v_0=0$，将$a$值代入公式
 $v_t=at,\quad s=\frac{1}{2}at^2$                                                                                                    艺
 中即可求出4.0秒末的速度和4.0秒内发生的位移：
 \[\begin{split}
-v_t&=at=1.1\times 4.0\ms =4.4\ms\\
+v_t&=at=1.1\times 4.0\Ums =4.4\Ums\\
 s&=\frac{1}{2}at^2=\frac{1}{2}\times 1.1\times (4.0)^2 {\rm m}=8.8{\rm m}
 \end{split} \]
 \end{solution}
@@ -664,13 +568,14 @@ s&=\frac{1}{2}at^2=\frac{1}{2}\times 1.1\times (4.0)^2 {\rm m}=8.8{\rm m}
 秒内滑下的路程．
 \end{example}
 
-\begin{figure}[htp]\centering
-\includegraphics[scale=.4]{fig/3-9.png}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-9.pdf}
+    \caption{}\label{fig_A_3-9}
 \end{figure}
 
 \begin{solution}
-滑雪的人受到三个力（图3.9）：重力$G$，山坡的支持力$N$，
+滑雪的人受到三个力（图~\ref{fig_A_3-9}）：重力$G$，山坡的支持力$N$，
 滑动摩擦力$f$．把重力$G=mg$沿着平行于山坡方向和垂直于
 山坡方向分解成两个力$F_1$和$F_2$，它们的大小是
 \[F_1=mg\sin\theta ,\qquad  F_2=mg\cos\theta \]
@@ -708,7 +613,7 @@ s&=\frac{1}{2}at^2=\frac{1}{2}gt^2(\sin\theta-\mu \cos\theta)\\
 
 \subsection*{练习七}
 \begin{enumerate}
-\item 一个质量是100克的运动物体，初速度是0.5$\ms$，
+\item 一个质量是100克的运动物体，初速度是0.5$\Ums$，
 受到的力是2.0牛，力的方向跟速度方向相同．求3.0秒末的
 速度．
 \item 一个原来静止的物体受到互成60$^\circ$角的两个力的作
@@ -745,7 +650,7 @@ s&=\frac{1}{2}at^2=\frac{1}{2}gt^2(\sin\theta-\mu \cos\theta)\\
 为零的匀变速运动，100秒钟通过了1000米的路程，即位移
 为1000米．取列车前进的方向为正方向，列车的加速度可以
 用公式$s=\frac{1}{2}at^2$求出，即
-\[a=\frac{2s}{t^2}=\frac{2\times 1000}{100^2}\msq=0.20\msq \]
+\[a=\frac{2s}{t^2}=\frac{2\times 1000}{100^2}\Umsq=0.20\Umsq \]
 
     列车在水平方向受两个力的作用：牵引力$F$和阻力$f$．已
 知阻力的大小
@@ -766,36 +671,21 @@ $F$为正值表示牵引力方向和所取正方向即列车前进的方
 \begin{example}
 在汽车中的悬线上挂一个小球，实验表明，当
 汽车做匀变速运动时，悬线将不在竖直方向，而与竖直方向成
-某一固定角度（图3.10）．已知小球的质量是30克，汽车的
-加速度为5.0$\msq$，求悬线对小球的拉力．
+某一固定角度（图~\ref{fig_A_3-10}）．已知小球的质量是30克，汽车的
+加速度为5.0$\Umsq$，求悬线对小球的拉力．
 \end{example}
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth]
-\draw(-1,0.5) rectangle (3,2.5);
-   \fill [pattern = north east lines] (-2,-.5) rectangle (4, 0);
-\draw(-2,0)--(4,0);
-\draw[dashed](1.5,2.5)--(1.5,1.5) ;
-\draw (1.5,2.5)--(1,1) ;
-\draw [fill=white] (0,  .4)  circle [radius=.4];
-\draw [fill=white] (2,  .4)  circle [radius=.4];
-\draw [fill=gray] (1,1)  circle [radius=.1];
-
-\draw [->] (1.3,1)--(1.8,1) node [right]{$a$};
-\draw [->] (1.5,2.8)--(2,2.8) node [right]{$a$};
-
-\draw (1.5,2.5-.4) arc(-90:-110:.4) node [below]{$\theta$};
-\draw   (0,  .4)  circle [radius=.1];
-\draw  (2,  .4)  circle [radius=.1];
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-10.pdf}
+    \caption{}\label{fig_A_3-10}
 \end{figure}
 
 \begin{solution}
     在解这个问题时，我们以小球为研究对象，它的运动情况
 是已知的．因为小球随着汽车一起做匀变速运动，所以汽车
 的加速度$a$就是小球的加速度．小球的受力情况是：受重力
-$G$和绳的拉力$T$的作用．小球的受力图如图3.11所示．小
+$G$和绳的拉力$T$的作用．小球的受力图如图~\ref{fig_A_3-11} 所示．小
 球除了受到这两个力以外，周围再也没有别的物体对小球施
 加什么力了．小球的加速度$a$正是由于$G$和$T$这两个力的合
 力$F$引起的，根据牛顿第二定律知道，这个合力的方向一定
@@ -809,24 +699,10 @@ T&=m\sqrt{a^2+g^2}\\
 \end{split} \]
 \end{solution}
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth]
-
-   \fill [pattern = north east lines] (-1.5,0) rectangle (1.5, .25);
-\draw(-1.5,0)--(1.5,0);
-
-\draw[dashed](0,0)--(0,-1.5) ;
-\draw[dashed](-.5,-3)--(-.5,-1) ;
-\draw[dashed](-1.5,-5)--(-.5,-3) ;
-\draw (0,0)--(-1.5,-3) ;
-\draw [->, thick] (-1.5,-3)--(-.5,-1) node [left]{$T$};
-\draw [->, thick] (-1.5,-3)--(-.5,-3) node [right]{$F$};
-\draw [->, thick] (-1.5,-3)--(-1.5,-5) node [below]{$G$};
-\draw (-.5,-1-.4) arc(-90:-118:.4) node [below]{$\theta$};
-\draw [fill=gray] (-1.5,-3)  circle [radius=.1];
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-11.pdf}
+    \caption{}\label{fig_A_3-11}
 \end{figure}
 
     拉力$T$的方向可以用悬线与竖直方向的角度$\theta$表示出
@@ -853,16 +729,16 @@ T&=m\sqrt{a^2+g^2}\\
 
  \subsection*{练习八}
 \begin{enumerate}
-\item 质量是20吨的车厢以0.2$\msq$的加速度前进，运
+\item 质量是20吨的车厢以0.2$\Umsq$的加速度前进，运
 动的阻力是它的重量的0.02倍，牵引力是多少牛？
-\item  列车在水平铁路上行驶，在60秒内速度由82$\kmh$增加到54$\kmh$，列车的质量是$1.0\times 10^8$吨，机车对
+\item  列车在水平铁路上行驶，在60秒内速度由82$\Ukmh$增加到54$\Ukmh$，列车的质量是$1.0\times 10^8$吨，机车对
 列车的牵引力是$1.5\times 10^5$牛．求列车在运动中所受的阻力．
-\item  以1$\ms$行驶的无轨电车，在关闭电动机以后经
+\item  以1$\Ums$行驶的无轨电车，在关闭电动机以后经
 过10秒停下来．电车的质量是$4.0\times 10^3$千克．求电车所受
 的阻力．
 \item  用弹簧秤拉着一个物体在水平面上做匀速运动，弹
 等秤的读数是0.40牛．然后用弹簧秤拉着这个物体在这个
-水平面上做匀变速运动，测得加速度是0.85$\msq$，弹簧秤
+水平面上做匀变速运动，测得加速度是0.85$\Umsq$，弹簧秤
 的读数是2.10牛．这个物体的质量是多大？
 \end{enumerate}
 
@@ -873,45 +749,58 @@ T&=m\sqrt{a^2+g^2}\\
     我们知道，物体的重量是由于地球的吸引而使物体受到
 的力．物体的重量可以用弹簧秤称出来．把待测的物体挂在
 弹簧秤的下面，当物体和弹簧秤静止时弹簧秤的读数就等于
-物体的重量（图3.1甲）．那么，当弹簧秤和物体一起在竖直
+物体的重量（图~\ref{fig_A_3-12a}）．那么，当弹簧秤和物体一起在竖直
 方向做加速运动时，弹簧秤的读数还等于物体的重量吗？
 
-    用手提着挂有物体的弹簧秤，使它急剧上升（图3.1乙），
+    用手提着挂有物体的弹簧秤，使它急剧上升（图~\ref{fig_A_3-12b}），
 产生方向向上的加速度．我们看到，这时弹簧秤的读数大于
-物体的重量．相反地，如果使它急剧下降（图3.12丙），产生
+物体的重量．相反地，如果使它急剧下降（图~\ref{fig_A_3-12c}），产生
 方向向下的加速度，弹簧秤的读数就小于物体的重量．怎样
 解释这种现象呢？把牛顿第二定律和牛顿第三定律结合起
 来，就能解释这种现象了．
-\begin{figure}[htp]\centering
-\includegraphics[scale=.5]{fig/3-12.png}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \begin{subfigure} {0.3\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-12a.pdf} 
+		\caption{}\label{fig_A_3-12a} 
+	\end{subfigure}
+	\hfil
+	\begin{subfigure} {0.3\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-12b.pdf} 
+		\caption{}\label{fig_A_3-12b} 
+	\end{subfigure}
+	\hfil
+	\begin{subfigure} {0.3\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-12c.pdf} 
+		\caption{}\label{fig_A_3-12c} 
+	\end{subfigure}
+    \caption{}\label{fig_A_3-12}
 \end{figure}
 
     以挂在弹簧秤上的物体作为研究对象，它受到两个力的
-作用：重力$G$和弹簧的拉力$T$（图3.13）．根据牛顿第二定
+作用：重力$G$和弹簧的拉力$T$（图~\ref{fig_A_3-13}）．根据牛顿第二定
 律知道，正是这两个力的合力使物体做加速运动的．
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[scale=.8, >=stealth]
-
-   \draw  (0,0) rectangle (1.5, 2);
-\node at (0.75,-2){甲};
-   \draw  (3,0) rectangle (4.5, 2);
-\node at (3.75,-2){乙};
-
-\draw [fill=black] (0.75,1)  circle [radius=.1];
-\draw [fill=black] (3.75,1)  circle [radius=.1];
-\draw[<->, very thick] (.75, 4)node [right]{$T$}--(.75, -1)node [right]{$G$};
-\draw[<->, very thick] (3.75, 2.5)node [right]{$T$}--(3.75, -1)node [right]{$G$};
-\draw [<-](1.8, 1)node [above]{$a$}--(1.8, .5);
-\draw [->](4.8, 1)--(4.8, .5)node [below]{$a$};
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htp]
+    \centering
+    \begin{subfigure} {0.3\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-13a.pdf} 
+		\caption{}\label{fig_A_3-13a} 
+	\end{subfigure}
+	\hfil
+	\begin{subfigure} {0.3\linewidth} 
+		\centering
+		\includegraphics{fig/A/3-13b.pdf} 
+		\caption{}\label{fig_A_3-13b} 
+	\end{subfigure}
+    \caption{}\label{fig_A_3-13}
 \end{figure}
 
-    当物体和弹簧秤一起加速上升时，加速度的方向向上（图
-3.13甲），取向上的方向为正方向．对物体应用牛顿第二定
+    当物体和弹簧秤一起加速上升时，加速度的方向向上（图~\ref{fig_A_3-13a}），取向上的方向为正方向．对物体应用牛顿第二定
 律，就有$F_{\text{合}}=T-G=ma$，由此可以求出$T$：
 \[ T=G+ma\]
 
@@ -925,8 +814,7 @@ T&=m\sqrt{a^2+g^2}\\
 度时，它对支持物的压力（或对悬挂物的拉力）大于物体的重
 量的现象，叫做\textbf{超重现象}．
 
-    当挂着物体的弹簧秤加速下降时，加速度的方向向下（图
-3.13乙）．取向下的方向为正方向．对物体应用牛顿第二定
+    当挂着物体的弹簧秤加速下降时，加速度的方向向下（图~\ref{fig_A_3-13b}）．取向下的方向为正方向．对物体应用牛顿第二定
 律$F_{\text{合}}=G-T=ma$，得到
                                \[T=G-ma\]
     
@@ -938,12 +826,12 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 物体的重量的现象，叫做\textbf{失重现象}．
 
 \begin{figure}[htp]
-\centering
-\includegraphics[scale=.5]{fig/3-14.png}
-\caption{}
+    \centering
+    \includegraphics{fig/A/3-14.pdf}
+    \caption{}\label{fig_A_3-14}
 \end{figure}
 
-    如果把挂着物体的弹簧秤从手中放开（图3.14），物体和
+    如果把挂着物体的弹簧秤从手中放开（图~\ref{fig_A_3-14}），物体和
 弹簧秤将一起自由下落，这时$T=G-mg=0$，弹簧秤的读数
 是零，这是容易理解的，因为物体和
 弹簧秤一起自由下落，它们之间不发
@@ -966,7 +854,7 @@ $G-ma$，这时表示物体对弹簧秤拉力的弹簧秤读数小于物体
 \item 某钢绳所能承受的最大拉力是4.0吨，如果用这条
 钢绳使3.5吨的货物匀加速上升，在0.50秒内发生的速度改
 变不能超过多大？
-\item 升降机以0.30$\msq$的加速度竖直减速下降，站在
+\item 升降机以0.30$\Umsq$的加速度竖直减速下降，站在
 升降机里60千克的人，对升降机地板的压力是多大？他站在
 升降机中的体重计上，体重计表示的他的体重是多大？如果升
 降机以相同的加速度竖直减速上升，情况又怎样？在什么情况
@@ -1022,7 +910,7 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 里的一切宏观物体，如行星、卫星、人造飞船、地球上的各种交
 通工具以及我们通常研究的物体，它们的速度都远小于光速，
 都显示不出质量随速度而改变的现象．例如，地球的公转速
-度$v=3\times 10^4\ms$，以这个速度运动的物体，它的质量的改
+度$v=3\times 10^4\Ums$，以这个速度运动的物体，它的质量的改
 变大约只为静止质量的十万万分之五，这样微小的变化实际
 上是无法观测出来的．这就是说，对于太阳系里一切宏观物
 体的运动来说，经典力学已经足够准确了．总之，处理低速运
@@ -1067,7 +955,7 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 \section*{习题}
 \begin{enumerate}
     \item 一个小金属车可以和另外两个相同的小木车在天平
-上平衡．用一个力作用在小金属车上，得到2$\msq$的加速
+上平衡．用一个力作用在小金属车上，得到2$\Umsq$的加速
 度，如果用相同的力作用在一个静止的小木车上，经过2秒，
 小木车的速度是多大？
 
@@ -1083,11 +971,11 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 滑到斜面末端时的速度$v$只跟开始滑下时竖直高度$h$、重力
 加速度$g$有关，跟物休的质量$m$、斜面的倾角$\theta$无关．
 \item  一个放在水平面上的物体，质量是0.50千克，在水
-平方向受到6.0牛的拉力，得到10$\msq$的加速度，求这个
+平方向受到6.0牛的拉力，得到10$\Umsq$的加速度，求这个
 物体和平面间的滑动摩擦系数．
 \item   质量是2.75吨的载重卡车，在2900牛的牵引力作
 用下开上一个山坡，沿山坡每前进1米升高0.05米．卡车由
-静止开始前进100米时速度达到36$\kmh$．求卡车在前
+静止开始前进100米时速度达到36$\Ukmh$．求卡车在前
 进中所受的摩擦阻力．
 \item  汽车开上一段坡路．汽车的质量是1500千克，发动
 机的牵引力是3000牛，摩擦阻力是900牛顿．沿坡路每前进
@@ -1103,31 +991,25 @@ $v=0.95c$时，$m\approx 3.1m_0$．这时，经典力学就不再适用了．当
 体的加速度和速度的绝对值又将怎样变化？
 \item  一个放在水平面上的质量是5.0千克的物体，受到
 与水平方向成30$^{\circ}$角的斜向上方的拉力作用，物体产生沿水
-平方向的加速度是2$\msq$．物体跟平面的滑动摩擦系数是
+平方向的加速度是2$\Umsq$．物体跟平面的滑动摩擦系数是
 0.1．求拉力是多大？
 \item  1966年曾在地球的上空完成了以牛顿第二定律为
 基础的测定质量的实验．实验时，用双子星号宇宙飞船$m_1$去
 接触正在机道上运行的火箭组$m_2$，接触以后，开动飞船尾部
-的推进器，使飞船和大箭组共同加速（图3.15），推进器的平均
+的推进器，使飞船和大箭组共同加速（图~\ref{fig_A_3-15}），推进器的平均
 均推力$F$等于595牛，推进器开动7.0
 秒钟，测出飞船和火箭组的速度改变
-是0.91$\ms$．已知双子星号宇宙飞
+是0.91$\Ums$．已知双子星号宇宙飞
 船的质量$m_1=3400{\rm kg}$．求火箭组的质量$m_2$是多大．
-\begin{figure}[htp]\centering
-    \begin{tikzpicture}[scale=.6, >=stealth]
-       \draw  (0,0) rectangle (5, 2);
-       \draw  (0,0) rectangle (2.5, 2);
-    \node at (2.5/2,1){$m_1$};
-    \node at (2.5+2.5/2,1){$m_2$};
-    \draw[<-](5,1)--node [below]{$F$}(7,1);
-    \draw[<-](2,2.5)node [left]{$a$}--(3,2.5);
-    \end{tikzpicture}
-    \caption{}
-    \end{figure}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-15.pdf}
+    \caption{}\label{fig_A_3-15}
+\end{figure}
 
 \begin{solution}
     推进器的推力使宇宙飞船和火箭组产生的加速度
-\[a=\frac{0.91\ms}{7.0{\rm s}}=0.13\msq \]
+\[a=\frac{0.91\Ums}{7.0{\rm s}}=0.13\Umsq \]
 根据牛顿第二定律得
 \[F=ma=(m_1+m_2)a \]
 所以
@@ -1158,40 +1040,17 @@ $s$，那么：
 
 \item   有两个物体，质量为$m_1$和$m_2$，$m_1$
 原来静止，$m_2$以速度$v_0$向右运
-动（图3.16）．它们同时开始受到大小
+动（图~\ref{fig_A_3-16}）．它们同时开始受到大小
 相等、方向与$v_0$相同的恒力$F$的作用，
 它们能不能在某一时刻达到相同的速
 度？分$m_1<m_2$, $m_1=m_2$, $m_1>m_2$三种情况来讨论．
-\begin{figure}[htp]\centering
-    \begin{tikzpicture}[scale=.6, >=stealth]
-       \draw  (0,0) rectangle (2.5, 2);
-       \draw  (0,3) rectangle (2.5, 5);
-    \node at (2.5/2,4){$m_1$};
-    \node at (2.5/2,1){$m_2$};
-    \draw[->](3,1)--node [below]{$v_0$}(4,1);
-    
-    \end{tikzpicture}
-    \caption{}
-    \end{figure}
+\begin{figure}[htp]
+    \centering
+    \includegraphics{fig/A/3-16.pdf}
+    \caption{}\label{fig_A_3-16}
+\end{figure}
+
 \end{enumerate}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
