--- a/fig/A/3-3.tex
+++ b/fig/A/3-3.tex
@@ -26,7 +26,7 @@
   \draw[top color=gray,bottom color=gray,middle color=white,line join=round](-1.05,0.9)--(-1.5,1.2)--(-1.05,1.0);
   \draw(-1.8,-0.2)arc(180:0:0.2);
   \fill[left color=darkgray,right color=darkgray,middle color=gray](-1.8,-0.2)arc(180:0:0.2 and 0.07)--(-1.5,-0.6)--(-1.7,-0.6)--cycle;
-  \fill[left color=lightgray,right color=lightgray,middle color=white](-1.8,-0.2)arc(180:360:0.2 and 0.07)--(-1.5,-0.6)arc(0:-180:0.1 and 0.035)--cycle;
+  \fill[left color=gray,right color=gray,middle color=gray!50](-1.8,-0.2)arc(180:360:0.2 and 0.07)--(-1.5,-0.6)arc(0:-180:0.1 and 0.035)--cycle;
   % \foreach \y in {0,-0.5,-1.0}
   % {
   %   \draw(-1.65,\y-0.05)arc(180:-90:0.05)--++(0,-0.3)arc(90:360:0.05);
