--- a/fig/A/4-24.tex
+++ b/fig/A/4-24.tex
@@ -15,10 +15,10 @@
   \tkzDefPointBy[translation = from F to Fn](m)\tkzGetPoint{G}
   \draw[densely dashed](O)ellipse(2 and 0.5)(O)--(0,4);
   \fill(O)ellipse(1pt and 0.5pt)node[below right]{$O$};
-  \draw[thick](O')--(m)node[pos=0.32,left]{$l$};
+  \draw[thick](O')--(m)node[pos=0.32,left]{$\ell$};
   \draw(O)--(m);
   \draw[->,red](m)--(Fn)node[text=black,right]{$F_n$};
-  \draw[->,red](m)--(F)node[text=black,left]{$F$};
+  \draw[->,red](m)--(F)node[text=black,left]{$T$};
   \draw[->,red](m)--(G)node[text=black,above left]{$G$};
   \draw[thin,densely dashed](G)--(Fn)--(F);
   \draw[thin](0,2.7)arc(270:250:0.8)node[midway,below]{$\theta$};
