--- a/fig/A/4-28.tex
+++ b/fig/A/4-28.tex
@@ -16,7 +16,7 @@
   \draw[->](160:2)--++(250:1.0);
   \draw[thin,densely dashed](0,0)--(160:1)(0,0)--(-0.9,0.7);
   \draw[->,red](160:2)--++(-20:1.0)node[below=2mm,text=black]{$F=m\omega^2r$};
-  \draw[->,red](-1.8,1.4)--(-0.9,0.7)node[above right,text=black]{$F<m\omega^2r$};
+  \draw[->,red](-1.8,1.4)node[right=4mm,text=black]{$F<m\omega^2r$}--(-0.9,0.7);
   \draw[->](90:2)..controls(-0.9,2) and (-1.4,1.7)..(-1.8,1.4)--++(-0.8,-0.6);
   \fill[ball color=gray](-1.8,1.4)circle(2pt);
 \end{tikzpicture}
