--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -190,14 +190,14 @@ y&=\frac{1}{2}gt^2
     \begin{minipage}{0.35\linewidth}
     	\centering
     	\begin{tabular}{ccc}
-    		\hline
+    		\toprule
     		$t$（秒）   &  $x$（米）   &  $y$（米）\\
-    		\hline
+    		\midrule
     		1 & 20 & 5\\
     		2 & 40 & 20\\
     		3 & 60 & 45\\
     		$\vdots$ & $\vdots$ & $\vdots$\\
-    		\hline
+    		\bottomrule
     	\end{tabular}
     \end{minipage}
     \hfil
