--- a/physics.tex
+++ b/physics.tex
@@ -28,7 +28,8 @@
 	%\include{1/A/01}
 	%\include{1/A/02}
 	%\include{1/A/03}
-	\include{1/A/04}
+	%\include{1/A/04}
+	\include{1/A/05}
 	
 \end{document}
 
