--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -1,4 +1,4 @@
-\chapter{万有引力定律}\lable{chapter-law-of-universal-gravitation}
+\chapter{万有引力定律}\label{chapter-law-of-universal-gravitation}
 
 这一章我们学习万有引力定律．这个定律是牛顿在大约三百年前综合当时天文学和力学成就的基础上发现的，这个定律不仅能够说明行星和卫星的运动规律，而且能解释重力的产生和其他一些物理现象，更重要的是这个定律揭示了自然界中一种基本的相互作用力，标志着人类在认识自然的历史上迈出了重要的一步．由于万有引力定律的发现与行星运动的研究有着密切的关系，所以我们先讲一讲行星的运动．
 
@@ -9,10 +9,11 @@
 	
 公元二世纪的希腊天文学家托勒密使地心说发展和完善起来，由于地心说能解释一些天文现象，又符合人们的日常经验，而且完全符合天主教的思想：地球是宇宙的中心，宇宙万物都是上帝创造的．所以，地心说得到教会的支持，延续了一千多年之久．但是，随着生产和航海事业的发展，天文观测资料日益丰富，人们发现托勒密地心说的理论与实际观测的资料并不完全一致，虽然对托勒密的地心说理论进行了修正，但仍不能解释某些天文现象．
 
-十六世纪，波兰天文学家哥白尼（1473—1543），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料、重新提出了日心说，哥白尼日心说的主要内容是：太阳是宇宙的中心，地球和其他行星都围绕太阳公转，并且自转着（图5.1）．哥白尼的学说正确地反映了行星运动的情况，可以简单明了地说明许多天文学问题，所以很快传播开了，但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（1548—1600）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
-\begin{figure}\centering
-\includegraphics[scale=1.2]{fig/5-1.pdf}
-\caption{简化了的哥白尼体系行星轨道}
+十六世纪，波兰天文学家哥白尼（1473—1543），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料、重新提出了日心说，哥白尼日心说的主要内容是：太阳是宇宙的中心，地球和其他行星都围绕太阳公转，并且自转着（图~\ref{fig_A_5-1}）．哥白尼的学说正确地反映了行星运动的情况，可以简单明了地说明许多天文学问题，所以很快传播开了，但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（1548—1600）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-1.pdf}
+	\caption{简化了的哥白尼体系行星轨道}\label{fig_A_5-1}
 \end{figure}
 
 丹麦天文学家第谷（1546—1601）认为，要认识行星运动的规律，需要积累高度精确的观测数据、他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（1571—1630）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
@@ -25,11 +26,11 @@
 2. 对每个行星来说，\textit{太阳和行星的联线在相等的时间内
 扫过相等的面积．}
 
-这叫做\textbf{开普勒第二定律}．如图5.2所示，行星在远日点的速率最小，在近日点的速率最大．
-\begin{figure}\centering
-\includegraphics[scale=1.2]{fig/5-2.pdf}
-\caption{太阳和行星的联线在相等的时间内扫过相等的面积
-}
+这叫做\textbf{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星在远日点的速率最小，在近日点的速率最大．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-2.pdf}
+	\caption{太阳和行星的联线在相等的时间内扫过相等的面积}\label{fig_A_5-2}
 \end{figure}
 
 
@@ -49,25 +50,27 @@
 	
 \subsection*{练习一}
 \begin{enumerate}
-	\item 下表给出了太阳系九大行星平均轨道半径和周期的数值．从表中任选三个行星验证开普勒第三定律，并计算恒
+	\item 表~\ref{tab_A_5-1} 给出了太阳系九大行星平均轨道半径和周期的数值．从表中任选三个行星验证开普勒第三定律，并计算恒
 	量$k=R^3/T^2$的值．
-\begin{center}
+\begin{table}[htbp]
+	\centering
+	\caption{}\label{tab_A_5-1}
 	\begin{tabular}{ccc}
-\hline
-行星    &  平均轨道半径（m）  & 周期（s）\\
-\hline
-水星      &  $5.79\times 10^{10}$    & $7.60\times 10^8$ \\ 
-金星    &  $1.08\times 10^{11}$    &  $1.94\times 10^7$ \\ 
-地球    &  $1.49\times 10^{11}$    &  $3.16\times 10^7$ \\ 
-火星    &  $2.28\times 10^{11}$    &  $5.94\times 10^7$ \\ 
-木星    &  $7.78\times 10^{11}$    &  $3.74\times 10^8$ \\ 
-土星    &  $1.43\times 10^{12}$    &  $9.30\times 10^8$ \\ 
-天王星    & $2.87\times 10^{12}$     &  $2.66\times 10^9$ \\ 
-海王星    &  $4.50\times 10^{12}$    &  $5.20\times 10^9$ \\ 
-冥王星    & $5.9\times 10^{12}$     &  $7.82\times 10^9$ \\ 
-\hline
+		\toprule
+		行星    &  平均轨道半径（m）  & 周期（s）\\
+		\midrule
+		水星      &  $5.79\times 10^{10}$    & $7.60\times 10^8$ \\ 
+		金星    &  $1.08\times 10^{11}$    &  $1.94\times 10^7$ \\ 
+		地球    &  $1.49\times 10^{11}$    &  $3.16\times 10^7$ \\ 
+		火星    &  $2.28\times 10^{11}$    &  $5.94\times 10^7$ \\ 
+		木星    &  $7.78\times 10^{11}$    &  $3.74\times 10^8$ \\ 
+		土星    &  $1.43\times 10^{12}$    &  $9.30\times 10^8$ \\ 
+		天王星    & $2.87\times 10^{12}$     &  $2.66\times 10^9$ \\ 
+		海王星    &  $4.50\times 10^{12}$    &  $5.20\times 10^9$ \\ 
+		冥王星    & $5.9\times 10^{12}$     &  $7.82\times 10^9$ \\ 
+		\bottomrule
 	\end{tabular}
-\end{center}
+\end{table}
 
 \item 有一个名叫谷神的小行星（质量$1.00\times 10^{21}$kg），它的轨道半径是地球的2.77倍，求出它绕太阳一周需要多少年．
 \end{enumerate}
@@ -120,12 +123,13 @@
 1798年，即在牛顿发现万有引力定律一百多年以后，英
 国的卡文迪许（1731—1810）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=1]{fig/5-3.PDF}
-\caption{卡文迪许实验示意图}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-3.pdf}
+	\caption{卡文迪许实验示意图}\label{fig_A_5-3}
 \end{figure}
 
-如图5.3所示，卡文迪许扭秤的主要部分是一个轻而坚固的T形架，倒挂在一根石英丝的下端．T形架水平杆的两端，各装一个质量是$m$的小球，
+如图~\ref{fig_A_5-3} 所示，卡文迪许扭秤的主要部分是一个轻而坚固的T形架，倒挂在一根石英丝的下端．T形架水平杆的两端，各装一个质量是$m$的小球，
 在T形架的竖直杆上装一块小平面镜$M$，可以将射
 来的光线反射到一根刻度尺上．实验时，把两个质量是$m'$的大球放在图中所示的
 位置，它们跟小球的距离相等，由于$m$受到$m'$的吸引，石英丝被扭转，石英丝扭转的角度可以从小镜$M$的反射光在刻度尺上移动的距离求出，根据扭转角度就可以算出$m$与$m'$的引力$F$．在实验过程中，为了排除气流对测量结果的影响，卡文迪许把扭秤装置放到密闭室内，在室外用望远镜进行观测．
@@ -143,16 +147,22 @@
 \item 两个质量都是4千克的铅球，相距0.1米远，它们之间的引力是多少？
 \item 用$M$表示地球的质量，$R$表示地球的半径，$T$表示月球到地球的距离．试证明，在地球引力作用下，
 \begin{enumerate}
-	\item 地面上物体的重力加速度$g=\dfrac{GM}{R^2}$；
-	\item 月球的加速度$a_{\text{月}}=\dfrac{GM}{r^2_{\text{月地}}}$；
-	\item 已知$r_{\text{月地}}=60R$，利用(a)(b)求$a_{\text{月}}/g$；
-	\item 已知$r_{\text{月地}}=3.8\times 10^8$米，月球绕地球运行的周期$T=27.3$天，计算月球绕地球运行的向心加速度$a_{\text{月}}$．
-	\item 已知重力加速度$g=9.8\msq$．用(d)中算出的$a_{\text{月}}$，求$a_{\text{月}}/g$．
+	\item \label{exe_A_5-2-4.1} 
+	 地面上物体的重力加速度$g=\dfrac{GM}{R^2}$；
+	\item \label{exe_A_5-2-4.2}
+	月球的加速度$a_{\text{月}}=\dfrac{GM}{r^2_{\text{月地}}}$；
+	\item \label{exe_A_5-2-4.3}
+	 已知$r_{\text{月地}}=60R$，利用(\ref{exe_A_5-2-4.1})(\ref{exe_A_5-2-4.2})求$a_{\text{月}}/g$；
+	\item \label{exe_A_5-2-4.4} 
+	已知$r_{\text{月地}}=3.8\times 10^8$米，月球绕地球运行的周期$T=27.3$天，计算月球绕地球运行的向心加速度$a_{\text{月}}$．
+	\item \label{exe_A_5-2-4.5} 
+	 已知重力加速度$g=9.8\Umsq$．用(\ref{exe_A_5-2-4.4})中算出的$a_{\text{月}}$，求$a_{\text{月}}/g$．
 	
-	比较(c)(e)中求出的$a_{\text{月}}/g$是否相等．如果相等，则表明地球
-	对月球的引力和对地面物体的引力都遵守平方反比定律，因
-	而是同一种性质的力，牛顿就是根据这一结果证明地球对月球的引力和地面上物体所受的重力是同一种力的．
+
 \end{enumerate}
+比较(\ref{exe_A_5-2-4.3})(\ref{exe_A_5-2-4.5})中求出的$a_{\text{月}}/g$是否相等．如果相等，则表明地球
+对月球的引力和对地面物体的引力都遵守平方反比定律，因
+而是同一种性质的力，牛顿就是根据这一结果证明地球对月球的引力和地面上物体所受的重力是同一种力的．
 \end{enumerate}
 
 
@@ -197,36 +207,11 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 地球对物体的引力，是万有引力的一种表现，如果用$M$表示地球的质量，用$R$表示地球的半径，用$m$表示物体的质量，根据万有引力定律，物体在地球表面上受到的地球引力是$F=G\frac{Mm}{R^2}$．物体的重量正是由这种引力产生的．
 
 但是物体的重量并不等于地球对物体的引力，这是因为地球在不停地自转，地球上的一切物体都随着地球自转而绕
-地轴做匀速圆周运动，这就需要向心力．这个向心力的方向是垂直指向地轴的，它的大小是$f=m\omega^2r$，式中的$r$是物体距地轴的距离，$\omega$是地球自转的角速度．这个向心力来自哪里？只能来自地球对物体的引力$F$，它是引力$F$的一个分力（图5.4）．\textit{引力$F$的另一个分力才是物体的重量$mg$}．
-\begin{figure}[htp]
-\centering
-\begin{tikzpicture}[>=latex, scale=1]
-\tkzDefPoints{0/0/O, 1.414/1.414/S}
-\draw[very thick](O) circle (2);
-\draw[dashed] (O) ellipse[x radius=2, y radius=.5];
-\draw[dashed] (0,1.414) ellipse[x radius=1.414, y radius=.3];
-\draw[dashdotted](0,-2)--(0,2);
-\draw(O)--(2,0);
-\draw(0,1.414)--(S)--(O);
-\tkzDefPoints{0/1.414/S_1}
-\tkzDefPointWith[linear, K=.4](S,S_1) \tkzGetPoint{f}
-\tkzDefPointWith[linear, K=.7](S,O) \tkzGetPoint{F}
-\tkzDefPointsBy[translation = from f to S](F){F'}
-\tkzDrawSegments[very thick, ->](S,f S,F S,F')
-\tkzDrawSegments(F,f F,F')
-
-\tkzLabelPoints[left](O)
-\tkzLabelPoints[above left](f)
-\tkzLabelPoint[below](F'){$mg$}
-\tkzLabelPoints[below](F)
-\draw[thick](2,0) arc [start angle =0, end angle =-180, x radius=2, y radius=.5];
-\draw[thick](S) arc [start angle =0, end angle =-180, x radius=1.414, y radius=.3];
-
-
-\end{tikzpicture}
-
-
-\caption{物体的重量是地球对物体引力的一个分力}
+地轴做匀速圆周运动，这就需要向心力．这个向心力的方向是垂直指向地轴的，它的大小是$f=m\omega^2r$，式中的$r$是物体距地轴的距离，$\omega$是地球自转的角速度．这个向心力来自哪里？只能来自地球对物体的引力$F$，它是引力$F$的一个分力（图~\ref{fig_A_5-4}）．\textit{引力$F$的另一个分力才是物体的重量$mg$}．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-4.pdf}
+	\caption{物体的重量是地球对物体引力的一个分力}\label{fig_A_5-4}
 \end{figure}
 
 明白了这一点，我们就容易懂得，为什么同一个物体在地球上不同纬度的地方的重量不同．
@@ -241,7 +226,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 同样，根据万有引力定律知道，在同一纬度，物体的重量和重力加速度$g$的数值，还随着离地面高度的增加而减小．
 
-不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的，重力加速度$g$的数值，在赤道上约为9.78$\ms$，在两极约为9.83$\ms$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
+不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的，重力加速度$g$的数值，在赤道上约为9.78$\Ums$，在两极约为9.83$\Ums$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
 
 此外，物体的重量还受到地质结构的影响，例如，在埋藏着密度较大的矿石的地区，物体的重量就要比周围地区稍大一些，也就是说，这一地区的重力加速度要比周围地区稍大一
 些．重力加速度的这种变化虽然很小，却是可以测出来的．根据这种重力异常现象，可以探测地下的矿床，这种探矿方法叫
@@ -250,11 +235,11 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \section{人造地球卫星}
 
 在第四章平抛运动里我们讨论过，在地面上高度是$h$的一点，以初速度$v$向水平方向抛射的物体，将沿着抛物线轨道
-落在地平面上，在讨论这种运动时，我们认为地球表面是一个理想的平面，重力加速度的方向和大小都是恒定的，在初速度比较小，物体的射程不大时，这样处理是正确的．由于地球实际上是一个球体，如果物体的初速度比较大、射程比较远，上述处理就不准确了，当抛出的物体沿曲线轨道下落时，地面也沿着球面向下弯曲，重力的方向也跟着改变了，牛顿在研究天空中卫星的运动和地面附近的落体运动的关系时，讨论过这个问题，图5.5是在他的著作里画的一幅原理图．图中表示出从高山上用不同的水平速度抛出的物体轨迹．物体的速度越大，落地点离山脚越远．当速度足够大时，物体将环绕地球运转，成为一个人造地球卫星．
-\begin{figure}\centering
-\includegraphics[scale=1.2]{fig/5-5.pdf}
-\caption{牛顿说明人造地球卫星原理的
-草图}
+落在地平面上，在讨论这种运动时，我们认为地球表面是一个理想的平面，重力加速度的方向和大小都是恒定的，在初速度比较小，物体的射程不大时，这样处理是正确的．由于地球实际上是一个球体，如果物体的初速度比较大、射程比较远，上述处理就不准确了，当抛出的物体沿曲线轨道下落时，地面也沿着球面向下弯曲，重力的方向也跟着改变了，牛顿在研究天空中卫星的运动和地面附近的落体运动的关系时，讨论过这个问题，图~\ref{fig_A_5-5} 是在他的著作里画的一幅原理图．图中表示出从高山上用不同的水平速度抛出的物体轨迹．物体的速度越大，落地点离山脚越远．当速度足够大时，物体将环绕地球运转，成为一个人造地球卫星．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-5.pdf}
+	\caption{牛顿说明人造地球卫星原理的草图}\label{fig_A_5-5}
 \end{figure}
 
 \subsection{宇宙速度}
@@ -269,11 +254,12 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \[v=\sqrt{gR_{\text{地}}}\]
 将$g=0.0098{\rm km}/{\rm s^2}$和$R_{\text{地}}=6400$千米代入上式，得到$v=7.9{\rm km}/{\rm s}$，这就是人造地球卫星在地面附近环绕地球做匀速圆周运动必须具有的速度，叫做\textbf{第一宇宙速度}，也叫\textbf{环绕速度}．
 
-如果人造地球卫星进入轨道的水平速度大于$7.9{\rm km}/{\rm s}$，而小于$11.2{\rm km}/{\rm s}$，它绕地球运动的轨迹就不是圆，而是椭圆（图5.6）．当物体的速度等于或大于$11.2{\rm km}/{\rm s}$的
+如果人造地球卫星进入轨道的水平速度大于$7.9{\rm km}/{\rm s}$，而小于$11.2{\rm km}/{\rm s}$，它绕地球运动的轨迹就不是圆，而是椭圆（图~\ref{fig_A_5-6}）．当物体的速度等于或大于$11.2{\rm km}/{\rm s}$的
 时候，物体就可以挣脱地球引力的束缚，成为绕太阳运动的人造行星，或飞到其他行星上去，所以$11.2{\rm km}/{\rm s}$这个速度叫做\textbf{第二字宙速度}，也叫\textbf{脱离速度}．
-\begin{figure}\centering
-\includegraphics[scale=1]{fig/5-6.pdf}
-\caption{三个宇宙速度}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-6.pdf}
+	\caption{三个宇宙速度}\label{fig_A_5-6}
 \end{figure}
 
 达到第二宇宙速度的物体还受着太阳引力的束缚，要想
@@ -289,13 +275,14 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 人造卫星进入轨道以后，有一个向下的加速度，因而发生失重现象，这个向下的加速度就是卫星绕地球做圆周运动的向心加速度，与升降机的情况不同的是，这个向下的加速度即向心加速度不是改变人造卫屋的速度的大小，而是不断改变人造卫星的速度的方向．
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=.5]{fig/5-7.png}
-\caption{处于完全失重状态的宇宙飞行员}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-7.jpg}
+	\caption{处于完全失重状态的宇宙飞行员}\label{fig_A_5-7}
 \end{figure}
 
 人造卫星做匀速圆周运动的向心加速度，等于卫星高度
-处的重力加速度，所以人造卫星以及其中的人和物体都处于完全失重状态，设想地球上重力消失时地面上会发生什么现象，在人造卫星中就发生什么现象，物体将飘在空中，宇宙飞行员站着睡觉和躺着睡觉一样舒服，走路务必小心，稍有不慎，就会“上不着天，下不着地”（图5.7）．食物要做成块状（或牙膏似的糊状），进嘴后再咬，以免碎屑“掉在空中”，飞进
+处的重力加速度，所以人造卫星以及其中的人和物体都处于完全失重状态，设想地球上重力消失时地面上会发生什么现象，在人造卫星中就发生什么现象，物体将飘在空中，宇宙飞行员站着睡觉和躺着睡觉一样舒服，走路务必小心，稍有不慎，就会“上不着天，下不着地”（图~\ref{fig_A_5-7}）．食物要做成块状（或牙膏似的糊状），进嘴后再咬，以免碎屑“掉在空中”，飞进
 处于完全失重状态的宇宙飞行员飞行员的眼睛、鼻子里，甚至吸入气管引起生命危险，失重对人的生理机能也有某些影响，但是经过二十几年的载人航天的实践，人们知道在失重状况下应该怎么办，已经取得了在失重环境中的自由，对失重的担心已成过去．
 
 \subsection{人造卫星的应用}
@@ -311,22 +298,12 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 在下列各题中，地球质量取$M=6.0\times 10^{24}{\rm kg}$．
 \begin{enumerate}
-	\item 图5.8 $A$、$B$、$C$是在地球大气层外圆形轨道上运行的三颗人造卫星，$A$、$B$的质量相同，它们的轨道速率是否也相同？$B$、$C$的质量不同，它们的轨道速率是否也不同？
+	\item 图~\ref{fig_A_5-8}  $A$、$B$、$C$是在地球大气层外圆形轨道上运行的三颗人造卫星，$A$、$B$的质量相同，它们的轨道速率是否也相同？$B$、$C$的质量不同，它们的轨道速率是否也不同？
 
-\begin{figure}[htp]
-\centering\begin{tikzpicture}[>=latex]
-\draw (0,0) circle (15pt);
-\node at (0,0){地球};
-\draw (0,1.5) arc (90:15:1.5);
-\draw (0,3) arc (90:15:3);
-\draw [<-](0,2.2) arc (90:70:2.2);
-\node at (0,2.2)[left]{卫星运行方向};
-\draw[fill=white] (60:1.5) circle (2pt) node[above]{$A$};
-\draw[fill=white] (75:3) circle (2pt) node[above]{$B$};
-\draw[fill=white] (40:3) circle (5pt);
-\node at  (40:3.2) [right]{$C$};
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/5-8.pdf}
+	\caption{}\label{fig_A_5-8}
 \end{figure}
 
 \item  假定一颗人造地球卫星正在离地面700千米高空的圆周轨道上运转，计算它的速率和周期．
@@ -346,8 +323,8 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \section*{习题}
 \begin{enumerate}
-	\item 在一次测定引力恒量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\msq$，地球的半径是6400千米．根据这些数据计算地球的质量．
-	\item 行星的质量为$M$，一个围绕它作匀速图周运动的卫星的轨道半径是$R$，周期是$T$．试用两种方法求出卫星轨道上的向心加速度．	
+	\item 在一次测定引力恒量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
+	\item 行星的质量为$M$，一个围绕它作匀速圆周运动的卫星的轨道半径是$R$，周期是$T$．试用两种方法求出卫星轨道上的向心加速度．	
 	\item 应用通讯卫星可以实现全地球的电视转播，这种卫星位于赤道的上方，相对于地面静止不动，犹如悬在空中一样，叫做同步卫星．同步卫星的周期是多大？计算它的高度和速率．
 	\item 试用万有引力定律证明：对于某个行星的所有卫星来说，$R^3/T^2$是一个恒量．其中$R$是卫星的轨道半径，$T$是卫星的运行周期．
 	\item 行星的密度是$\rho$，靠近行星表面的卫星运行周期是$T$．试证明$\rho T^2$是一个普遍适用的恒量，即它对任何行星都相同．
@@ -357,47 +334,8 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 
 \end{enumerate}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-		
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
+
+
+
 
