--- a/fig/A/5-2.tex
+++ b/fig/A/5-2.tex
@@ -10,18 +10,20 @@
 \begin{tikzpicture}[>=stealth,scale=1]
   \begin{scope}
   \path [clip](0,0)ellipse(2.6 and 2.4);
-  \fill[cyan!20](-2.239,1.22)--(-1,0)--(-2.292,-1.133)to[bend left]cycle;
-  \fill[cyan!20](1.617,1.904)--(-1,0)--(2.382,0.962)to[bend right]cycle;
+  \fill[cyan!40](-2.239,1.22)--(-1,0)--(-2.292,-1.133)to[bend left]cycle;
+  \fill[cyan!40](2.54,-0.5)--(-1.5,0)--(2.54,0.5)to[bend left]cycle;
   % \fill[cyan!20](1.434,-2.002)--(-1,0)--(0,-2.4)to[bend right]cycle;
   \fill[ball color=orange!50!red](-1,0)circle(0.2);
   \draw[red,decoration={bumps,segment length=1.5mm,amplitude=0.7mm},decorate] (-1,0) circle (0.3);
   \draw[line width =0.5mm](0,0)ellipse(2.6 and 2.4);
   \end{scope}
-  \foreach \x/\y/\lc [count =\i] in {-2.239/1.22/left,-2.292/-1.133/left,2.382/0.962/right,1.617/1.904/above}
+  \foreach \x/\y/\lc [count =\i] in {-2.239/1.22/left,-2.292/-1.133/left,2.54/-0.5/right,2.54/0.5/right}
   {
     \fill[ball color=blue!50] (\x,\y)circle(2pt)node[\lc]{$t_\i$};
   }
-  \node at (-2.0,0.0) {$A$};
-  \node at (0.8,0.8) {$B$};
+  \fill[ball color=blue!50] (-2.58,0)circle(2pt)node[left]{$a$};
+  \fill[ball color=blue!50] (2.59,0)circle(2pt)node[right]{$b$};
+  \node at (-2.0,0.0) {$S_A$};
+  \node at (2,0) {$S_B$};
 \end{tikzpicture}
 \end{document}
