--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -1,22 +1,28 @@
 \chapter{万有引力定律}\label{chapter-law-of-universal-gravitation}
 
-这一章我们学习万有引力定律．这个定律是牛顿在大约三百年前综合当时天文学和力学成就的基础上发现的，这个定律不仅能够说明行星和卫星的运动规律，而且能解释重力的产生和其他一些物理现象，更重要的是这个定律揭示了自然界中一种基本的相互作用力，标志着人类在认识自然的历史上迈出了重要的一步．由于万有引力定律的发现与行星运动的研究有着密切的关系，所以我们先讲一讲行星的运动．
+这一章我们学习万有引力定律．这个定律是牛顿在大约三百年前综合当时天文学和力学成就的基础上发现的．
+这个定律不仅能够说明行星和卫星的运动规律，而且能解释重力的产生和其他一些物理现象，更重要的是这个定律揭示了自然界中一种基本的相互作用力，标志着人类在认识自然的历史上迈出了重要的一步．由于万有引力定律的发现与行星运动的研究有着密切的关系，所以我们先讲一讲行星的运动．
 
 \section{行星的运动}
 在古代，人们从农牧业生产和航海的实际需要出发，就开始了对天体运动的观测和研究．我国在三千多年前的商代，根据对天体运动的观测制定了相当严密的历法．其他文明古国，如埃及、印度、巴比伦、希腊等，也在古代开始了对天体运动的研究．
 
 对于天体的运动，历史上有过地心说和日心说两种对立的看法，地心说认为地球是宇宙的中心，它是静止不动的，太阳、月球和其他行星都围绕地球运动．日心说则相反，认为地球和其他行星是围绕太阳旋转的．日心说不符合人们的日常经验，长期内很少有人相信．	
 	
-公元二世纪的希腊天文学家托勒密使地心说发展和完善起来，由于地心说能解释一些天文现象，又符合人们的日常经验，而且完全符合天主教的思想：地球是宇宙的中心，宇宙万物都是上帝创造的．所以，地心说得到教会的支持，延续了一千多年之久．但是，随着生产和航海事业的发展，天文观测资料日益丰富，人们发现托勒密地心说的理论与实际观测的资料并不完全一致，虽然对托勒密的地心说理论进行了修正，但仍不能解释某些天文现象．
+公元二世纪的希腊天文学家托勒密使地心说发展和完善起来．
+由于地心说能解释一些天文现象，又符合人们的日常经验，而且完全符合天主教的思想：地球是宇宙的中心，宇宙万物都是上帝创造的．所以，地心说得到教会的支持，延续了一千多年之久．但是，随着生产和航海事业的发展，天文观测资料日益丰富，人们发现托勒密地心说的理论与实际观测的资料并不完全一致．
+虽然对托勒密的地心说理论进行了修正，但仍不能解释某些天文现象．
 
-十六世纪，波兰天文学家哥白尼（1473—1543），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料、重新提出了日心说，哥白尼日心说的主要内容是：太阳是宇宙的中心，地球和其他行星都围绕太阳公转，并且自转着（图~\ref{fig_A_5-1}）．哥白尼的学说正确地反映了行星运动的情况，可以简单明了地说明许多天文学问题，所以很快传播开了，但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（1548—1600）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
+十六世纪，波兰天文学家哥白尼（1473$\sim$1543），经过近四十年的天文观测和研究，在古代日心说的启发下，并且利用托勒密及其后人积累的天文资料，重新提出了日心说．
+哥白尼日心说的主要内容是：太阳是宇宙的中心，地球和其他行星都围绕太阳公转，并且自转着（图~\ref{fig_A_5-1}）．哥白尼的学说正确地反映了行星运动的情况，可以简单明了地说明许多天文学问题，所以很快传播开了．
+但是日心说不符合宗教的主张，教会禁止传播哥白尼的学说，并残酷迫害接受日心说的人，用火烧死了坚持日心说的意大利人布鲁诺（1548$\sim$1600）．伽利略也因为宣传日心说受到了教会的审讯和囚禁．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-1.pdf}
 	\caption{简化了的哥白尼体系行星轨道}\label{fig_A_5-1}
 \end{figure}
 
-丹麦天文学家第谷（1546—1601）认为，要认识行星运动的规律，需要积累高度精确的观测数据、他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（1571—1630）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
+丹麦天文学家第谷（1546$\sim$1601）认为，要认识行星运动的规律，需要积累高度精确的观测数据．
+他连续二十年对行星的位置进行了精确的测量，积累了大量的数据．第谷逝世后，他的助手开普勒（1571$\sim$1630）仔细研究了第谷的观测资料，企图阐明行星运动的真实轨道，来发展和完善日心说．开普勒经过四年多的刻苦计算，先后否定了十九种设想，最后发现行星运行的真实轨道不是圆，而是椭圆，并于1609年发表了两条关于行星运动的定律：
 
 1. \textit{所有的行星分别在大小不同的椭圆轨道上围绕太阳
 运动，太阳是在这些椭圆的一个焦点上．}
@@ -26,7 +32,10 @@
 2. 对每个行星来说，\textit{太阳和行星的联线在相等的时间内
 扫过相等的面积．}
 
-这叫做\textbf{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星在远日点的速率最小，在近日点的速率最大．
+这叫做\textbf{开普勒第二定律}．如图~\ref{fig_A_5-2} 所示，行星沿着椭圆
+轨道运行，太阳位于椭圆的一个焦点上．如果时间间隔相等，
+即$t_2-t_1=t_4-t_3$，那么面积$S_A=S_B$．由此可见，行星在
+近日点$a$的速率最大，在远日点$b$的速率最小．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-2.pdf}
@@ -54,12 +63,12 @@
 	量$k=R^3/T^2$的值．
 \begin{table}[htbp]
 	\centering
-	\caption{}\label{tab_A_5-1}
+	\caption{太阳系九大行星的平均轨道半径和周期}\label{tab_A_5-1}
 	\begin{tabular}{ccc}
 		\toprule
 		行星    &  平均轨道半径（m）  & 周期（s）\\
 		\midrule
-		水星      &  $5.79\times 10^{10}$    & $7.60\times 10^8$ \\ 
+		水星      &  $5.79\times 10^{10}$    & $7.60\times 10^6$ \\ 
 		金星    &  $1.08\times 10^{11}$    &  $1.94\times 10^7$ \\ 
 		地球    &  $1.49\times 10^{11}$    &  $3.16\times 10^7$ \\ 
 		火星    &  $2.28\times 10^{11}$    &  $5.94\times 10^7$ \\ 
@@ -72,7 +81,7 @@
 	\end{tabular}
 \end{table}
 
-\item 有一个名叫谷神的小行星（质量$1.00\times 10^{21}$kg），它的轨道半径是地球的2.77倍，求出它绕太阳一周需要多少年．
+\item 有一个名叫谷神的小行星（质量$1.00\times 10^{21} \Ukg$），它的轨道半径是地球的2.77倍，求出它绕太阳一周需要多少年．
 \end{enumerate}
 
 \section{万有引力定律}
@@ -90,7 +99,7 @@
 利用开普勒第三定律，将$T^2=R^3/k$代入上式，得
 \[F=\frac{4\pi^2km}{R^2} \]
 
-这表明，太阳对行星的引力$F$，跟行星与太阳的距高$R$的平方成反比，即
+这表明，太阳对行星的引力$F$，跟行星与太阳的距离$R$的平方成反比，即
 \[F\propto \frac{1}{R^2} \]
 
 上面的推证不但表明太阳对行星的引力$F$与它们的距离$R$的平方成反比，还表明这个引力还跟行星的质量成正比，牛顿再进一步证明了，这个引力还跟太阳的质量$M$成正比，即引力跟太阳和行星的质量的乘积$Mm$成正比．把这个结果和引力与距离的平方成反比的关系结合起来，就可以得出：太阳和行星之间的引力，跟它们的质量的乘积成正比，跟它们的距离的平方成反比．即
@@ -101,9 +110,11 @@
 
 牛顿还研究了卫星绕行星运动的规律，得出结论：行星和卫星之间的引力跟太阳和行星之间的引力是同一种性质的力，遵守同样的规律，即行星和卫星之间的引力也是跟它们的质量乘积成正比，跟它们之间的距离平方成反比．
 
-牛顿还设想，使月球围绕地球运动的向心力和地球作用于地面上物体的重力，可能也是同一种性质的力，都是来自地球的引力，他经过计算，证明月球围绕地球运动的向心加速度是地面上重力加速度的1/3600，而月心和地心间的距离是地球半径的60倍，这说明地球的引力是跟距离的平方成反比的，从而证实了重力与天体之间的引力的确是同一性质的力．
+牛顿还设想，使月球围绕地球运动的向心力和地球作用于地面上物体的重力，可能也是同一种性质的力，都是来自地球的引力．
+他经过计算，证明月球围绕地球运动的向心加速度是地面上重力加速度的1/3600，而月心和地心间的距离是地球半径的60倍，这说明地球的引力是跟距离的平方成反比的，从而证实了重力与天体之间的引力的确是同一性质的力．
 
-上面的研究结果表明，太阳对行星的引力，行星对卫星的引力，以及地球对地面上物体的引力，都避循同样的规律，是同一种性质的力，于是牛顿把这种引力规律做了合理的推广，在1687年正式发表了\textbf{万有引力定律}：
+上面的研究结果表明，太阳对行星的引力，行星对卫星的引力，以及地球对地面上物体的引力，都遵循同样的规律，是同一种性质的力．
+于是牛顿把这种引力规律做了合理的推广，在1687年正式发表了\textbf{万有引力定律}：
 
 \textbf{任何两个物体都是相互吸引的，引力的大小跟两个物体的质量的乘积成正比，跟它们的距离的平方成反比．}
 
@@ -118,10 +129,11 @@
 \section{万有引力恒量的测定}
 万有引力定律公式中的比例常数$G$是适用于任何两个物体的普适恒量，叫做\textbf{万有引力恒量}．
 
-牛顿发现了万有引力定律，但是没有给出引力恒量$G$的数值．用实验测定$G$的大小是很不容易的，因为一般物体间的引力非常小，很难精确测定，所以在万有引力定律发现后的百余年间，一直没有测出引力恒量的准确数值，有一些科学家，为了测出物体间的引力，曾利用山峰、海岛等质量大的物体做过实验，但都没有取得令人满意的结果．
+牛顿发现了万有引力定律，但是没有给出引力恒量$G$的数值．用实验测定$G$的大小是很不容易的，因为一般物体间的引力非常小，很难精确测定，所以在万有引力定律发现后的百余年间，一直没有测出引力恒量的准确数值．
+有一些科学家，为了测出物体间的引力，曾利用山峰、海岛等质量大的物体做过实验，但都没有取得令人满意的结果．
 
 1798年，即在牛顿发现万有引力定律一百多年以后，英
-国的卡文迪许（1731—1810）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
+国的卡文迪许（1731$\sim$1810）巧妙地利用扭秤装置，第一次在实验室里比较准确地测出了万有引力恒量的数值．
 
 \begin{figure}[htbp]
 	\centering
@@ -134,10 +146,12 @@
 来的光线反射到一根刻度尺上．实验时，把两个质量是$m'$的大球放在图中所示的
 位置，它们跟小球的距离相等，由于$m$受到$m'$的吸引，石英丝被扭转，石英丝扭转的角度可以从小镜$M$的反射光在刻度尺上移动的距离求出，根据扭转角度就可以算出$m$与$m'$的引力$F$．在实验过程中，为了排除气流对测量结果的影响，卡文迪许把扭秤装置放到密闭室内，在室外用望远镜进行观测．
 
-卡文迪许经过多次实验，证明了牛顿的万有引力定律是正确的，并且测出了万有引力恒量，如果质量的单位用千克，距离的单位用米，力的单位用卡顿，卡文迪许测得的引力恒量是$6.754\times 10^{-11}{\rm N}\cdot {\rm m^2}/{\rm kg}^2$，同现代公认的$G$等于$6.67\times 10^{-11}{\rm N}\cdot {\rm m^2}/{\rm kg}^2$很接近．这个数值等于两个质量各为1千克的物体，相距1米时的相互吸引力．
+卡文迪许经过多次实验，证明了牛顿的万有引力定律是正确的，并且测出了万有引力恒量．
+如果质量的单位用千克，距离的单位用米，力的单位用牛顿，卡文迪许测得的引力恒量是$6.754\times 10^{-11} \UNmqkgq$，同现代公认的$G$等于$6.67\times 10^{-11}\UNmqkgq$很接近．这个数值等于两个质量各为1千克的物体，相距1米时的相互吸引力．
 
 万有引力恒量$G$的数值非常小，所以我们日常接触的那些质量不是很大的物体间的引力就非常小，我们察觉不到．例如两个质量各为100克的苹果，相距10厘米时，它们之间的
-引力大小还不到一粒砂子的重量的十万分之一，两个质量各为50千克的人相距1米时，他们之间的引力大约等于质量为百分之一毫克的物体的重量，这相当于几百粒尘埃的重量．这
+引力大小还不到一粒砂子的重量的十万分之一．
+两个质量各为50千克的人相距1米时，他们之间的引力大约等于质量为百分之一毫克的物体的重量，这相当于几百粒尘埃的重量．这
 样小的力我们凭感觉当然是察觉不出来的．但如果物体的质量很大，这个引力就很大，例如地球的质量是很大的，它对地面上物体的吸引力就很显著．太阳和地球之间的吸引力就更大，大约等于$3.56\times 10^{22}$牛，这样大的力如果作用在直径是9000千米的钢柱两端，可以把它拉断！正是由于太阳对地球有这样大的引力，才使得地球围绕太阳转动，而不离去．
 
 \subsection*{练习二}
@@ -162,7 +176,7 @@
 \end{enumerate}
 比较(\ref{exe_A_5-2-4.3})(\ref{exe_A_5-2-4.5})中求出的$a_{\text{月}}/g$是否相等．如果相等，则表明地球
 对月球的引力和对地面物体的引力都遵守平方反比定律，因
-而是同一种性质的力，牛顿就是根据这一结果证明地球对月球的引力和地面上物体所受的重力是同一种力的．
+而是同一种性质的力．牛顿就是根据这一结果证明地球对月球的引力和地面上物体所受的重力是同一种力的．
 \end{enumerate}
 
 
@@ -172,15 +186,16 @@
 \subsection{天体质量的计算} 
 
 应用万有引力定律可以计算天体的质量．卫星（或行星）围绕天体的运动可以
-近似地看作是匀速圆周运动．假设$M$是某个天体的质量，$m$是它的一个卫星（或行星）的质量，$r$是它们之间的距离，$a_n$是卫星的向心加速度，$T$是卫星绕天体运动的周期，那么这个天体对它的卫星的引力就是卫星围绕天体运动的向心力，所以
+近似地看作是匀速圆周运动．假设$M$是某个天体的质量，$m$是它的一个卫星（或行星）的质量，$r$是它们之间的距离，$a_n$是卫星的向心加速度，$T$是卫星绕天体运动的周期．
+那么这个天体对它的卫星的引力就是卫星围绕天体运动的向心力，所以
 \[G\frac{Mm}{r^2}=ma_n=\frac{4\pi^2 mr}{T^2} \]
 由上式可得
 \[M=\frac{4\pi^2r^3}{GT^2} \]
 
 测出$r$和$T$，就可以算出天体质量$M$的大小．例如，地球绕太阳公转轨道的半径是$1.49\times 10^{11}$米，公转的周期是$3.16\times 10^7$秒，所以太阳的质量为
 \[\begin{split}
-M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times (3.16\times 10^7)^2}{\rm kg}\\
-&=1.96\times 10^{30}{\rm kg}
+M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times (3.16\times 10^7)^2} \Ukg\\
+&=1.96\times 10^{30} \Ukg
 \end{split} \]
 
 
@@ -216,7 +231,8 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 明白了这一点，我们就容易懂得，为什么同一个物体在地球上不同纬度的地方的重量不同．
 
-在不同纬度的地方，物体做匀速圆周运动的角速度$\omega$相同，而圆周的半径$r$不同，这个半径在赤道处最大，在两极最小（等于零），由$f=m\omega^2 r$可以知道，同一个物体随着地球自转所需的向心力，在不同纬度的地方是不同的，它随着纬度的增加而减小：在赤道最大，在两极最小（等于零）．
+在不同纬度的地方，物体做匀速圆周运动的角速度$\omega$相同，而圆周的半径$r$不同，这个半径在赤道处最大，在两极最小（等于零）．
+由$f=m\omega^2 r$可以知道，同一个物体随着地球自转所需的向心力，在不同纬度的地方是不同的，它随着纬度的增加而减小：在赤道最大，在两极最小（等于零）．
 
 除此之外，还应该考虑到地球并不是一个理想的球体，而是一个不大规则的椭球，它的极半径是6357千米，赤道半径是6378千米，由于极半径比赤道半径小一些，根据引力与距离平方成反比的定律，物体所受的引力在赤道上最小，随着纬度的增加而增大，在两极达到最大．
 
@@ -226,7 +242,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 同样，根据万有引力定律知道，在同一纬度，物体的重量和重力加速度$g$的数值，还随着离地面高度的增加而减小．
 
-不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的，重力加速度$g$的数值，在赤道上约为9.78$\Ums$，在两极约为9.83$\Ums$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
+不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的，重力加速度$g$的数值，在赤道上约为$9.78 \Umsq$，在两极约为$9.83 \Umsq$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
 
 此外，物体的重量还受到地质结构的影响，例如，在埋藏着密度较大的矿石的地区，物体的重量就要比周围地区稍大一些，也就是说，这一地区的重力加速度要比周围地区稍大一
 些．重力加速度的这种变化虽然很小，却是可以测出来的．根据这种重力异常现象，可以探测地下的矿床，这种探矿方法叫
@@ -234,8 +250,12 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \section{人造地球卫星}
 
-在第四章平抛运动里我们讨论过，在地面上高度是$h$的一点，以初速度$v$向水平方向抛射的物体，将沿着抛物线轨道
-落在地平面上，在讨论这种运动时，我们认为地球表面是一个理想的平面，重力加速度的方向和大小都是恒定的，在初速度比较小，物体的射程不大时，这样处理是正确的．由于地球实际上是一个球体，如果物体的初速度比较大、射程比较远，上述处理就不准确了，当抛出的物体沿曲线轨道下落时，地面也沿着球面向下弯曲，重力的方向也跟着改变了，牛顿在研究天空中卫星的运动和地面附近的落体运动的关系时，讨论过这个问题，图~\ref{fig_A_5-5} 是在他的著作里画的一幅原理图．图中表示出从高山上用不同的水平速度抛出的物体轨迹．物体的速度越大，落地点离山脚越远．当速度足够大时，物体将环绕地球运转，成为一个人造地球卫星．
+在第\ref{chapter-curvilinear-motion}章平抛运动里我们讨论过，在地面上高度是$h$的一点，以初速度$v$向水平方向抛射的物体，将沿着抛物线轨道落在地平面上．
+在讨论这种运动时，我们认为地球表面是一个理想的平面，重力加速度的方向和大小都是恒定的．
+在初速度比较小，物体的射程不大时，这样处理是正确的．由于地球实际上是一个球体，如果物体的初速度比较大、射程比较远，上述处理就不准确了．
+当抛出的物体沿曲线轨道下落时，地面也沿着球面向下弯曲，重力的方向也跟着改变了．
+牛顿在研究天空中卫星的运动和地面附近的落体运动的关系时，讨论过这个问题．
+图~\ref{fig_A_5-5} 是在他的著作里画的一幅原理图．图中表示出从高山上用不同的水平速度抛出的物体轨迹．物体的速度越大，落地点离山脚越远．当速度足够大时，物体将环绕地球运转，成为一个人造地球卫星．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-5.pdf}
@@ -244,7 +264,10 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \subsection{宇宙速度}
 
-既然物体的速度足够大时，物体将环绕地球运转，成为一个人造地球卫星，那么物体的速度究竞要多大才行呢？计算人造地球卫星的速度，需要运用牛顿运动定律和万有引力定律．设质量是$m$的卫星在离地心$r$的高空环绕地球运转，它的速度是$v$．地球的质量是$M$，卫星做匀速圆周运动所需要的向心力是地球对它的引力，即
+既然物体的速度足够大时，物体将环绕地球运转，成为一个人造地球卫星，那么物体的速度究竟要多大才行呢？
+计算人造地球卫星的速度，需要运用牛顿运动定律和万有引力定律．
+设质量是$m$的卫星在离地心$r$的高空环绕地球运转，它的速度是$v$．地球的质量是$M$．
+卫星做匀速圆周运动所需要的向心力是地球对它的引力，即
 \[G\frac{Mm}{r^2}=m\frac{v^2}{r},\qquad v=\sqrt{\frac{GM}{r}} \]
 
 从上式可以看出，$r$越大，即卫星离地面越高，它环绕地球运动的速度$v$越小．对于靠近地面运转的卫星，可以认为$r$差不多等于地球的半径$R_{\text{地}}$．地球对卫星的引力差不多等于
@@ -252,10 +275,12 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \[mg=m\frac{v^2}{R_{\text{地}}} \]
 可以得到
 \[v=\sqrt{gR_{\text{地}}}\]
-将$g=0.0098{\rm km}/{\rm s^2}$和$R_{\text{地}}=6400$千米代入上式，得到$v=7.9{\rm km}/{\rm s}$，这就是人造地球卫星在地面附近环绕地球做匀速圆周运动必须具有的速度，叫做\textbf{第一宇宙速度}，也叫\textbf{环绕速度}．
+将$g=0.0098 \Ukmsq$和$R_{\text{地}}=6400$千米代入上式，得到$v=7.9\Ukms$．
+这就是人造地球卫星在地面附近环绕地球做匀速圆周运动必须具有的速度，叫做\textbf{第一宇宙速度}，也叫\textbf{环绕速度}．
 
-如果人造地球卫星进入轨道的水平速度大于$7.9{\rm km}/{\rm s}$，而小于$11.2{\rm km}/{\rm s}$，它绕地球运动的轨迹就不是圆，而是椭圆（图~\ref{fig_A_5-6}）．当物体的速度等于或大于$11.2{\rm km}/{\rm s}$的
-时候，物体就可以挣脱地球引力的束缚，成为绕太阳运动的人造行星，或飞到其他行星上去，所以$11.2{\rm km}/{\rm s}$这个速度叫做\textbf{第二字宙速度}，也叫\textbf{脱离速度}．
+如果人造地球卫星进入轨道的水平速度大于$7.9\Ukms$，而小于$11.2\Ukms$，它绕地球运动的轨迹就不是圆，而是椭圆（图~\ref{fig_A_5-6}）．当物体的速度等于或大于$11.2\Ukms$的
+时候，物体就可以挣脱地球引力的束缚，成为绕太阳运动的人造行星，或飞到其他行星上去．
+所以$11.2\Ukms$这个速度叫做\textbf{第二宇宙速度}，也叫\textbf{脱离速度}．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/5-6.pdf}
@@ -263,17 +288,22 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \end{figure}
 
 达到第二宇宙速度的物体还受着太阳引力的束缚，要想
-使物体挣脱太阳的束缚，飞到太阳系以外的宇宙空间去，必须使它的速度等于或大于$16.7{\rm km}/{\rm s}$，这个速度叫做 \textbf{第三字宙速度}，也叫\textbf{逃逸速度}．
+使物体挣脱太阳的束缚，飞到太阳系以外的宇宙空间去，必须使它的速度等于或大于$16.7\Ukms$，这个速度叫做\textbf{第三宇宙速度}，也叫\textbf{逃逸速度}．
 
 三个宇宙速度的值都很大，要得到这样大的速度需要利用多级火箭．
 
 \subsection{人造地球卫星中的超重和失重}
 
-在第三章里，我们已经学过超重和失重现象，现在我们再来谈谈人造卫星中的超重和失重．
+在第\ref{chapter-law-of-motion}章里，我们已经学过超重和失重现象，现在我们再来谈谈人造卫星中的超重和失重．
 
-卫星发射时在加速升高的过程中，以及卫星再进入大气层向下降落的减速过程中，都有一个向上的加速度，这时就发生超重现象，这时宇宙飞行员的身体象是被一个很大的压力压住，动弹不得，想举起手来，也很困难，超重对人的生理机能也有影响，宇宙飞行员选择合适的姿态，能够在100秒钟内承受等于体重九到十倍的超重，但是超重超出一定限度就有生命危险了．
+卫星发射时在加速升高的过程中，以及卫星再进入大气层向下降落的减速过程中，都有一个向上的加速度，这时就发生超重现象．
+这时宇宙飞行员的身体像是被一个很大的压力压住，动弹不得，想举起手来，也很困难．
+超重对人的生理机能也有影响．
+宇宙飞行员选择合适的姿态，能够在100秒钟内承受等于体重九到十倍的超重，但是超重超出一定限度就有生命危险了．
 
-人造卫星进入轨道以后，有一个向下的加速度，因而发生失重现象，这个向下的加速度就是卫星绕地球做圆周运动的向心加速度，与升降机的情况不同的是，这个向下的加速度即向心加速度不是改变人造卫屋的速度的大小，而是不断改变人造卫星的速度的方向．
+人造卫星进入轨道以后，有一个向下的加速度，因而发生失重现象．
+这个向下的加速度就是卫星绕地球做圆周运动的向心加速度．
+与升降机的情况不同的是，这个向下的加速度即向心加速度不是改变人造卫星的速度的大小，而是不断改变人造卫星的速度的方向．
 
 \begin{figure}[htbp]
 	\centering
@@ -282,23 +312,29 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \end{figure}
 
 人造卫星做匀速圆周运动的向心加速度，等于卫星高度
-处的重力加速度，所以人造卫星以及其中的人和物体都处于完全失重状态，设想地球上重力消失时地面上会发生什么现象，在人造卫星中就发生什么现象，物体将飘在空中，宇宙飞行员站着睡觉和躺着睡觉一样舒服，走路务必小心，稍有不慎，就会“上不着天，下不着地”（图~\ref{fig_A_5-7}）．食物要做成块状（或牙膏似的糊状），进嘴后再咬，以免碎屑“掉在空中”，飞进
-处于完全失重状态的宇宙飞行员飞行员的眼睛、鼻子里，甚至吸入气管引起生命危险，失重对人的生理机能也有某些影响，但是经过二十几年的载人航天的实践，人们知道在失重状况下应该怎么办，已经取得了在失重环境中的自由，对失重的担心已成过去．
+处的重力加速度，所以人造卫星以及其中的人和物体都处于完全失重状态．
+设想地球上重力消失时地面上会发生什么现象，在人造卫星中就发生什么现象．
+物体将飘在空中，宇宙飞行员站着睡觉和躺着睡觉一样舒服．
+走路务必小心，稍有不慎，就会“上不着天，下不着地”（图~\ref{fig_A_5-7}）．
+食物要做成块状（或牙膏似的糊状），进嘴后再咬，以免碎屑“掉在空中”，飞进飞行员的眼睛、鼻子里，甚至吸入气管引起生命危险．
+失重对人的生理机能也有某些影响，但是经过二十几年的载人航天的实践，人们知道在失重状况下应该怎么办，已经取得了在失重环境中的自由，对失重的担心已成过去．
 
 \subsection{人造卫星的应用}
 
-人造卫星的应用很广泛，可以用于无线电通讯、电视转播、军事侦察、资源调查、气象预报、科学研究等方面，应用人造卫星有什么好处呢？从下面列举的几个例子可以了解一些．
+人造卫星的应用很广泛，可以用于无线电通讯、电视转播、军事侦察、资源调查、气象预报、科学研究等方面．
+应用人造卫星有什么好处呢？从下面列举的几个例子可以了解一些．
 
 搞建设，首先必须把资源的情况摸清楚．我们搞资源调查，比如说，调查森林资源，若基本上靠人工，速度慢，效率低，二十年还查不完一遍，查到后头，前面情况早变了．资源卫星一天绕地球十几转，用来普查森林，很快就可以查完，而且可
-以监视各种变化，及时设法处理．在卫星上安装勘察矿产资源的遥感设备，不仅可以勘察地球表面，而且可以勘察地下的铁、钴、镍、铜、石油等多种矿藏．电视教育是多快好省地培养人才的一种手段，但是按过去的办法靠发射台和中继站传播，每隔50千米就要建设一个中继站，消耗大量的人力物力．如果用通讯卫星，象我们这样幅员广阔的国家，只要一颗卫星，全国的边远地区也都可以收看．目前我国正在积极准备发射通讯卫星，用火箭把几吨的货物送到绕地球运行的空间站上去，可以在宇宙空间建设现代化的实验室，装备复杂、精密的仪器设备，进行失重、超高真空等条件下的物理、化学、生物、医学实验．
+以监视各种变化，及时设法处理．在卫星上安装勘察矿产资源的遥感设备，不仅可以勘察地球表面，而且可以勘察地下的铁、钴、镍、铜、石油等多种矿藏．电视教育是多快好省地培养人才的一种手段，但是按过去的办法靠发射台和中继站传播，每隔50千米就要建设一个中继站，消耗大量的人力物力．如果用通讯卫星，像我们这样幅员广阔的国家，只要一颗卫星，全国的边远地区也都可以收看．目前我国正在积极准备发射通讯卫星．
+用火箭把几吨的货物送到绕地球运行的空间站上去，可以在宇宙空间建设现代化的实验室，装备复杂、精密的仪器设备，进行失重、超高真空等条件下的物理、化学、生物、医学实验．
 
 航天时代正在到来，在这个新时代里，不畏险阻，勇攀科学高峰的青年们是可以大有作为的．	
 	
 \subsection*{练习四}
 
-在下列各题中，地球质量取$M=6.0\times 10^{24}{\rm kg}$．
+在下列各题中，地球质量取$M=6.0\times 10^{24} \Ukg$．
 \begin{enumerate}
-	\item 图~\ref{fig_A_5-8}  $A$、$B$、$C$是在地球大气层外圆形轨道上运行的三颗人造卫星，$A$、$B$的质量相同，它们的轨道速率是否也相同？$B$、$C$的质量不同，它们的轨道速率是否也不同？
+	\item 图~\ref{fig_A_5-8}  的$A$、$B$、$C$是在地球大气层外圆形轨道上运行的三颗人造卫星．$A$、$B$的质量相同，它们的轨道速率是否也相同？$B$、$C$的质量不同，它们的轨道速率是否也不同？
 
 \begin{figure}[htbp]
 	\centering
@@ -325,7 +361,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 \begin{enumerate}
 	\item 在一次测定引力恒量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
 	\item 行星的质量为$M$，一个围绕它作匀速圆周运动的卫星的轨道半径是$R$，周期是$T$．试用两种方法求出卫星轨道上的向心加速度．	
-	\item 应用通讯卫星可以实现全地球的电视转播，这种卫星位于赤道的上方，相对于地面静止不动，犹如悬在空中一样，叫做同步卫星．同步卫星的周期是多大？计算它的高度和速率．
+	\item 应用通讯卫星可以实现全地球的电视转播．这种卫星位于赤道的上方，相对于地面静止不动，犹如悬在空中一样，叫做同步卫星．同步卫星的周期是多大？计算它的高度和速率．
 	\item 试用万有引力定律证明：对于某个行星的所有卫星来说，$R^3/T^2$是一个恒量．其中$R$是卫星的轨道半径，$T$是卫星的运行周期．
 	\item 行星的密度是$\rho$，靠近行星表面的卫星运行周期是$T$．试证明$\rho T^2$是一个普遍适用的恒量，即它对任何行星都相同．
 	\item 一艘宇宙飞船飞近某一个不知名的行星，并进入靠近该行星表面的圆形轨道，宇航员着手进行预定的考察工作．宇航员能不能仅仅用一只表通过测定时间来测定该行星的密度？说明理由．
