--- a/fig/A/6-24.tex
+++ b/fig/A/6-24.tex
@@ -16,7 +16,7 @@
   \draw (1,0)--(1,-1.5);
   \draw[->, thick] (1,0)--(1,-1.3) node [right]{$F$};
   \draw [fill=gray](1-.2,-1.5-.4) rectangle (1+.2, -1.5);
-  \draw[<->] (-2,-1.0) -- node[above]{$l$} (1,-1.0);
+  \draw[<->] (-2,-1.0) -- node[above]{$\ell$} (1,-1.0);
   \draw [thick,->] (-.5, -.1)--(-.5,-.5)node[right]{$G$};
   \node at (-2.1,1.732) [left]{$A$};
   \node at (-2.1,0) [left]{$B$};
