--- a/fig/A/6-28.tex
+++ b/fig/A/6-28.tex
@@ -21,7 +21,7 @@
   \draw[fill=lightgray](2.6,0.3) circle(0.2);
   \draw[thin](1.2,0.5)--(1.2,-0.4)(2.6,1.0)--(2.6,-0.4);
   \draw[thin,<->](1.2,-0.3)--(2.6,-0.3)node[midway,rotate=20,above]{$L$};
-  \draw[thin,|<->](1.95,0.9)--(2.6,0.9)node[midway,rotate=20,above]{$l$};
+  \draw[thin,|<->](1.95,0.9)--(2.6,0.9)node[midway,rotate=20,above]{$\ell$};
   \draw[thin,<->|](2.05,0)--(2.05,0.8)node[midway,rotate=20,right]{$h$};
   \draw[thick,-latex](1.95,0.8)--++(250:0.5)node[right]{$G$};
   \fill(1.2,0.5)circle(1pt);
