--- a/physics.tex
+++ b/physics.tex
@@ -29,7 +29,8 @@
 	%\include{1/A/02}
 	%\include{1/A/03}
 	%\include{1/A/04}
-	\include{1/A/05}
+	%\include{1/A/05}
+	\include{1/A/06}
 	
 \end{document}
 
