--- a/physics.tex
+++ b/physics.tex
@@ -30,7 +30,8 @@
 	%\include{1/A/03}
 	%\include{1/A/04}
 	%\include{1/A/05}
-	\include{1/A/06}
+	%\include{1/A/06}
+	\include{1/A/07}
 	
 \end{document}
 
