--- a/1/A/07.tex
+++ b/1/A/07.tex
@@ -1,73 +1,29 @@
+\chapter{机械能}\label{chapter-mechanical-energy}
 
-	
-\chapter{机械能}
 \section{功}
-
 功这个概念是十九世纪当人们广泛使用各种机械时在力学中出现的．从人的劳动到各种机械的工作，人们发现它们有一个共同的特点：有力作用在物体上，而且物体在力的作用下发生一段位移．引入功的概念，就是为了反映这个共同的特点．一个物体受到力的作用，如果在力的方向上发生一段位移，物理学中就说这个力对物体做了功．人推车前进，车在人的推力下发生一段位移，推力对车做了功．起重机提起货物，货物在起重机钢绳的拉力下发生一段位移，拉力对货物做了功．机车牵引列车前进，列车在机车的牵引力下发生位移，牵引力对列车做了功．
 
 如果有力作用在物体上，而物体没有在这个力的方向发生位移，这个力对物体就没有做功．一个人举着一个物体不动，他虽然对这个物体作用一个向上的支持力，但这个支持力对物体并没有功．人用力推一个笨重的物体而没有推动，他虽然对这个物体作用一个向前的推力，这个推力也没有对物体做功．人在水平面上推车前进，重力并没有对车做功，因为重力的方向是竖直向下的，车虽然发生了位移，但在重力的方向上却没有位移．功这个概念和一般所说的“做工”或“工作”
 含意不同，在物理学中，\textit{力和物体在力的方向上发生的位移，是做功的两个不可缺少的因素}．
 
-\subsection{功的公式} 
+\subsection{功的公式}
 
-功的大小是由力的大小和物体在力的方向上发生的位移的大小确定的．力越大，位移越大，功就越大．我们在初中学过，如果力的方向跟物体运动的方向一致（图7.1），功就等于力的大小和位移的大小的乘积，用$F$表示力的大小，用$s$表示位移的大小，用$W$表示力所做的功，那么，
+功的大小是由力的大小和物体在力的方向上发生的位移的大小确定的．力越大，位移越大，功就越大．我们在初中学过，如果力的方向跟物体运动的方向一致（图~\ref{fig_A_7-1}），功就等于力的大小和位移的大小的乘积，用$F$表示力的大小，用$s$表示位移的大小，用$W$表示力所做的功，那么，
 \[W=Fs\]
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick, scale=.8]
-
-\fill [pattern = north east lines] (0,-.25) rectangle (9,0);
-\draw (0,0)--(9,0);
-
-
-\draw [fill=gray!20] (1,0) rectangle (3,1.5);
-\draw [dashed, fill=gray!20] (6,0) rectangle (8,1.5);
-
-
-\draw [->] (2,1.5/2)--(4,1.5/2) node [above]{$F$};
-\draw [dashed, ->] (7,1.5/2)--(9,1.5/2) node [above]{$F$};
-\draw [<->](3,-0.75)--node [fill=white]{$s$}(8,-0.75);
-
-\draw (3,-.25)--(3,-1.25);
-\draw (8,-.25)--(8,-1.25);
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-1.pdf}
+    \caption{}\label{fig_A_7-1}
 \end{figure}
 
-但是，物体运动的方向不一定总跟力的方向一致，当力的方向跟运动方向成某一角度$\alpha$时（图7.2），怎样来计算这个力所做的功呢？我们可以把力$F$分解成两个分力：跟位移方向一致的分力$F_1$，跟位移方向垂直的分力$F_2$．设物体在力$F$作用下发生的位移的大小是$s$，力$F_1$所做的功等于$F_1s$，力$F_2$的方向跟位移的方向垂直，在$F_2$的方向上没有发生位移，力$F_2$所做的功等于零．因此，力$F$对物体所做的功就等于$F_1s$，而$F_1=F\cos\alpha$，所以
+但是，物体运动的方向不一定总跟力的方向一致，当力的方向跟运动方向成某一角度$\alpha$时（图~\ref{fig_A_7-2}），怎样来计算这个力所做的功呢？我们可以把力$F$分解成两个分力：跟位移方向一致的分力$F_1$，跟位移方向垂直的分力$F_2$．设物体在力$F$作用下发生的位移的大小是$s$，力$F_1$所做的功等于$F_1s$，力$F_2$的方向跟位移的方向垂直，在$F_2$的方向上没有发生位移，力$F_2$所做的功等于零．因此，力$F$对物体所做的功就等于$F_1s$，而$F_1=F\cos\alpha$，所以
 \[W=Fs\cos\alpha \]
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick, scale=.8]
-
-\fill [pattern = north east lines] (0,-.25) rectangle (9,0);
-\draw (0,0)--(9,0);
-
-
-\draw [fill=gray!20] (1,0) rectangle (3,1.5);
-\draw [dashed, fill=gray!20] (6,0) rectangle (8,1.5);
-
-
-\draw [->] (2,1.5/2)--(4,1.5/2) node [below]{$F_1$};
-\draw [->] (2,1.5/2)--(2,1.5/2+1.5) node [left]{$F_2$};
-\draw [->] (2,1.5/2)--(4,1.5/2+1.5) node [right]{$F$};
-\draw [dashed] (2,1.5/2+1.5)--(4,1.5/2+1.5)--(4,1.5/2);
-
-
-
-\draw [->,dashed] (7,1.5/2)--(9,1.5/2) ;
-\draw [->,dashed] (7,1.5/2)--(7,1.5/2+1.5) ;
-\draw [->,dashed] (7,1.5/2)--(9,1.5/2+1.5) node [right]{$F$};
-\draw [dashed] (7,1.5/2+1.5)--(9,1.5/2+1.5)--(9,1.5/2);
-
-\draw [<->](2,-0.75)--node [fill=white]{$s$}(7,-0.75);
-
-\draw (2,-.25)--(2,-1.25);
-\draw (7,-.25)--(7,-1.25);
-\draw (2+0.5,1.5/2) arc(0:36:.5) node[right]{$\alpha$};
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-2.pdf}
+    \caption{}\label{fig_A_7-2}
 \end{figure}
 
 这就是说，\textit{力对物体所做的功，等于力的大小、位移的大小、力和位移的夹角的余弦三者的乘积}．
@@ -80,72 +36,19 @@
 \subsection{正功和负功} 
 
 现在我们讨论一下功的公式$W=Fs\cos\theta$．如果力的方向与位移的方向之间的夹角小于90$^\circ$，即$\alpha<\pi/2$，那么
-$\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$\alpha<\pi/2$，人的推力对车做正功，物体在重力作用下下落的时候，$\alpha=0$，重力对物体做正功（图7.3）．
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex]
-    \fill [pattern=north east lines](-1.5,-.25) rectangle (1.5,0);
-    \draw (-1.5,0)--(1.5,0);
-    \draw (-1,.25) rectangle (1,1);
-    \draw [fill=white] (-.5, .25) circle (.25);
-    \draw [fill=white] (.5, .25) circle (.25);
-\draw[dashed] (0,1.25/2)--(1,1.25/2);
-\draw [->] (1,1.25/2)--(2,1.25/2)node[right]{$s$};
-\draw [dashed] (-1,1)--(0,1.25/2)--(.5, 1.25/2-0.375/2);
-\draw [->] (-2, 1+.375)node[left]{$F$}-- (-1,1);
-
-\draw (0.4,1.25/2) arc (0:-20:.4)node[right]{$\alpha$};
-
-\end{tikzpicture}\qquad 
-\begin{tikzpicture}[>=latex]
-    \fill [pattern=north east lines](-.5,-.25) rectangle (.5,0);
-    \draw (-.5,0)--(.5,0);
-    \draw [fill=gray](0,3) circle (.2);
-    \draw [->] (0,3)--(0,2)node[below]{$G$};
-    \draw [->] (-.75,3)--(-.75,2.3)node[below]{$s$};
-
-\end{tikzpicture}
-\caption{动力对物体做正功}
+$\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$\alpha<\pi/2$，人的推力对车做正功，物体在重力作用下下落的时候，$\alpha=0$，重力对物体做正功（图~\ref{fig_A_7-3}）．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-3.pdf}
+    \caption{动力对物体做正功}\label{fig_A_7-3}
 \end{figure}
 
 如果力的方向与位移的方向之间的夹角大于90$^\circ$而小于或等于180$^\circ$，即$\pi/2<\alpha\le \pi$，那么$\cos\alpha <0$，$W<0$，即力对物体做负功．人用力阻碍车前进的时候，$\pi/2<\alpha\le \pi$，人的推力对车做负功．
-前进的车在摩擦力作用下逐渐停下来，$\alpha=\pi$，$\cos\alpha=-1$，摩擦力对车做负功．上抛物体在向上运动的时候，$\alpha=\pi$，$\cos\alpha=-1$，重力对物体做负功（图7.4）．
-	\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex]
-        \fill [pattern=north east lines](-1.5,-.25) rectangle (1.5,0);
-        \draw (-1.5,0)--(1.5,0);
-        \draw (-1,.25) rectangle (1,1);
-        \draw [fill=white] (-.5, .25) circle (.25);
-        \draw [fill=white] (.5, .25) circle (.25);
-        \draw[dashed] (0,1.25/2)--(1,1.25/2);
-        \draw [->] (1,1.25/2)--(2,1.25/2)node[right]{$s$};
-        \draw [dashed] (1,1)--(0,1.25/2)--(-.5, 1.25/2-0.375/2);
-        \draw [->] (2, 1+.375)node[right]{$F$}-- (1,1);
-        \draw (0.2,1.25/2) arc (0:-160:.2)node[right]{$\alpha$};
-
-    \end{tikzpicture}\qquad 
-    \begin{tikzpicture}[>=latex]
-        \fill [pattern=north east lines](-1.5,-.25) rectangle (1.5,0);
-        \draw (-1.5,0)--(1.5,0);
-        \draw (-1,.25) rectangle (1,1);
-        \draw [fill=white] (-.5, .25) circle (.25);
-        \draw [fill=white] (.5, .25) circle (.25);
-        \draw [dashed] (-1,1.25/2)--(1,1.25/2);
-        \draw [->] (-1,1.25/2)--(-2,1.25/2)node[left]{$F$} ;
-        \draw [->] (1,1.25/2)--(2,1.25/2)node[right]{$s$};
-        \draw [<->](0.35,1.25/2) arc (0:180:.35);
-\node at (0,1.2){$\pi$};
-    \end{tikzpicture}\qquad 
-    \begin{tikzpicture}[>=latex]
-        \fill [pattern=north east lines](-.5,-.25) rectangle (.5,0);
-        \draw (-.5,0)--(.5,0);
-    
-        \draw [fill=gray](0,3) circle (.2);
-        \draw [->] (0,3)--(0,2)node[below]{$G$};
-        \draw [->] (0,3.2)--(0,3.7)node[above]{$s$};
-\draw[<->] (0,2.6) arc (-90:90:0.4) ;
-\node  at (0.5, 3)[right]{$\pi$};
-    \end{tikzpicture}
-\caption{阻力对物体做负功}
+前进的车在摩擦力作用下逐渐停下来，$\alpha=\pi$，$\cos\alpha=-1$，摩擦力对车做负功．上抛物体在向上运动的时候，$\alpha=\pi$，$\cos\alpha=-1$，重力对物体做负功（图~\ref{fig_A_7-4}）．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-4.pdf}
+    \caption{阻力对物体做负功}\label{fig_A_7-4}
 \end{figure}
 
 一个力对物体做了负功，往往也说成物体克服这个力做
@@ -159,36 +62,22 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
     \item 在厘米·克·秒制中，功的单位叫做尔格（erg）．1尔格是1达因（dyn）的力使物体在力的方向上发生1厘米的位移所做的功，试证明：
     \[1{\rm J}=19^7{\rm erg} \]
     \item 在水平道路上匀速前进的汽车受到哪些力的作用？其中哪些力做功，哪些力没有做功？哪个力做正功，哪个力做负功？
-    \item 在图7.5甲中，力$F$是350牛，在这个力的作用下，物体加速向右移动了1.5米，力$F$所做的功是多少？在图7.5乙中，力$F$是250牛，在这个力的作用下，物体减速向右移动了2.5米，力$F$所做的功是多少？
+    \item 在图~\ref{fig_A_7-5a} 中，力$F$是350牛，在这个力的作用下，物体加速向右移动了1.5米，力$F$所做的功是多少？在图~\ref{fig_A_7-5b} 中，力$F$是250牛，在这个力的作用下，物体减速向右移动了2.5米，力$F$所做的功是多少？
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick, scale=1]
-
-\fill [pattern = north east lines] (0,-.25) rectangle (4,0);
-\draw (0,0)--(4,0);
-
-
-\draw [fill=gray!20] (1,0) rectangle (3,1.5);
-\draw [dashed] (2,1.5/2)--(4,1.5/2);
-\draw [->] (2,1.5/2)--(4,2/1.732+1.5/2)node [right]{$F$};
-\draw [->] (1.5, 2)--(2.5,2) node [right]{$v$};
-\draw (2+0.5,1.5/2) arc(0:30:.5) node[right]{$30^{\circ}$};
-\node at (2,-.75){甲};
-\end{tikzpicture}\qquad 
-\begin{tikzpicture}[>=stealth, thick, scale=1]
-
-\fill [pattern = north east lines] (0,-.25) rectangle (4,0);
-\draw (0,0)--(4,0);
-
-
-\draw [fill=gray!20] (1,0) rectangle (3,1.5);
-\draw [dashed] (2,1.5/2)--(4,1.5/2);
-\draw [->] (2,1.5/2)--(2-1,1.5/2+1.732)node [right]{$F$};
-\draw [->] (1.5, 2)--(2.5,2) node [right]{$v$};
-\draw (2+0.5,1.5/2) arc(0:120:.5) node[right]{$120^{\circ}$};
-\node at (2,-.75){乙};
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure} {0.4\linewidth} 
+        \centering
+        \includegraphics{fig/A/7-5a.pdf} 
+        \caption{}\label{fig_A_7-5a} 
+    \end{subfigure}
+    \hfil
+    \begin{subfigure} {0.4\linewidth} 
+        \centering
+        \includegraphics{fig/A/7-5b.pdf} 
+        \caption{}\label{fig_A_7-5b} 
+    \end{subfigure}
+    \caption{}\label{fig_A_7-5}
 \end{figure}
 
     \item 用起重机把重物从地面匀速地提到5米高的地方，重物的重量是$2\times 10^4$牛，钢绳的拉力做多少功？重力做多少功？重物克服重力所做的功是多少？
@@ -225,7 +114,7 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 卡车在水平方向受到两个力：牵引力$F$和阻力$f$．设输出功率为$P$，行驶速度为$v$，那么$P=Fv$．卡车刚开动时，行驶速度较小，牵引力$F$较大．因行驶速度$v$较小，阻力$f$也较小，这时$F>f$，卡车加速行驶．随着$v$的增大，$F$减小，$f$增大．当$F=f$时，卡车以最大速度$v_m$匀速行驶．这时输出功率$P=Fv_m=fv_m$．所以
 \[v_m=\frac{P}{f}\]
 代入数值得到
-\[v_m=\frac{90\times 0.735\times 10^3}{3.0\times 10^3}{\ms}=22\ms \]
+\[v_m=\frac{90\times 0.735\times 10^3}{3.0\times 10^3}{\Ums}=22\Ums \]
 
 当发动机的输出功率小于额定功率时，卡车匀速行驶的速度小于最大速度．飞机、轮船、汽车等交通工具匀速行驶的最大速度受额定功率的限制，所以要提高最大速度，必须提高发动机的额定功率．这就是高速火车和汽车需要大功率发动机的原因．
 \end{solution}
@@ -233,8 +122,8 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 \subsection*{练习二}
 \begin{enumerate}
     \item 一台抽水机每秒钟能把30千克的水抽到10米高的水塔上去．抽水机的输出功率是多大？半小时能做多少功？
-    \item 汽车牵引着高射炮以36$\kmh$的速度匀速前进，汽车发动机的输出功率是80马力，求汽辛和高射炮在前进中所受的阻力．
-    \item 一台柴油机装在汽车上，汽车匀速行驶的速度可达90$\kmh$；装在汽船上，汽船匀速行驶的速度可达20$\kmh$，汽车和汽船哪个受的阻力大？二者的阻力之比是多少？
+    \item 汽车牵引着高射炮以36$\Ukmh$的速度匀速前进，汽车发动机的输出功率是80马力，求汽辛和高射炮在前进中所受的阻力．
+    \item 一台柴油机装在汽车上，汽车匀速行驶的速度可达90$\Ukmh$；装在汽船上，汽船匀速行驶的速度可达20$\Ukmh$，汽车和汽船哪个受的阻力大？二者的阻力之比是多少？
     \item 一台电动机的额定功率是10千瓦，用这台电动机匀速提升$2.7\times 10^3$千克的货物，最大速度是多大？不计空气阻力．
 \end{enumerate}
 
@@ -256,24 +145,13 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 	
 前一节讲过，我们要通过做功来定量地确定能量．设一个原来静止的物体在外力作用下发生一段位移，这时外力对物体做了功．从牛顿第二定律知道，物体在外力的作用下产生加速度，因而在发生这段位移的同时，得到一定的速度，也同时获得了一定的动能．外力对物体做多少功，物体的动能就应该增加多少．我们根据这个就可以定量地确定物体的动能．
 
-\begin{figure}[htp]
-\centering
-\begin{tikzpicture}[>=stealth, thick]
-\draw (0,0)--(8,0);
-\draw (1,0) rectangle (2,1);  \draw (6,0) rectangle (7,1);
-\node at (1.5,.5){$m$}; \node at (6.5,.5){$m$};
-\draw[->, very thick](0,.5)--node [above]{$F$}(1,.5);  \draw[->, very thick](5,.5)--node [above]{$F$}(6,.5);
-\draw[->, very thick](2.5,.6)--node [above]{$a$}(3.5,.6);
-\draw[->, very thick](6,1.5)--node [above]{$v$}(7,1.5);
-\draw (2,0)--(2,-.6);
-\draw (7,0)--(7,-.6);
-\draw[<->, very thick](2,-.3)--node [fill=white]{$s$}(7,-.3);
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-6.pdf}
+    \caption{}\label{fig_A_7-6}
 \end{figure}
 
-设一个原来静止的物体，质量为$m$，由于物体是静止的，没有运动，也就是没有动能，或者说动能为零，在恒定的外力$F$作用下，物体发生一段位移$s$，得到速度$v$（图7.6），获得一定的动能．设外力方向与运动方向相同，外力对物体所做的功$W=Fs$．根据牛顿第二定律，$F=ma$；根据运动学公式$v^2=2as$得到$s=v^2/2a$．将$F$和$s$的表达式代入$W=Fs$中得到
+设一个原来静止的物体，质量为$m$，由于物体是静止的，没有运动，也就是没有动能，或者说动能为零，在恒定的外力$F$作用下，物体发生一段位移$s$，得到速度$v$（图~\ref{fig_A_7-6}），获得一定的动能．设外力方向与运动方向相同，外力对物体所做的功$W=Fs$．根据牛顿第二定律，$F=ma$；根据运动学公式$v^2=2as$得到$s=v^2/2a$．将$F$和$s$的表达式代入$W=Fs$中得到
 \[W=Fs=ma\times \frac{v^2}{2a}=\frac{1}{2}mv^2 \]
 
 我们看到，外力对物体所做的功等于$\dfrac{1}{2}mv^2$这样一个跟
@@ -284,14 +162,14 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 
 动能和功一样，也是标量．动能的单位跟功的单位相同，
 在国际单位制里都是焦耳，这是因为
-\[1[{\rm kg}\cdot {\rm m^2}/{\rm s^2}]=1[{\rm kg}\cdot \ms][{\rm m}]=1{\rm N}\cdot {\rm m}=1{\rm J}\]
+\[1[{\rm kg}\cdot {\rm m^2}/{\rm s^2}]=1[{\rm kg}\cdot \Ums][{\rm m}]=1{\rm N}\cdot {\rm m}=1{\rm J}\]
 
 
 \subsection*{练习三}
 \begin{enumerate}
-    \item 1976年3月8日在吉林市降落一场陨石雨，其中最大的一号陨石的质量是1770千克，假设它以45$\ms$的速度撞击地球，计算它触地时的动能．
+    \item 1976年3月8日在吉林市降落一场陨石雨，其中最大的一号陨石的质量是1770千克，假设它以45$\Ums$的速度撞击地球，计算它触地时的动能．
     \item 我国第一颗人造地球卫星的质量是173千克，速度为7.2${\rm km}/{\rm m}$时，它的动能是多少？
-    \item 一个电子以$8.00\times 10^6\ms$的速度运动，质子必须运动得多快，才能使它具有跟电子一样的动能？已知质子的质量是电子的1800倍．
+    \item 一个电子以$8.00\times 10^6\Ums$的速度运动，质子必须运动得多快，才能使它具有跟电子一样的动能？已知质子的质量是电子的1800倍．
     \item 有甲、乙两个物体，除了下列每一种不同点而外，这两个物体的其他情况都相同．试比较下列每一种情况下它们的动能：
     \begin{enumerate}
         \item 物体甲的速度是物体乙的两倍．
@@ -320,7 +198,7 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 
 
 \begin{example}
-    一架喷气式飞机的质量为$5.0\times 10^3$千克，受到的推力为$1.8\times 10^4$牛，受到的阻力是它的重量的0.020倍，起飞速度为60$\ms$，求起飞时滑跑的距离．
+    一架喷气式飞机的质量为$5.0\times 10^3$千克，受到的推力为$1.8\times 10^4$牛，受到的阻力是它的重量的0.020倍，起飞速度为60$\Ums$，求起飞时滑跑的距离．
 \end{example}
 
 
@@ -346,54 +224,33 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
     \begin{enumerate}
         \item 使一个物体的速度从零增加$v$，再从$v$增加到$2v$．哪种情况下做的功要多些？为什么？
         \item 在光滑平面上的物体受到沿着平面的两个力$F_1$和
-        $F_2$的作用（图7.7）．在下列情况下，从静止开始移动2米时，物体获得的动能各是多大？
+        $F_2$的作用（图~\ref{fig_A_7-7}）．在下列情况下，从静止开始移动2米时，物体获得的动能各是多大？
         \begin{enumerate}
             \item $F_1=10$牛，$F_2=0$；
             \item $F_1=0$，$F_2=10$牛；
             \item $F1=F2=5$牛．
         \end{enumerate}
 
-\begin{figure}[htp]
-\centering
-\begin{minipage}[t]{0.48\textwidth}
-\centering
-\begin{tikzpicture}[>=latex]
-\draw (0,0) circle (.5cm);
-\draw[->](0,0)--(2,2)node [right]{$F_1$};
-\draw[->](0,0)--(2,-2)node [right]{$F_2$};
-\draw (.3,0) arc (0:45:.3)node [right]{$90^\circ$}; 
-\draw (.3,0) arc (0:-45:.3); 
-\end{tikzpicture}
-\caption{}
-\end{minipage}
-\begin{minipage}[t]{0.48\textwidth}
-\centering
-\begin{tikzpicture}[>=latex, scale=1.4]
-\draw [pattern=north east lines] (-.25,-1.5) rectangle (.25, 1.5);
-\draw [|<->|] (-.25, 1.75)--node[above]{$s$} (.25,1.75);
-\draw (-1, .1) --(-.6, .1) to [bend left=15] (-.45, 0) to [bend left=15] (-.6,-.1)--(-1,-.1)--(-1,.1); 
-
-\node at (-.7, -.25){$m$};
-
-
-\draw [dashed] (.5, .1) --(.9, .1) to [bend left=15] (1.05, 0) to [bend left=15] (.9,-.1)--(.5,-.1)--(.5,.1); 
-
-\draw[->] (-1.3, .3)--node[above]{$v_1$}(-.4, .3);
-\draw[->] (.4, .3)--node[above]{$v_2$}(1.1, .3);
-
-\draw[->](.2,0)--node[above]{$f$}(-.2,0);
-
-\end{tikzpicture}
-\caption{}
-\end{minipage}
+\begin{figure}[htbp]
+    \centering
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics{fig/A/7-7.pdf}
+        \caption{}\label{fig_A_7-7}
+    \end{minipage}
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics{fig/A/7-8.pdf}
+        \caption{}\label{fig_A_7-8}
+    \end{minipage}
 \end{figure}
 
 
 
     \item 一个30牛的力水平地作用在2.0千克的物体上，使它在无摩擦的水平面上移动了3.0米的距离．然后，这个力变到15牛，又使物体移动了2.0米．物体增加的动能总共是多少？
-\item 质量是2.0克的子弹，以300$\ms$的速度水平射入厚度是10毫米的钢板（图7.8），射穿后的速度是100$\ms$．子弹受到的平均阻力是多大？
+\item 质量是2.0克的子弹，以300$\Ums$的速度水平射入厚度是10毫米的钢板（图~\ref{fig_A_7-8}），射穿后的速度是100$\Ums$．子弹受到的平均阻力是多大？
 
-\item 一架新型喷气式战斗机的质量是$1.50\times 10^4$千克，发动机的推力是$1.11\times 10^5$牛，起飞速度是88.0$\ms$，滑跑距离是671米．计算飞机起飞时受到的平均阻力．
+\item 一架新型喷气式战斗机的质量是$1.50\times 10^4$千克，发动机的推力是$1.11\times 10^5$牛，起飞速度是88.0$\Ums$，滑跑距离是671米．计算飞机起飞时受到的平均阻力．
     \end{enumerate}
 
    \section{重力势能}
@@ -405,13 +262,14 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
     物体由于被举高才具有重力势能，而物体在举高过程中总是要克服重力做功的．因此，重力势能跟克服重力做功有密切关系．那么，一个质量为$m$的物体，在被举到高度为$h$的
     地方，具有的重力势能是多大呢？
 
-\begin{figure}[htp]
-\centering\includegraphics[scale=.45]{fig/7-9.png}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-9.pdf}
+    \caption{}\label{fig_A_7-9}
 \end{figure}
 
     我们设想用一个与重力$mg$
-    大小相等方向相反的外力$F$把物体举到高处（图7.9）．因为物体是在相互平衡的力作用下被举高的，物体的速度没有变化，所以它的动能也没有变化．我们知道，
+    大小相等方向相反的外力$F$把物体举到高处（图~\ref{fig_A_7-9}）．因为物体是在相互平衡的力作用下被举高的，物体的速度没有变化，所以它的动能也没有变化．我们知道，
 物体被举高了，它的重力势能要增加，在这个过程中，我们克服重力做了功．克服重力做了多少功，重力势能就增加了多少．把物体举到高度为$h$的地方，克服重力所做的功$W=Fh=mgh$．在物理学里就用$mgh$这个物理量来表示物体的\textbf{重力势能}．如果用$E_P$表示重力势能，那么
 \[E_P =mgh\]
 这就是说，\textit{物体的重力势能等于它的重量和高度的乘积，惑者说，等于物体的质量、重力加速度、高度三者的乘积}．物体的质量越大，高度越大，它的重力势能就越大．
@@ -424,59 +282,39 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 
 \subsection{重力势能的相对性}
 
-我们知道，高度$h$是相对的．我们说某点的高度$h$为若干，这总是相对于一个水平面来说的，这个水平面的高度取作零，例如说珠穆朗玛峰的高度是海拔8848米，这是相对于海平面来说的，海平面的高度取作零．说高山上一座建筑物的高度是5米，那是相对于高山上的一块平地说的．这块平地的高度取作零，测量这座建筑物的高度无需再把海平面的高度取作零．和高度$h$一样，重力势能$mgh$也是相对的．我们说物体具有重力势能$mgh$，这总是相对于某一个水平面来说的，这个水平面的高度取作零，重力势能也是零．这个水平面叫做参考平面，通常选择地面作为参考平面．实际上，选择哪一个水平面作为参考平面，可视研究问题的方便而定．例如研究物体沿斜面的运动，选择通过斜面下端的水平面作为参考平面就比较方便．选择不同的参考平面，物体重力势能的数值是不同的，但这并不影响我们研究问题．我们研究有关重力势能的问题，有确定意义的总是重力势能的差值，而这个差值并不因选择不同的参考平面而有所不同，对选定的参考平面而言，在参考平面上方的物体，高度是正值，重力势能也是正值；在参考平面下方的物体，高度是负值，重力势能也是负值．例如取实验桌的表面作为参考平面（图7.10），在斜面顶端的物体具有正的重力势能$mgh_1$，在地面上的物体具有负的重力旁能$-mgh_2$．说物体具有负的重力势能，只是表示物体在该位置所具有的重力势能比它在参考平面上具有的重力势能要少，这跟用正负温度来表示温度的高低是一样的．关于负的势能我们在今后的学习中将会
+我们知道，高度$h$是相对的．我们说某点的高度$h$为若干，这总是相对于一个水平面来说的，这个水平面的高度取作零，例如说珠穆朗玛峰的高度是海拔8848米，这是相对于海平面来说的，海平面的高度取作零．说高山上一座建筑物的高度是5米，那是相对于高山上的一块平地说的．这块平地的高度取作零，测量这座建筑物的高度无需再把海平面的高度取作零．和高度$h$一样，重力势能$mgh$也是相对的．我们说物体具有重力势能$mgh$，这总是相对于某一个水平面来说的，这个水平面的高度取作零，重力势能也是零．这个水平面叫做参考平面，通常选择地面作为参考平面．实际上，选择哪一个水平面作为参考平面，可视研究问题的方便而定．例如研究物体沿斜面的运动，选择通过斜面下端的水平面作为参考平面就比较方便．选择不同的参考平面，物体重力势能的数值是不同的，但这并不影响我们研究问题．我们研究有关重力势能的问题，有确定意义的总是重力势能的差值，而这个差值并不因选择不同的参考平面而有所不同，对选定的参考平面而言，在参考平面上方的物体，高度是正值，重力势能也是正值；在参考平面下方的物体，高度是负值，重力势能也是负值．例如取实验桌的表面作为参考平面（图~\ref{fig_A_7-10}），在斜面顶端的物体具有正的重力势能$mgh_1$，在地面上的物体具有负的重力旁能$-mgh_2$．说物体具有负的重力势能，只是表示物体在该位置所具有的重力势能比它在参考平面上具有的重力势能要少，这跟用正负温度来表示温度的高低是一样的．关于负的势能我们在今后的学习中将会
 碰到．
-\begin{figure}[htp]
-\centering\includegraphics[scale=.45]{fig/7-10.png}
-\caption{正重力势能和负重力势能}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-10.pdf}
+    \caption{正重力势能和负重力势能}\label{fig_A_7-10}
 \end{figure}
 
 \section{重力做功的特点和重力势能}
 上一节我们讲到了克服重力做了多少功，重力势能就增加了多少；重力对物体做了多少功，重力势能就减少了多少．这个问题还有进一步讨论的必要．为此我们要先研究一下重力做功的特点．
 
 \subsection{重力做功的特点}
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick]
-\fill [pattern = north east lines] (-1,-.25) rectangle (6,0);
-\draw (-1,0)--(6,0);
-\draw (1,4)node[above]{$A$}--(1,1)node[below]{$B$}--(6,1)node[below]{$C$};
-\fill (1,4) circle(2pt);\fill (1,1) circle(2pt);\fill (6,1) circle(2pt);
-\draw[<->](4,0)--node [fill=white]{$h_2$}(4,1);
-\draw[<->](.5,1)--node [fill=white]{$\Delta h$}(.5,4);
-\draw[<->](-.5,0)--node [fill=white]{$h_1$}(-.5,4);
-\draw (-1,4)--(1,4);
-\draw (0,1)--(1,1);
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-11.pdf}
+    \caption{}\label{fig_A_7-11}
 \end{figure}
 
 设一个质量是$m$的物体，从原来高度
-是$h_1$的$A$点自由下落到高度是$h_2$的$B$点再水平移到$C$点（图7.11），由于物体水平移动中重力并不做功，所以在整个过程中重力对物体所做的功就等于物体由$A$点自由下落到$B$点中重力所做的功：
+是$h_1$的$A$点自由下落到高度是$h_2$的$B$点再水平移到$C$点（图~\ref{fig_A_7-11}），由于物体水平移动中重力并不做功，所以在整个过程中重力对物体所做的功就等于物体由$A$点自由下落到$B$点中重力所做的功：
 \[W_G=mg\Delta h=mgh_1-mgh_2\]
-如果让这个物体沿着斜面滑下（图7.12），从原来高度是$h_1$的$A$点滑到高度是$h_2$的$C$点，物体沿斜面滑下的距离是$s$，重力所做的功是
+如果让这个物体沿着斜面滑下（图~\ref{fig_A_7-12}），从原来高度是$h_1$的$A$点滑到高度是$h_2$的$C$点，物体沿斜面滑下的距离是$s$，重力所做的功是
 \[W_G=mg\sin\theta \cdot s=mg\Delta h=mgh_1-mgh_2\]
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick]
-\fill [pattern = north east lines] (-1,-.25) rectangle (6,0);
-\draw (-1,0)--(6,0);
-\draw (1,4)node[above]{$A$}--(1,1)node[below]{$B$}--(6,1)node[below]{$C$};
-\fill (1,4) circle(2pt);\fill (1,1) circle(2pt);\fill (6,1) circle(2pt);
-\draw[<->](4,0)--node [fill=white]{$h_2$}(4,1);
-\draw[<->](.5,1)--node [fill=white]{$\Delta h$}(.5,4);
-\draw[<->](-.5,0)--node [fill=white]{$h_1$}(-.5,4);
-\draw (-1,4)--(1,4);
-\draw (0,1)--(1,1);
-\draw (1,4)--(6,1);
-\draw (6-.75,1) arc (180:150:.75)node[left]{$\theta$};
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-12.pdf}
+    \caption{}\label{fig_A_7-12}
 \end{figure}
 
 
 
-现在我们来看这个物体沿着任一路径$AC$从原来高度是$h_1$的$A$点运动到高度是$h_2$的$B$点，重力所做的功是多少（图7.13）．我们把路径$AB$分成许多很短的间隔$AA_1,A_1A_2,A_2A_3,\ldots$，使每个间隔都相当于一个斜面．设每个小斜面的高度是$\Delta h_1,\Delta h_2,\Delta h_3,\ldots$，那么物体通过每个小斜面时重力所做的功是$mg\Delta h_1,mg\Delta h_2,mg\Delta h_3,\ldots$．物体通过路径$AB$时重力所做的功等于重力在每个小斜面上所做的功的代数和，即
+现在我们来看这个物体沿着任一路径$AC$从原来高度是$h_1$的$A$点运动到高度是$h_2$的$B$点，重力所做的功是多少（图~\ref{fig_A_7-13}）．我们把路径$AB$分成许多很短的间隔$AA_1,A_1A_2,A_2A_3,\ldots$，使每个间隔都相当于一个斜面．设每个小斜面的高度是$\Delta h_1,\Delta h_2,\Delta h_3,\ldots$，那么物体通过每个小斜面时重力所做的功是$mg\Delta h_1,mg\Delta h_2,mg\Delta h_3,\ldots$．物体通过路径$AB$时重力所做的功等于重力在每个小斜面上所做的功的代数和，即
 \[\begin{split}
 W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 &=mg\Delta h\\
@@ -489,27 +327,17 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 \subsection{重力势能的进一步讨论}
 
-\begin{figure}[htp]
+\begin{figure}[htbp]
     \centering
-    \includegraphics[scale=1.2]{fig/7-13.pdf}
-    \caption{}
+    \includegraphics{fig/A/7-13.pdf}
+    \caption{}\label{fig_A_7-13}
 \end{figure}
 
-重力做功的上述特点对于物理学里能够引入重力势能是有决定意义的．原来，如果重力做功没有这个特点，而是与路径有关，那么，我们分别沿着不同的路径把一个物体由地面举到高度为$h$的一点（图7.14），克服重力所做的功将不相同，设沿着路径1把物体举高时克服重力所做的功是$W_1$，沿着路径2把物体举高时克服重力所做的功是$W_2$．这样，位于高度$h$上的物体的重力势能到底等于$W_1$还是等于$W_2$呢？这个重力势能也就没有意义了！可见，正是由于重力做功与路径无关，重力势能的改变才有确定值，在物理学中才可以引入重力势能这个概念．
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick, scale=.8]
-\fill [pattern = north east lines] (0,-.25) rectangle (2,0);
-\draw (0,0)--(2,0);
-\draw [dashed] (1,.25) circle (.25);
-\draw [fill=gray!30] (1,5.25) circle (.25);
-\draw (1.25,5.25)--(1.75,5.25);
-\draw [<->](1.5,5.25)--node [fill=white]{$h$}(1.5,0);
-
-\draw (1,5) [bend right=60] to node [left]{2} (1,.5);
-\draw (1,5) [bend right=15] to node [left]{1} (1,.5);
-
-\end{tikzpicture}
-\caption{}
+重力做功的上述特点对于物理学里能够引入重力势能是有决定意义的．原来，如果重力做功没有这个特点，而是与路径有关，那么，我们分别沿着不同的路径把一个物体由地面举到高度为$h$的一点（图~\ref{fig_A_7-14}），克服重力所做的功将不相同，设沿着路径1把物体举高时克服重力所做的功是$W_1$，沿着路径2把物体举高时克服重力所做的功是$W_2$．这样，位于高度$h$上的物体的重力势能到底等于$W_1$还是等于$W_2$呢？这个重力势能也就没有意义了！可见，正是由于重力做功与路径无关，重力势能的改变才有确定值，在物理学中才可以引入重力势能这个概念．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-14.pdf}
+    \caption{}\label{fig_A_7-14}
 \end{figure}
 
 克服摩擦力做的功是与路径有关的．物体沿不同路径从一个位置移到另一位置，克服摩擦力做的功一般是不相等的．
@@ -529,26 +357,20 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
     \item 体积相同的铝球和铅球，处在同一高度的地方，哪一
     个的重力势能较大？
     \item 质量是2千克的物体位于0.8米高的桌面上，这个物体具有多少重力势能？
-    \item 图7.15是几个斜面，它们的高度相同，而倾角不同．
+    \item 图~\ref{fig_A_7-15} 是几个斜面，它们的高度相同，而倾角不同．
     让质量相同的物体沿斜面从顶端运动到底端，试根据功的公式来计算沿不同斜面重力所做的功，证明这个功跟斜面的倾角无关．
-\begin{figure}[htp]
-\centering\includegraphics[scale=1.3]{fig/7-15.pdf}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-15.pdf}
+    \caption{}\label{fig_A_7-15}
 \end{figure}
-\item 图7.16表示一个斜抛物体的运动，当物体由抛出位置1运动到最高位置2时，重力所做的功是多少？物体克服重力所做的功是多少？由位置2运动到跟位置1在同一水平面上的位置3时，重力所做的功是多少？由位置1运动到位置3时，重力所做的功是多少？
+\item 图~\ref{fig_A_7-16} 表示一个斜抛物体的运动，当物体由抛出位置1运动到最高位置2时，重力所做的功是多少？物体克服重力所做的功是多少？由位置2运动到跟位置1在同一水平面上的位置3时，重力所做的功是多少？由位置1运动到位置3时，重力所做的功是多少？
 \end{enumerate}
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=stealth, thick]
-\fill [pattern = north east lines] (-1,-.25) rectangle (6,0);
-\draw (-1,0)--(6,0);
-\draw  (5,0) arc (0:180:2.5);
-\draw [fill=gray!30] (0,.25) node {1} circle (.25) ;
-\draw [dashed, fill=white] (5,.25) circle (.25) node  {3};
-\draw [dashed] (2.5,2.5) circle (.25) node  [above] {2};
-\draw [<->] (2.5,2.5)--node [fill=white]{$h$}(2.5,0);
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-16.pdf}
+    \caption{}\label{fig_A_7-16}
 \end{figure}
 
 
@@ -556,71 +378,26 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 这一节我们研究物体因发生弹性形变而具有的势能，这种势能叫做\textbf{弹性势能}．物体发生弹性形变的时候，物体的各个部分之间发生弹力的相互作用．正象地球和物体之间由于有重力的相互作用，因而地球和物体组成的系统具有重力势能一样，发生弹性形变的物体的各个部分之间由于有弹力的相互作用，因而由这些部分组成的系统，亦即发生弹性形变的物体本身，就具有弹性势能．
 
 任何发生了弹性形变的物体都具有弹性势能．卷紧了的
-发条，拉长或压缩了的弹簧，拉弯了的弓，正在击球的网球拍或羽毛球拍，正在支撑运动员上跳的撑竿等等，都具有弹性势能（图7.17）．
-\begin{figure}[htp]
-\centering\includegraphics[scale=.45]{fig/7-17.png}
-\caption{任何发生弹性形变的物体都具有弹性势能}
+发条，拉长或压缩了的弹簧，拉弯了的弓，正在击球的网球拍或羽毛球拍，正在支撑运动员上跳的撑竿等等，都具有弹性势能（图~\ref{fig_A_7-17}）．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-17.pdf}
+    \caption{任何发生弹性形变的物体都具有弹性势能}\label{fig_A_7-17}
 \end{figure}
 
 弹性势能和弹力做功密切相关，它们的关系类似于重力势能和重力做功的关系，下面以弹簧为例定性地加以说明．
 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex]
-    \tikzstyle{spring1}=[decorate,decoration={aspect=0.5, segment length=3mm, amplitude=3mm,coil}]
-    \tikzstyle{spring2}=[decorate,decoration={aspect=0.5, segment length=2mm, amplitude=3mm,coil}]
-    \tikzstyle{spring3}=[decorate,decoration={aspect=0.5, segment length=4mm, amplitude=3mm,coil}]
-    
-    \fill [pattern = north east lines] (-.25,2) rectangle (0,3);
-    \fill [pattern = north east lines] (-.25,0) rectangle (0,1);
-    \fill [pattern = north east lines] (-.25,-1) rectangle (0,-2);
-    
-    \draw(0,2)--(0,3);  \draw(0,0)--(0,1);  \draw(0,-1)--(0,-2); 
-
-    \draw [shade] (4, 2.25) rectangle (4.5, 2.75);
-    \draw [shade] (3,.25) rectangle  (3.5, .75);
-    \draw [shade] (5,-1.75) rectangle  (5.5, -1.25);
-
-    \draw [spring1](0,2.5)--(4,2.5);
-    \draw [spring2](0,.5)--(3,.5);
-    \draw [spring3](0,-1.5)--(5,-1.5);
-
- \draw[fill=black] (6.5/2,.5) circle (1.5pt);  \draw [fill=black] (10.5/2,-1.5) circle (1.5pt);
-\draw [<->, thick]  (6.5/2+.8,.5)node[right]{$f$}-- (6.5/2-1.1,.5)node[above]{$F$};
-\draw [<->, thick]  (10.5/2+1,-1.5)node[right]{$F$}-- (10.5/2-.8,-1.5)node[above]{$f$};
-\draw [->] (6.2/2+.3, 1.1)--(6.5/2-.3, 1.1);
-\draw [->] (10.5/2-.3, -1.1)--(10.5/2+.3,-1.1);
-\end{tikzpicture}
-\caption{克服弹力做功，弹簧的弹性势能增加。图中$F$表示外力，$f$表示弹力。上图是没有发生形变的弹簧}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-18.pdf}
+    \caption{克服弹力做功，弹簧的弹性势能增加。图中$F$表示外力，$f$表示弹力。上图是没有发生形变的弹簧}\label{fig_A_7-18}
 \end{figure}
-用外力压缩或伸长弹簧的时候（图7.18），外力要克服弹
-力做功，克服弹力做多少功，弹簧的弹性势能就增加多少，把被压缩或伸长的弹簧放开的时候（图7.19），弹力可以推动其他物体做功，弹力做多少功，弹簧的弹性势能就减少多少．
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex]
-    \tikzstyle{spring1}=[decorate,decoration={aspect=0.5, segment length=3mm, amplitude=3mm,coil}]
-    \tikzstyle{spring2}=[decorate,decoration={aspect=0.5, segment length=2mm, amplitude=3mm,coil}]
-    \tikzstyle{spring3}=[decorate,decoration={aspect=0.5, segment length=4mm, amplitude=3mm,coil}]
-    
-    \fill [pattern = north east lines] (-.25,2) rectangle (0,3);
-    \fill [pattern = north east lines] (-.25,0) rectangle (0,1);
-    \fill [pattern = north east lines] (-.25,-1) rectangle (0,-2);
-    
-    \draw(0,2)--(0,3);  \draw(0,0)--(0,1);  \draw(0,-1)--(0,-2); 
-
-    \draw [shade] (4, 2.25) rectangle (4.5, 2.75);
-    \draw [shade] (3,.25) rectangle  (3.5, .75);
-    \draw [shade] (5,-1.75) rectangle  (5.5, -1.25);
-
-    \draw [spring1](0,2.5)--(4,2.5);
-    \draw [spring2](0,.5)--(3,.5);
-    \draw [spring3](0,-1.5)--(5,-1.5);
-
- \draw[fill=black] (6.5/2,.5) circle (1.5pt);  \draw [fill=black] (10.5/2,-1.5) circle (1.5pt);
-\draw [<-, thick]  (6.5/2+.8,.5)node[right]{$f$}-- (6.5/2,.5);
-\draw [->, thick]  (10.5/2,-1.5)-- (10.5/2-.8,-1.5)node[above]{$f'$};
-\draw [<-] (6.2/2+.3, 1.1)--(6.5/2-.3, 1.1);
-\draw [<-] (10.5/2-.3, -1.1)--(10.5/2+.3,-1.1);
-\end{tikzpicture}
-\caption{弹力做功，弹簧的弹性势能减少。图中$f$表示弹力。上图是没有发生形变的弹簧}
+用外力压缩或伸长弹簧的时候（图~\ref{fig_A_7-18}），外力要克服弹
+力做功，克服弹力做多少功，弹簧的弹性势能就增加多少，把被压缩或伸长的弹簧放开的时候（图~\ref{fig_A_7-19}），弹力可以推动其他物体做功，弹力做多少功，弹簧的弹性势能就减少多少．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-19.pdf}
+    \caption{弹力做功，弹簧的弹性势能减少。图中$f$表示弹力。上图是没有发生形变的弹簧}\label{fig_A_7-19}
 \end{figure}
 
 弹簧的弹性势能跟弹簧被压缩或拉伸的长度有关系．一
@@ -642,25 +419,13 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 重力或弹力做功的多少跟这种转化的定量关系．
 	
 \subsection{机械能的守恒} 
-\begin{figure}[htp]\centering
-\begin{tikzpicture}
-[>=stealth, thick]
-\fill [pattern = north east lines] (-.5,-.25) rectangle (1.5,0);
-\draw (-.5,0)--(1.5,0);
-\draw [fill=gray!30] (1,5) node {1} circle (.25) ;
-\draw [fill=gray!30] (1,2) node {2} circle (.25) ;
-\draw (.75,5)--(.25,5);
-\draw (.75,2)--(-.25,2);
-\draw [<->] (.5,5)--node[fill=white] {$h_1$} (.5,0);
-\draw [<->]  (.15,2)--node[fill=white] {$h_2$} (.15,0);
-
-\draw [->](1,4.75)--node[right] {$v_1$} (1,4.25);
-\draw [->](1,1.75)--node[right] {$v_2$} (1,1.25);
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-20.pdf}
+    \caption{}\label{fig_A_7-20}
 \end{figure}
 
-我们先用自由落体作例子定量的研究动能和重力势能的转化（图7.20）．设有一个质量是$m$的物体，从高度是$h_1$的地方（起点）下落到高度是$h_2$的地方（终点）．设
+我们先用自由落体作例子定量的研究动能和重力势能的转化（图~\ref{fig_A_7-20}）．设有一个质量是$m$的物体，从高度是$h_1$的地方（起点）下落到高度是$h_2$的地方（终点）．设
 物体在起点的速度为$v_1$，在终点的速度为$v_2$．物体在下落过程中，重力做了功，从动能定理知道，重力所做的功等于物体动能的增加，即
 \[W_G=\frac{1}{2}mv_2^2-\frac{1}{2}mv^2_1 \]
 另一方面，从重力做功与重力势能的关系知道，重力所做的功等于重力势能的减少，即
@@ -686,46 +451,38 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
         \item 抛出的手榴弹或标枪做斜抛运动．
         \item 用细绳拴着一个小球，绳的一端固定，使小球在光滑的水平面上做匀速圆周运动．
         \item 用细绳拴着一个小球，绳的一端固定，使小球在竖直平面上做圆周运动．
-        \item 物体沿着光滑的曲面滑下（图7.21甲）．
-        \item 拉着一个物体沿着光滑的斜面匀速上升（图7.21乙）．
-        \item 在光滑水平面上运动的小球，碰到弹簧上，把弹簧压缩后又被弹簧弹回来（图7.21丙）．
+        \item 物体沿着光滑的曲面滑下（图~\ref{fig_A_7-21a}）．
+        \item 拉着一个物体沿着光滑的斜面匀速上升（图~\ref{fig_A_7-21b}）．
+        \item 在光滑水平面上运动的小球，碰到弹簧上，把弹簧压缩后又被弹簧弹回来（图~\ref{fig_A_7-21c}）．
     \end{enumerate}
-\begin{figure}[htp]
-\centering\includegraphics[scale=.45]{fig/7-21.png}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \begin{subfigure} {0.3\linewidth} 
+        \centering
+        \includegraphics{fig/A/7-21a.pdf} 
+        \caption{}\label{fig_A_7-21a} 
+    \end{subfigure}
+    \hfil
+    \begin{subfigure} {0.3\linewidth} 
+        \centering
+        \includegraphics{fig/A/7-21b.pdf}
+        \caption{}\label{fig_A_7-21b} 
+    \end{subfigure}
+    \hfil
+    \begin{subfigure} {0.3\linewidth} 
+        \centering
+        \includegraphics{fig/A/7-21c.pdf}
+        \caption{}\label{fig_A_7-21c} 
+    \end{subfigure}
+    \caption{}\label{fig_A_7-21}
 \end{figure}
 
     \item  做下面的实验，把物体拴在细线上悬挂起来，做成
-    一个单摆（图7.22）．把物体从平衡位置$O$拉到$B$，放手后观察物体的来回摆动，把铅笔放在位置1和2，可以看到物体仍然要升到跟$B$同样高的$C_1$和$C_2$．解释这个现象．
-\begin{figure}[htp]
-\centering
-\begin{tikzpicture}[>=latex]
-    \fill [pattern = north east lines] (-.5,0) rectangle (.5,0.2);
-\draw (-.5,0)--(.5,0);
-    \draw (0,0)--(0,-4);
-    \draw (0,-.5) arc (-90:-45:.5)node[below]{$\theta$};
-    \draw [dashed] (0,0)--(-45:4)--(-135:4)--(0,0);
-    \draw[dashed] (0,-4) arc (-90:-45:4);
-    \draw[dashed] (0,-4) arc (-90:-135:4);
-
-    \draw[dashed] (0,-1) --(-2.2,-4/1.414);
-\draw[dashed] (0,-2) --(-1.5,-4/1.414);
-\draw[dashed] (-2.2,-4/1.414) to [bend right=25] (0,-4);
-\draw[dashed] (-1.6,-4/1.414) to [bend right=30] (0,-4);
-
-\draw[fill=black] (0,-1) circle (1.5pt)node[right]{1};
-\draw[fill=black] (0,-2) circle (1.5pt)node[right]{2};
-
-\draw [fill=white] (-45:4) circle (3pt)node[below]{$B$};
-\draw [fill=white] (-135:4) circle (3pt)node[above]{$C$};
-\draw [fill=white] (0,-4) circle (3pt)node[below]{$O$};
-\draw [fill=white] (-2.2,-4/1.414) circle (3pt)node[above]{$C_1$};
-\draw [fill=white] (-1.6,-4/1.414) circle (3pt)node[above]{$C_2$};
-
-\draw [|<->|](.18,.18) to node [fill=white]{$\ell$} (2*1.414+.18, -2*1.414+.18) ;
-
-\end{tikzpicture}
-\caption{}
+    一个单摆（图~\ref{fig_A_7-22}）．把物体从平衡位置$O$拉到$B$，放手后观察物体的来回摆动，把铅笔放在位置1和2，可以看到物体仍然要升到跟$B$同样高的$C_1$和$C_2$．解释这个现象．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-22.pdf}
+    \caption{}\label{fig_A_7-22}
 \end{figure}
 \end{enumerate}
 
@@ -757,7 +514,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 
 \begin{example}
-    一个摆长是$\ell$的单摆，最大偏角是$\theta$，求单摆在最低位置的速度（图7.22）．
+    一个摆长是$\ell$的单摆，最大偏角是$\theta$，求单摆在最低位置的速度（图~\ref{fig_A_7-22}）．
 \end{example}
 
 
@@ -794,7 +551,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
         \item 重锤落到地面时的重力势能、动能和速度．
     \end{enumerate}
 \item 要使一球着地后回跳的高度超过原高10米，必须以多大速度将它下抛？不计球击地时的能量损失．
-\item 一个物体从距地面40米的高处自由落下，经过几秒后，该物体的动能和重力势能相等？$g=10\msq$．
+\item 一个物体从距地面40米的高处自由落下，经过几秒后，该物体的动能和重力势能相等？$g=10\Umsq$．
 \end{enumerate}
 
 \section{功和能}
@@ -838,83 +595,45 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 体，它们所受的阻力相等．这两个物体停止前经过的距离是否相同？停下来所用的时间是否相同？
 \item 质量是$m$千克的物体自由落下，在第1秒内和第2秒内物体重力势能的减少各是多少？
 \item 从地面竖直上抛一个物体，质量是0.2千克，经过8秒落回原地．物体抛出时的动能是多少？从被抛出到最高点，物体克服重力所做的功是多少？物体上升到最高点时的重力势能是多少？不计空气阻力．
-\item 一个人站在10米高的楼上沿斜上方抛出一个小球，初速度的大小是10$\ms$，抛出角是30$^\circ$．小球落地时速度是多大？如果初速度的大小不变，沿斜下方抛出小球，抛射角是45$^\circ$，小球落地时速度是多大？用其他某个角度抛出，结果又怎
+\item 一个人站在10米高的楼上沿斜上方抛出一个小球，初速度的大小是10$\Ums$，抛出角是30$^\circ$．小球落地时速度是多大？如果初速度的大小不变，沿斜下方抛出小球，抛射角是45$^\circ$，小球落地时速度是多大？用其他某个角度抛出，结果又怎
 样？不计空气阻力．
 \item 利用机械能守恒定律，你能算出平抛和斜抛物体通过任意位置时速度的大小吗？怎样计算？
-\item 质量是0.25千克的球以2.0$\ms$的速度向右运动，然后沿着图7.23所示的光滑的凹面滚动，这个小球在凹面的右侧能滚上多高？如果在$P$点把球从静止放开，它能滚上多高？
-\begin{figure}[htp]\centering
-\includegraphics[scale=.45]{fig/7-23.png}
-\caption{}
+\item 质量是0.25千克的球以2.0$\Ums$的速度向右运动，然后沿着图~\ref{fig_A_7-23} 所示的光滑的凹面滚动，这个小球在凹面的右侧能滚上多高？如果在$P$点把球从静止放开，它能滚上多高？
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-23.pdf}
+    \caption{}\label{fig_A_7-23}
 \end{figure}
 
-\item  一颗子弹以700$\ms$的速度打穿第一块木板后，这度减低到500$\ms$．如果让它继续打穿第二块同样的木板，它的速度将变为多大？它能否再打穿第三块同样的木板？
-\item  列车经过一段长2.1千米的平直铁路，速度从54$\kmh$增加到72$\kmh$，列车重1400吨，列车受到的阻力
+\item  一颗子弹以700$\Ums$的速度打穿第一块木板后，这度减低到500$\Ums$．如果让它继续打穿第二块同样的木板，它的速度将变为多大？它能否再打穿第三块同样的木板？
+\item  列车经过一段长2.1千米的平直铁路，速度从54$\Ukmh$增加到72$\Ukmh$，列车重1400吨，列车受到的阻力
 是车重的$k=0.003$倍．求机车的功率．
-\item  在一个农村小水电站里，上下游的水位差是3米，每秒钟有0.5${\rm m^3}$的水流过发电机的水轮机，从水轮机流出的水的速度是3$\ms$，上游水的流速忽略不计．设水流能的70\%可以转化成电能，求这个小水电站发出的电功率．
+\item  在一个农村小水电站里，上下游的水位差是3米，每秒钟有0.5${\rm m^3}$的水流过发电机的水轮机，从水轮机流出的水的速度是3$\Ums$，上游水的流速忽略不计．设水流能的70\%可以转化成电能，求这个小水电站发出的电功率．
 \item  飞机、轮船所受的空气或水的阻力并不是固定的，它跟飞机、轮船的速度有关．当速度很大时，阻力与速度的平方成正比，试证明：这时要把飞机、轮船的最大速度增大到2倍，发动机的额定功率要增大到8倍才行．这就是在增大飞机、轮船等交通工具的速度方面，每取得一个新的成就都很不容易的原因．
 \item 一辆汽车沿着平直的道路行驶，遇有紧急情况而刹车，刹车后轮子只滑动不滚动，从刹车开始到汽车停下来，汽车前进12米．已知轮胎与路面之间的滑动摩擦系数$\mu=0.7$．求刹车前汽车的行驶速度，不计空气阻力．
-\item 一辆5吨的载重汽车开上一个坡路，坡路长$s=100$米，坡顶和坡底的高度差$h=10$米，汽车上坡前的速度是10$\ms$，上到坡顶时减为5.0$\ms$．汽车受到的摩擦阻力是车重的$k=0.05$倍．求汽车的牵引力．取$g=10\msq$．
+\item 一辆5吨的载重汽车开上一个坡路，坡路长$s=100$米，坡顶和坡底的高度差$h=10$米，汽车上坡前的速度是10$\Ums$，上到坡顶时减为5.0$\Ums$．汽车受到的摩擦阻力是车重的$k=0.05$倍．求汽车的牵引力．取$g=10\Umsq$．
  
 讨论：在这个题目里，汽车的牵引力做多少功？汽车增加
 的机械能是多少？其中动能和重力势能各是多少？克服摩擦而转化成的热能是多少？
-\item 一个滑雪的人从高度为$h$的斜坡上由静止开始滑下，然后在水平面滑行一段距离停下来（图7.24）．已知斜面的倾角为$\theta$，滑雪板和雪之间的滑动摩擦系数为$\mu$，求滑雪人在水平面上滑行的距离$s_1$．你能不能求出滑雪人通过的水
+\item 一个滑雪的人从高度为$h$的斜坡上由静止开始滑下，然后在水平面滑行一段距离停下来（图~\ref{fig_A_7-24}）．已知斜面的倾角为$\theta$，滑雪板和雪之间的滑动摩擦系数为$\mu$，求滑雪人在水平面上滑行的距离$s_1$．你能不能求出滑雪人通过的水
 平距离$s$？其他条件不变，只改变斜坡的倾角$\theta$，水平距离$s$是否改变？为什么？
-\begin{figure}[htp]\centering
-    \begin{tikzpicture}[>=stealth]
-\fill [pattern = north east lines, rotate=-30] (0,-.25) rectangle (4,0);
-\draw [rotate=-30](0,0)--(4,0);
-\fill [pattern = north east lines] (3.45,-2) rectangle (5.5,-2-.25);
-\draw (3.45,-2)--(5.5,-2);
-
-\draw[|<->|] (3.45,-2.5)--node[fill=white]{$s_1$}(5.5,-2.5);
-\draw[|<->|] (0,-2.75)--node[fill=white]{$s$}(5.5,-2.75);
-\draw[|<->|] (0,0)--node[fill=white]{$h$}(0,-2);
-\draw[dashed] (-0.5,-2)--(3.45,-2);
-\draw[dashed] (0,-2)--(0,-2.75);
-\draw[dashed] (5.5,-2.75)--(5.5,-2.25);
-\draw  (3.45-1,-2+.55) node[below] {$\theta$}  arc (145:180:1);
-    \end{tikzpicture}
-    \caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-24.pdf}
+    \caption{}\label{fig_A_7-24}
 \end{figure}
 
-\item 要使小球滑到光滑的离心轨道顶端时不落下来（图7.25），至少应使它在斜轨上多高处由静止开始下滑？
+\item 要使小球滑到光滑的离心轨道顶端时不落下来（图~\ref{fig_A_7-25}），至少应使它在斜轨上多高处由静止开始下滑？
 
 
-\begin{figure}[htp]\centering
-    \begin{tikzpicture}[>=stealth, scale=1.2]
-\draw (-1,0)--(6,0);
-\fill [pattern = north east lines] (-1,-.25) rectangle (6,0);
-
-\draw (0,1) circle(1);
-\draw (.275,0)--(5,3);
-\draw [|<->|](5,0)--node [fill=white]{$h$}(5,3)node[above]{$m$};
-\draw [fill=gray](4.6,3) circle (.2);
-\draw [dotted](0,2-.2) circle (.2);
-
-\draw[->](0,1)--node [fill=white]{$R$}+(30:1);
-\draw [->](0,2-.2)--(.5,2-.2)node[below]{$v$};
-\fill (0,1) circle(1pt);
-\fill (0,2-.2) circle(1pt);
-    \end{tikzpicture}
-    \caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/7-25.pdf}
+    \caption{}\label{fig_A_7-25}
 \end{figure}
 
 \end{enumerate}
 
 
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
+
