--- a/physics.tex
+++ b/physics.tex
@@ -31,7 +31,8 @@
 	%\include{1/A/04}
 	%\include{1/A/05}
 	%\include{1/A/06}
-	\include{1/A/07}
+	%\include{1/A/07}
+	\include{1/A/08}
 	
 \end{document}
 
