--- a/1/A/08.tex
+++ b/1/A/08.tex
@@ -1,8 +1,7 @@
+\chapter{动量}\label{chapter-momentum}
 
 
-\chapter{动量}
 \section{冲量和动量}
-
 一辆汽车，受到不同的牵引力时，从开动到获得一定的速
 度，需要的时间不同．牵引力大，需要的时间短，牵引力小，需要的时间长．
 
@@ -18,7 +17,7 @@ $v=at=Ft/m$．由此得到
 
 从上式还可以看出，原来静止的不同的物体，在相同冲量的作用下，它们得到的速度不同，质量大的物体得到的速度小，质量小的物体得到的速度大，但是它们的质量和速度的乘积$mv$却是相同的，都等于它们受到的冲量．在物理学中，质量和速度的乘积$mv$叫做\textbf{动量}．
 
-动量常用符号$p$表示，动量也是矢量，它的方向就是速度的方向．在国际单位制中，动量的单位是${\rm kg}\cdot \ms$，动量的单位跟冲量的单位实际上是相同的，由于$1{\rm N}=1{\rm kg}\cdot \msq$，所以$1{\rm N}\cdot {\rm s}=1{\rm kg}\cdot \ms$．
+动量常用符号$p$表示，动量也是矢量，它的方向就是速度的方向．在国际单位制中，动量的单位是${\rm kg}\cdot \Ums$，动量的单位跟冲量的单位实际上是相同的，由于$1{\rm N}=1{\rm kg}\cdot \Umsq$，所以$1{\rm N}\cdot {\rm s}=1{\rm kg}\cdot \Ums$．
 
 在物理学里，动量是个很重要的量，经常要用到．动量和速度虽然彼此有关，但含义是不同的．速度是运动学上的一个物理量，它描述物体运动的快慢和方向．只有速度的概念，并不能说明使物体得到这个速度或使以这个速度运动的物体停止下来，需要多大的冲量．为了说明这类问题，就要引入动量的概念，动量是动力学上的一个物理量．例如，要使以相同的速度运动的铅球和乒乓球停止下来，铅球需要的冲量大，就是因为铅球的质量大，动量也大的缘故．
 
@@ -26,25 +25,25 @@ $v=at=Ft/m$．由此得到
 
 
 \begin{example}
-    一个质量是0.1千克的钢球以6.0$\ms$的速度向右运动，碰到一个坚硬的障碍物后弹回，沿同一直线以6.0$\ms$的速度向左运动，碰撞前后钢球的动量有没有变化？变化了多少？
+    一个质量是0.1千克的钢球以6.0$\Ums$的速度向右运动，碰到一个坚硬的障碍物后弹回，沿同一直线以6.0$\Ums$的速度向左运动，碰撞前后钢球的动量有没有变化？变化了多少？
 \end{example}
 
 
 \begin{solution}
-    取向右的方向为正方向，钢球碰到障碍物前，它的速度$v=6.0\ms$，这时钢球的动量
-\[p=mv=6.0{\rm kg}\cdot {\ms}\]
-碰到障碍物后，钢球的速度$v'=-6.0\ms$，这时钢球的动量
-\[p'=mv'=-6.0{\rm kg}\cdot {\ms}\]
+    取向右的方向为正方向，钢球碰到障碍物前，它的速度$v=6.0\Ums$，这时钢球的动量
+\[p=mv=6.0{\rm kg}\cdot {\Ums}\]
+碰到障碍物后，钢球的速度$v'=-6.0\Ums$，这时钢球的动量
+\[p'=mv'=-6.0{\rm kg}\cdot {\Ums}\]
 可见钢球的动量发生了变化，钢球动量的变化等于变化后的动量减去变化前的动量，所以钢球动量的变化为
-\[p'-p=-12{\rm kg}\cdot {\ms} \]
+\[p'-p=-12{\rm kg}\cdot {\Ums} \]
 \end{solution}
 
 \subsection*{练习一}
 \begin{enumerate}
     \item 用4牛的力推动一个物体，力的作用时间是0.5秒，力的冲量是多少？
-    \item 使质量为4吨的汽车，从静止达到20$\kmh$的速度，需要多大的冲量？
-    \item 质量是25千克以0.5$\ms$的速度步行的小孩和质量是0.02千克以800$\ms$的速度飞行的子弹，哪个动量大？
-    \item 质量为8克的玻璃弹球以3$\ms$的速度向左运动，碰到一个物体后弹回，以2$\ms$的速度沿同一直线向右运动，弹球的动量改变了多少？
+    \item 使质量为4吨的汽车，从静止达到20$\Ukmh$的速度，需要多大的冲量？
+    \item 质量是25千克以0.5$\Ums$的速度步行的小孩和质量是0.02千克以800$\Ums$的速度飞行的子弹，哪个动量大？
+    \item 质量为8克的玻璃弹球以3$\Ums$的速度向左运动，碰到一个物体后弹回，以2$\Ums$的速度沿同一直线向右运动，弹球的动量改变了多少？
     \item 以相同的速度分别向竖直和水平方向抛出两个质量相等的物体，抛出时两个物体的动能是否相等？动量是否相等？
 \end{enumerate}
 
@@ -65,16 +64,17 @@ $v=at=Ft/m$．由此得到
 
 
 \begin{example}
-    用5.0千克的铁锤把道钉打进铁路的枕木里去，打击时铁锤的速度是5.0$\ms$．如果打击的作用时间是0.01秒，求打击时的平均作用力，不计铁锤的重量．
+    用5.0千克的铁锤把道钉打进铁路的枕木里去，打击时铁锤的速度是5.0$\Ums$．如果打击的作用时间是0.01秒，求打击时的平均作用力，不计铁锤的重量．
 \end{example}
 
-\begin{figure}[htp]\centering
-\includegraphics[scale=.45]{fig/8-1.png}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/8-1.pdf}
+    \caption{}\label{fig_A_8-1}
 \end{figure}
 
 \begin{solution}
-    打击时，铁锤和道钉受到的力如图8.1所示．不计铁锤的重量，只考虑铁锤受到的道钉的作用力$N$．铁锤在这个力的作用下，在$t=0.01$秒内，速度由$v=-5.0\ms$，变为$v'=0$，这里取竖直向上的方向为正方向，应用动量定理就可以求出平均作用力：
+    打击时，铁锤和道钉受到的力如图~\ref{fig_A_8-1} 所示．不计铁锤的重量，只考虑铁锤受到的道钉的作用力$N$．铁锤在这个力的作用下，在$t=0.01$秒内，速度由$v=-5.0\Ums$，变为$v'=0$，这里取竖直向上的方向为正方向，应用动量定理就可以求出平均作用力：
 \[\begin{split}
     N&=\frac{p'-p}{t}=\frac{mv'-mv}{t}\\
     &=\frac{0-5.0\times (-5.0)}{0.01}{\rm N}\\
@@ -90,39 +90,71 @@ $v=at=Ft/m$．由此得到
 
 \subsection*{练习二}
 \begin{enumerate}
-    \item 10千克的物体以10$\ms$的速度作直线运动，在受到一个恒力作用4.0秒钟后，速度变为反向2.0$\ms$．求：
+    \item 10千克的物体以10$\Ums$的速度作直线运动，在受到一个恒力作用4.0秒钟后，速度变为反向2.0$\Ums$．求：
      \begin{enumerate}
         \item 物体在受力前和受力后的动量；
         \item 物体受到的冲量；
         \item 力的大小和方向．
     \end{enumerate}
     \item 列车的质量是$2.5\times 10^6$千克，受到的牵引力是$4.0\times 
-    10^5$牛，它的速度由10$\ms$增加到24$\ms$需要用多少时间？
-    \item 一个质量是65千克的人从墙上跳下，以7$\ms$的速度着地，与地面接触后0.01秒停了下来，地面对他的作用力是多大？如果他着地时弯曲双腿，用了1秒钟才停下来，地面对他的作用力又是多大？
+    10^5$牛，它的速度由10$\Ums$增加到24$\Ums$需要用多少时间？
+    \item 一个质量是65千克的人从墙上跳下，以7$\Ums$的速度着地，与地面接触后0.01秒停了下来，地面对他的作用力是多大？如果他着地时弯曲双腿，用了1秒钟才停下来，地面对他的作用力又是多大？
     \item 跳远时，为什么跳在砂坑里比跳在混凝土路面上安全？钉钉子时，为什么要用铁锤而不用橡皮锤？
     \item 质量为4千克的铅球和质量为0.1千克的皮球以相同的速度运动着，要使它们在相同的时间内停下来，作用在铅球上的力和作用在皮球上的力哪个大？为什么？
 \end{enumerate}
 
 \section{相互作用的物体的动量变化}
 我们经常可以看到，物体在相互作用的时候，它们的动量
-会发生变化．例如，在滑冰场上原来静止的两个人，无论谁推谁一下，两人就会向相反的方向运动起来（图8.2），他们的动量都发生了变化．又例如，在射击的时候，子弹向前飞出，同时枪身后退，子弹和枪身的动量也都发生了变化．
-\begin{figure}[htp]\centering
-\includegraphics{fig/8-2.jpg}
-\caption{}
+会发生变化．例如，在滑冰场上原来静止的两个人，无论谁推谁一下，两人就会向相反的方向运动起来（图~\ref{fig_A_8-2}），他们的动量都发生了变化．又例如，在射击的时候，子弹向前飞出，同时枪身后退，子弹和枪身的动量也都发生了变化．
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/8-2.pdf}
+    \caption{}\label{fig_A_8-2}
 \end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \begin{minipage}[t]{0.24\linewidth}
+        \centering
+        \includegraphics[width=3.3cm]{fig/A/8-3.png}
+        \caption{}\label{fig_A_8-3}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.24\linewidth}
+        \centering
+        \includegraphics[width=3.3cm]{fig/A/8-4.png}
+        %\caption{两个滑块分离后的闪光照片．闪光照相的快慢是每秒10次．图中的刻度尺标出厘米的数值．}\label{fig_A_8-4}
+        \caption{}\label{fig_A_8-4}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.24\linewidth}
+            \centering
+        \includegraphics[width=3.3cm]{fig/A/8-5.png}
+        \caption{}\label{fig_A_8-5}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.24\linewidth}
+        \centering
+        \includegraphics[width=3.3cm]{fig/A/8-6.png}
+        %\caption{两个滑块粘合前后的闪光照片．闪光照相的快慢是每秒7.5次．图中的刻度尺标出厘米的数值．}\label{fig_A_8-6}
+        \caption{}\label{fig_A_8-6}
+    \end{minipage}
+    \caption*{前两幅图：两个滑块分离后的闪光照片，闪光照相的快慢是每秒10次，图中的刻度尺标出厘米的数值．后两幅图：两个滑块粘合前后的闪光照片，闪光照相的快慢是每秒7.5次，图中的刻度尺标出厘米的数值．}
+\end{figure}
+
 
 要进一步知道相互作用的物体的动量变化之间的关系，就要做物理实验．
 
-图8.3（见插页）是放在水平气垫导轨上的两个挨在一起的滑块，在它们之间有一个用线拴住的弹性金属片，烧断线以后，两个滑块就向相反方向运动，图8.4（见插页）是用闪光照相记录下来的滑块在运动中各个时刻的位置．
+图~\ref{fig_A_8-3} 是放在水平气垫导轨上的两个挨在一起的滑块，在它们之间有一个用线拴住的弹性金属片，烧断线以后，两个滑块就向相反方向运动，图~\ref{fig_A_8-4} 是用闪光照相记录下来的滑块在运动中各个时刻的位置．
 
-在这个实验中，右边大滑块的质量是0.30千克，左边小滑块的质量是0.20千克，从图8.4可以明显看出，两个滑块向相反的方向运动，在每段相等的时间内，小滑块通过的路程
-要大些，这说明小滑块的速度比较大．闪光照相的快慢是每秒10次，利用图中的刻度尺你可以量出每1/10秒滑块的位移，从而得出大滑块的速度是0.59$\ms$，小滑块的速度是0.89$\ms$．因此大滑块的动量是0.18${\rm kg}\cdot \ms$，小滑块的动量也是0.18${\rm kg}\cdot \ms$，在实验误差范围内，它们的动量大小相等，方向相反．
+在这个实验中，右边大滑块的质量是0.30千克，左边小滑块的质量是0.20千克，从图~\ref{fig_A_8-4} 可以明显看出，两个滑块向相反的方向运动，在每段相等的时间内，小滑块通过的路程
+要大些，这说明小滑块的速度比较大．闪光照相的快慢是每秒10次，利用图中的刻度尺你可以量出每1/10秒滑块的位移，从而得出大滑块的速度是0.59$\Ums$，小滑块的速度是0.89$\Ums$．因此大滑块的动量是0.18${\rm kg}\cdot \Ums$，小滑块的动量也是0.18${\rm kg}\cdot \Ums$，在实验误差范围内，它们的动量大小相等，方向相反．
 
 上述实验研究的是很特殊的情况：相互作用的物体原来是静止的．如果相互作用物体中一个或两个原来在运动，情况又怎样呢？让我们再来做一个实验．
 
-实验装置如图8.5（见插页）所示，我们在右边大滑块上贴些油泥，推动它一下，使它向原来静止的小滑块运动，它碰上小滑块以后，它们就粘在一起，共同向前继续运动，图8.6（见插页）是它们在粘合前后的闪光照相．
+实验装置如图~\ref{fig_A_8-5} 所示，我们在右边大滑块上贴些油泥，推动它一下，使它向原来静止的小滑块运动，它碰上小滑块以后，它们就粘在一起，共同向前继续运动，图~\ref{fig_A_8-6} 是它们在粘合前后的闪光照相．
 
-大滑块的质量是0.30千克，小滑块的质量是0.20千克．从图8.6可以明显地看出，两个滑块粘合后，虽然还继续向前运动，但速度比原来大滑块的速度小，闪光照相的快慢这次是每秒7.5次，用前述方法，我们可以知道原来大滑块的速度是0.71$\ms$，两个滑块粘合后它们的共同速度是0.43$\ms$，因比，大滑块失去的向左的动量是0.084${\rm kg}\cdot \ms$，小滑块获得的向左的动量是0.086${\rm kg}\cdot \ms$．在实验误差范围内，它们的动量变化也是大小相等、方向相反的．
+大滑块的质量是0.30千克，小滑块的质量是0.20千克．从图~\ref{fig_A_8-6} 可以明显地看出，两个滑块粘合后，虽然还继续向前运动，但速度比原来大滑块的速度小，闪光照相的快慢这次是每秒7.5次，用前述方法，我们可以知道原来大滑块的速度是0.71$\Ums$，两个滑块粘合后它们的共同速度是0.43$\Ums$，因比，大滑块失去的向左的动量是0.084${\rm kg}\cdot \Ums$，小滑块获得的向左的动量是0.086${\rm kg}\cdot \Ums$．在实验误差范围内，它们的动量变化也是大小相等、方向相反的．
 
 上述实验还是属于比较特殊的情况：物体在碰撞前后都在同一直线上运动，这种碰撞叫做\textbf{正碰}，当发生斜碰时，也就是碰撞前后物体不在同一直线上运动时，用实验同样可以证明：碰撞物体的动量的变化也是大小相等、方向相反的．这类实验分析起来比较复杂，这里就不讲了．
 
@@ -132,8 +164,8 @@ $v=at=Ft/m$．由此得到
 
 上述的结论还可以换一个说法．我们把相互作用的物体的动量的矢量和叫做它们的总动量，由于相互作用的物体的动量的变化总是大小相等，方向相反，所以动量的变化为零，因此物体相互作用前的总动量保持不变，这就是动量守恒．
 
-我们还应该把动量守恒的条件仔细讨论一下，在相互作用的物体构成的系统里，每个物体，既可以受到来自系统内其他物体的力，也可能受到来自系统外其他物体的力，前者叫做\textbf{内力}，后者叫做\textbf{外力}，以图8.3的滑块为例，每个滑块除了受
-到相互作用的内力以外，都还受到向下的重力和向上的支持力，重力和支持力作用在同一滑块上，大小相等，方向相反，合力为零．对图8.5中的系统进行同样的分析，也可以看到系统中的物体受到的外力的合力为零，外力的合力为零或者整个系统根本不受到外力，就是动量守恒的条件．
+我们还应该把动量守恒的条件仔细讨论一下，在相互作用的物体构成的系统里，每个物体，既可以受到来自系统内其他物体的力，也可能受到来自系统外其他物体的力，前者叫做\textbf{内力}，后者叫做\textbf{外力}，以图~\ref{fig_A_8-3} 的滑块为例，每个滑块除了受
+到相互作用的内力以外，都还受到向下的重力和向上的支持力，重力和支持力作用在同一滑块上，大小相等，方向相反，合力为零．对图~\ref{fig_A_8-5} 中的系统进行同样的分析，也可以看到系统中的物体受到的外力的合力为零，外力的合力为零或者整个系统根本不受到外力，就是动量守恒的条件．
 
 由此得出结论：\textbf{系统不受外力或所受外力的合力为零，这个系统的动量就保持不变}．这个结论叫做\textbf{动量守恒定律}．
 
@@ -156,7 +188,7 @@ $v=at=Ft/m$．由此得到
 
 
 \begin{example}
-    在列车编组站里，一辆10千克的货车在平直轨道上以2.0$\ms$的速度运动，碰上一辆不动的$1.5\times 10^5$千克的货车后，它们接合在一起并一同向前运动，求它们共同前进的速度．
+    在列车编组站里，一辆10千克的货车在平直轨道上以2.0$\Ums$的速度运动，碰上一辆不动的$1.5\times 10^5$千克的货车后，它们接合在一起并一同向前运动，求它们共同前进的速度．
 \end{example}
 
 
@@ -167,11 +199,11 @@ $v=at=Ft/m$．由此得到
 \[v=\frac{m_1}{m_1+m_2}v_1\]
 取第一辆货车原来前进的方向作为正方向，代入数值得到
 \[\begin{split}
-    v&=\frac{10^5}{10^5+1.5\times 10^5}\times 2\ms\\
-    &=0.8\ms
+    v&=\frac{10^5}{10^5+1.5\times 10^5}\times 2\Ums\\
+    &=0.8\Ums
 \end{split}\]
 \end{solution}
-$v$是正值，表示两辆车接合后以0.8$\ms$的速度沿第一辆货车原来运动的方向继续向前运动．
+$v$是正值，表示两辆车接合后以0.8$\Ums$的速度沿第一辆货车原来运动的方向继续向前运动．
 
 
 \section*{阅读材料：笛卡尔和动量守恒定律}
@@ -188,11 +220,11 @@ $v$是正值，表示两辆车接合后以0.8$\ms$的速度沿第一辆货车原
 
 \subsection*{练习三}
 \begin{enumerate}
-    \item 两个原来静止的在水平面上挨在一起的小车，质量分别是0.5千克和0.2千克，在弹力作用下分开，较重的小车以0.8$\ms$的速度向右运动，求较轻的小车的速度．
+    \item 两个原来静止的在水平面上挨在一起的小车，质量分别是0.5千克和0.2千克，在弹力作用下分开，较重的小车以0.8$\Ums$的速度向右运动，求较轻的小车的速度．
     \item 在气垫导轨上，一个质量为600克的滑块以15${\rm cm}/{\rm s}$的速度赶上另一个质量为400克速度为10${\rm cm}/{\rm s}$的滑块而发生碰撞，碰撞后两个滑块并在一起，求两个滑块碰撞后的速度．
-    \item 一个小孩从静止的小船上水平抛出一个球，球的质量是2.0千克，抛出的速度是20$\ms$．如果小孩和船的总质量为100千克，球抛出时船得到的速度是多大？
-    \item 质量为10克速度为300$\ms$的子弹，打进质量为
-    24克静止在光滑水平面上的木块中，并留在木块里，子弹进入木块后，木块运动的速度多大？如果子弹把水块打穿，穿过木块后子弹的速度为100$\ms$，这时木块的速度多大？
+    \item 一个小孩从静止的小船上水平抛出一个球，球的质量是2.0千克，抛出的速度是20$\Ums$．如果小孩和船的总质量为100千克，球抛出时船得到的速度是多大？
+    \item 质量为10克速度为300$\Ums$的子弹，打进质量为
+    24克静止在光滑水平面上的木块中，并留在木块里，子弹进入木块后，木块运动的速度多大？如果子弹把水块打穿，穿过木块后子弹的速度为100$\Ums$，这时木块的速度多大？
     \item 光滑的水平面上停着一辆平车，有两个人在车上相向而行，在什么情况下平车保持静止？在什么情况下平车要运动，运动的方向由什么决定？
 \end{enumerate}
 
@@ -220,78 +252,23 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 
 \section{弹性碰撞}
 
-\setcounter{figure}{6}
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex]
-\begin{scope}
-\fill[pattern=north east lines](-0.8,0) rectangle (1,.25);
-\draw[thick](-0.8,0)--(1,0);
-\tkzDefPoints{0/0/A', 0.4/0/B', 0.4/-2/B, -1/-1.732/A}
-\tkzDrawSegments(A,A' B,B')
-\draw[fill=gray](A) circle(.2);
-\draw[fill=gray](B) circle(.2);
-\tkzLabelPoints[below=10pt](A,B)
 
-
-\end{scope}
-\begin{scope}[xshift=2.5cm]
-    \fill[pattern=north east lines](-0.8,0) rectangle (1,.25);
-    \draw[thick](-0.8,0)--(1,0);
-\tkzDefPoints{0/0/A', 0.4/0/B', 0.4/-2/B, -.2/-1.99/A}
-\tkzDrawSegments(A,A' B,B')
-\draw[fill=gray](A) circle(.2);
-\draw[fill=gray](B) circle(.2);
-\tkzLabelPoints[below=10pt](A,B)
-\draw[->](-120:2) arc (-120:-105:2);
-
-
-\end{scope}
-\begin{scope}[xshift=4.5cm]
-    \fill[pattern=north east lines](-0.8,0) rectangle (1,.25);
-    \draw[thick](-0.8,0)--(1,0);
-\tkzDefPoints{0/0/A', 0.4/0/B', 0/-2/A, 1.4/-1.732/B}
-\tkzDrawSegments(A,A' B,B')
-\draw[fill=gray](A) circle(.2);
-\draw[fill=gray](B) circle(.2);
-\tkzLabelPoints[below=10pt](A,B)
-\draw[->](-80:2) arc (-80:-65:2);
-\end{scope}
-\begin{scope}[xshift=7cm]
-    \fill[pattern=north east lines](-0.8,0) rectangle (1,.25);
-    \draw[thick](-0.8,0)--(1,0);
-\tkzDefPoints{0/0/A', 0.4/0/B', 0.5/-1.99/B, 0/-2/A}
-\tkzDrawSegments(A,A' B,B')
-\draw[fill=gray](A) circle(.2);
-\draw[fill=gray](B) circle(.2);
-\tkzLabelPoints[below=10pt](A,B)
-\draw[<-](-65:2) arc (-65:-50:2);
-\end{scope}
-\begin{scope}[xshift=10cm]
-    \fill[pattern=north east lines](-0.8,0) rectangle (1,.25);
-    \draw[thick](-0.8,0)--(1,0);
-\tkzDefPoints{0/0/A', 0.4/0/B', 0.4/-2/B, -1/-1.732/A}
-\tkzDrawSegments(A,A' B,B')
-\draw[fill=gray](A) circle(.2);
-\draw[fill=gray](B) circle(.2);
-\tkzLabelPoints[below=10pt](A,B)
-\draw[<-](-110:2) arc (-110:-95:2);
-
-\end{scope}
-
-\end{tikzpicture}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/8-7.pdf}
+    \caption{}\label{fig_A_8-7}
 \end{figure}
 
-让我们来做图8.7所示的实验，两个质量相同的钢球分别吊在细绳上，静止时挨在一起，使$A$球偏开一个角度后放开，它回到原来位置时撞上$B$球．可以看到，碰撞后$A$球静止下来，$B$球摆到与$A$球原来高度几乎相等的高度．当$B$球摆回来撞上$A$球后，$B$球又静止下来，$A$球又摆到与原来差不多的高度上，这个过程还将继续下去，两个球交替摆动．
+让我们来做图~\ref{fig_A_8-7} 所示的实验，两个质量相同的钢球分别吊在细绳上，静止时挨在一起，使$A$球偏开一个角度后放开，它回到原来位置时撞上$B$球．可以看到，碰撞后$A$球静止下来，$B$球摆到与$A$球原来高度几乎相等的高度．当$B$球摆回来撞上$A$球后，$B$球又静止下来，$A$球又摆到与原来差不多的高度上，这个过程还将继续下去，两个球交替摆动．
 
 大家想一想，为什么碰撞后一个球会停下来而把它的动量完全传递给另一个球？为什么第一球不向后弹回或者两个球都以较小的速度向前运动？例如，碰撞前$A$球的速度是$v$，碰撞后它以$0.5v$的速度弹回，$B$球以$1.5v$的速度向前运动，或碰撞后$A$球以$0.2v$的速度、$B$球以$0.8v$的速度都向前运动，这两种情况都不违反动量守恒定律，在不违反动量守恒定律的许多种可能的情况中，为什么实际发生的只是我们看到的这一种情况呢？
 
 上述的实验和问题是物理学史上一件著名的事情，1666年，在成立还不久的英国皇家学会的例会上表演了这个实验并引起了很大的兴趣，随后出现了许多对这一现象的不同的甚至是混乱的解释，到1668年，才有三位学者作出了正确的说明，其中对这一问题作出完整分析的是荷兰物理学家惠更斯．惠更斯认为，在这种碰撞中，除了动量守恒以外，还有另
 一物理量守恒，他指出这个物理量就是当时所说的“活力”$mv^2$．后来人们把“活力”改叫动能，并且把它的定义式由$mv^2$改为$\dfrac{1}{2}mv^2$．
 
-同学们在学过本节的例题之后就可以知道，由于在图8.7的实验中动量和动能都守恒，我们看到的现象是唯一可能发生的现象．
+同学们在学过本节的例题之后就可以知道，由于在图~\ref{fig_A_8-7} 的实验中动量和动能都守恒，我们看到的现象是唯一可能发生的现象．
 
-那么，是不是在所有的碰撞中除了动量守恒外，动能都守恒呢？你们只要回顾一下图8.5的实验，比较一下两个滑块在碰撞前后的动能之和，就很容易知道，动能是不守恒的．
+那么，是不是在所有的碰撞中除了动量守恒外，动能都守恒呢？你们只要回顾一下图~\ref{fig_A_8-5} 的实验，比较一下两个滑块在碰撞前后的动能之和，就很容易知道，动能是不守恒的．
 
 所以，并非所有的碰撞动能都守恒．有的碰撞动能守恒，
 有的碰撞动能不守恒．正如惠更斯指出的那样，只有在碰撞后物体不发生永久形变、不裂成碎块、不粘在一起、不发热以及不发生其他内部变化的情况下，动能才是守恒的，我们把这种动量和动能同时守恒的碰撞叫做\textbf{弹性碰撞}．
@@ -341,15 +318,15 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 (8.6)式就是我们的答案．如果$m_1>m_2$，算出的$v'_1$和$v'_2$都是正值，表示$v'_1$和$v'_2$都与$v_1$方向相同．
 如果$m_1<m_2$，算出的$v'_1$为负值，表示$v'_1$和$v'_1$方向相反，钢球1在碰撞后将被弹回．
 
-在(8.6)式中如果令$m_1=m_2$，可以看到，$v'_1=0$，$v'_2=v_1$．这就是我们在图8.7的实验中看到的现象．
+在(8.6)式中如果令$m_1=m_2$，可以看到，$v'_1=0$，$v'_2=v_1$．这就是我们在图~\ref{fig_A_8-7} 的实验中看到的现象．
 
 应该注意的是，利用动量守恒和动能守恒，根据碰撞前的速度，我们只能计算出两个物体发生弹性正碰后的速度．如果发生的是斜碰，虽然是弹性碰撞，也不能这样简单地计算出它们碰撞后的速度．这个问题比较复杂，我们就不讨论了．
 
 \subsection*{练习四}
 \begin{enumerate}
-\item 两个质量都是3千克的球，各以6$\ms$的速率相向运动，发生正碰后每个球都以原来的速率向相反方向运动．它们的碰撞是弹性碰撞吗？为什么？
-\item 一个1.5千克的物体原来静止，另一个0.5千克的以0.2$\ms$的速度运动的物体与它发生弹性正碰，求碰撞后两个物体的速度．
-\item 甲乙两物体在同一直线上同向运动，甲物体在前，乙物体在后，甲物体质量为2千克，速度是1$\ms$；乙物体质量为4千克，速度是3$\ms$．乙物体追上甲物体发生正碰后，两物体仍沿着原来的方向运动，而甲物体的速度变为3$\ms$，乙物体的速度变为2$\ms$，这两个物体的碰撞是弹性碰撞吗？为什么？
+\item 两个质量都是3千克的球，各以6$\Ums$的速率相向运动，发生正碰后每个球都以原来的速率向相反方向运动．它们的碰撞是弹性碰撞吗？为什么？
+\item 一个1.5千克的物体原来静止，另一个0.5千克的以0.2$\Ums$的速度运动的物体与它发生弹性正碰，求碰撞后两个物体的速度．
+\item 甲乙两物体在同一直线上同向运动，甲物体在前，乙物体在后，甲物体质量为2千克，速度是1$\Ums$；乙物体质量为4千克，速度是3$\Ums$．乙物体追上甲物体发生正碰后，两物体仍沿着原来的方向运动，而甲物体的速度变为3$\Ums$，乙物体的速度变为2$\Ums$，这两个物体的碰撞是弹性碰撞吗？为什么？
 \item 在本节课文的(8.6)式中，如果$m_2\gg m_1$，就得到$v'_1\approx -v_1,\; v'_2\approx 0$．这组解的物理意义是什么？
 \end{enumerate}
 
@@ -359,33 +336,35 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 
 反冲运动在科学技术中也有许多重要的应用，喷气式飞
 机、火箭就是利用反冲运动来获得巨大速度的．喷气式飞机通过连续不断地向后喷出气体，可以得到超过音速的飞行速度．
-\begin{figure}[htp]\centering
-\includegraphics[angle=-30]{fig/8-8.jpg}
-\caption{}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/8-8.pdf}
+    \caption{}\label{fig_A_8-8}
 \end{figure}
 
 我国早在宋代就发明了火箭，古代火箭的构造跟现在节日里玩的“起花”相似．在竹筒里装入一些火药，把竹筒捆在
-箭杆上，火药点燃后，燃烧生成的气体以很大的速度从筒里向后喷出，竹筒带着箭就向前飞去（图8.8）．这种火箭在古代曾作兵器用过．
+箭杆上，火药点燃后，燃烧生成的气体以很大的速度从筒里向后喷出，竹筒带着箭就向前飞去（图~\ref{fig_A_8-8}）．这种火箭在古代曾作兵器用过．
 
-现代火箭的原理跟上面的基本相同，只是构造比较复杂．它主要由壳体和燃料两大部分组成，壳体是圆筒形的，前端是封闭的尖顶，后端有尾喷管．燃料燃烧时产生的高温高压气体以很大的速度从尾部向后喷出，火箭就向前飞去（图8.9）．
+现代火箭的原理跟上面的基本相同，只是构造比较复杂．它主要由壳体和燃料两大部分组成，壳体是圆筒形的，前端是封闭的尖顶，后端有尾喷管．燃料燃烧时产生的高温高压气体以很大的速度从尾部向后喷出，火箭就向前飞去（图~\ref{fig_A_8-9}）．
 
 理论计算表明，火箭获得的最终速度主要取决于两个条
 件，一个是喷气速度，一个是质量比，即火箭开始飞行时的质
 量与燃料燃尽时的质量之比，为了提高喷气速度，需要使用高质量的燃料，目前常用的液体燃料是液氢，用液氧做氧化剂，质量比与火箭的结构和材料有关系，现代技术能达到的质量比不超过10．在现代技术条件下，用一级火箭还不能达到发射人造卫星所需要的速度．要发射人造卫星，现在都用多级火箭．
 
-多级火箭是由单级火箭组成的（图8.10）．发射时先点燃第一级火箭，它的燃料用完以后空壳就自动脱离．这时第二级火箭开始工作，第二级火箭在燃料用完以后空壳也自动脱离，以后又是下一级火箭开始工作．多级火箭在工作中及时把对后面航行没有用的空壳抛掉，使火箭的总质量减少，因此能够达到很高的速度，可以用来发射人造卫星、宇宙飞船和洲际导弹．当然，火箭的级数也不是越多越好，因为级数越多，火箭的构造也越复杂，工作的可靠性也越差．目前，多级火箭一般都是三级的．
+多级火箭是由单级火箭组成的（图~\ref{fig_A_8-10}）．发射时先点燃第一级火箭，它的燃料用完以后空壳就自动脱离．这时第二级火箭开始工作，第二级火箭在燃料用完以后空壳也自动脱离，以后又是下一级火箭开始工作．多级火箭在工作中及时把对后面航行没有用的空壳抛掉，使火箭的总质量减少，因此能够达到很高的速度，可以用来发射人造卫星、宇宙飞船和洲际导弹．当然，火箭的级数也不是越多越好，因为级数越多，火箭的构造也越复杂，工作的可靠性也越差．目前，多级火箭一般都是三级的．
 
-\begin{figure}[htp]
-\centering
-\begin{minipage}[t]{0.48\textwidth}
-\centering
-\includegraphics{fig/8-9.jpg}
-\caption{}
-\end{minipage}
-\begin{minipage}[t]{0.48\textwidth}
-\centering
-\includegraphics{fig/8-10.pdf}
-\caption{多级火箭}
+\begin{figure}[htbp]
+    \centering
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics[width=6.5cm]{fig/A/8-9.png}
+        \caption{}\label{fig_A_8-9}
+    \end{minipage}
+    \hfil
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics{fig/A/8-10.pdf}
+        \caption{多级火箭}\label{fig_A_8-10}
 \end{minipage}
 \end{figure}
 
@@ -408,7 +387,7 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 
 \section*{习题}
 \begin{enumerate}
-    \item 质量为1千克的手榴弹以60$^\circ$角斜抛出去，抛出的速度为10$\ms$，手榴弹到达最高点时炸成两块，一块的质量是0.6千克，以15$\ms$的速度沿原方向运动，求另一块的速度大小和方向．
+    \item 质量为1千克的手榴弹以60$^\circ$角斜抛出去，抛出的速度为10$\Ums$，手榴弹到达最高点时炸成两块，一块的质量是0.6千克，以15$\Ums$的速度沿原方向运动，求另一块的速度大小和方向．
     \item 对于在一直线上运动的两个物体组成的系统，动量守恒定律的一般表达式为：
 \[m_1v_1+m_2v_2=m_1v'_1+m_2v'_2 \]
     在不同情况下，这个表达式往往可以简化为不同形式，试写出下列各种情况下得出的简化的表达式：
@@ -421,47 +400,24 @@ F_{21}&=m_2a_2=m_2\frac{v'_2-v_2}{t}=\frac{p'_2-p_2}{t}
 \item 试证明：两个物体碰撞后，它们的速度变化$\Delta v_1=v'_1-v_1$和$\Delta v_2=v'_2-v_2$跟它们的质量成反比，即
 \[\frac{\Delta v_1}{\Delta v_2}=-\frac{m_2}{m_1}\]
 并利用所得结果来讨论：很轻的物体（如乒兵球）跟一个很重的物体（如课桌）碰撞后，它们的速度变化有什么特征．
-\item 质子的质量是$1.67\times 10^{-27}$千克，速度为$1.0\times 10^7\ms$，与一个静止的氦核碰撞后，质子以$6.0\times 10^6\ms$的速度反弹回来，氦核以$4.0\times 10^6\ms$的速度向前运动．
+\item 质子的质量是$1.67\times 10^{-27}$千克，速度为$1.0\times 10^7\Ums$，与一个静止的氦核碰撞后，质子以$6.0\times 10^6\Ums$的速度反弹回来，氦核以$4.0\times 10^6\Ums$的速度向前运动．
    \begin{enumerate}
        \item 你能否求出氦核的质量？如果能，是多少？
        \item 你能否求出碰撞时的相互作用力？为什么？
    \end{enumerate}
    \item 两个球以相同的速度相向运动，其中一个球的质量是另一个的三倍，相碰后重球停止不动，轻球以二倍的速率弹回，试证明它们发生的是弹性碰撞．
-   \item 在光滑水平面上一个质量为0.2千克的小球以5$\ms$的速度向前运动，途中与另一个质量为0.3千克静止的小球发生正碰．假设碰撞后第二个小球的速度为4.2$\ms$，你算出的第一个小球的速度是多大？想一想，这种情况真的可能发生吗？这道题的毛病出在哪里？
-\begin{figure}[htp]\centering
-\begin{tikzpicture}[>=latex, scale=.8]
-\draw (-1,0)-- (6,0);
-\draw (-0.1,0) rectangle (.1, 5);
-\node at (0, 5.6){$M$};
-\draw [<->](-.75,5.2)--node[fill=white]{$h$}(-.75,0);
-
-\draw[fill=gray] (-2, 5.3) --(-1.7, 5.3) to [bend left=15] (-1.45, 5.2) to [bend left=15] (-1.7,5.1)--(-2,5.1)--(-2,5.3); 
-\node at (-1.7, 5.5){$m$};
-\draw[->](-1.1, 5.2)--node[above]{$v_0$}(-.3, 5.2);
-\draw [|<->|](0,-.3)--node[fill=white]{$s$}(2,-.3);
-\draw [|<->|](0,-.8)--node[fill=white]{$s'$}(5.2,-.8);
-\draw (0,0)--(0,-1);
-\draw (2,0)--(2,-.5);
-\draw (5.2,0)--(5.2,-1);
-
-\draw [dashed] (5.2,0) arc (0:87:5.2);
-
-\draw [dashed] plot[domain=0:2, samples=100] function{-1.3*x*x+5.2} ;
-\draw [fill=gray] (0,5.2) circle (.2);
-\draw [dashed, fill=white] (2,.2) circle (.2);
-\draw [dashed, fill=white] (4.9+.2,.55)--(5.1+.2,.55)--(5.1+.2,.25) to [bend left=15](5+.2,0) to [bend left=15](4.9+.2,.25)--(4.9+.2,.55);
-
-
-
-\end{tikzpicture}
-\caption{}
+   \item 在光滑水平面上一个质量为0.2千克的小球以5$\Ums$的速度向前运动，途中与另一个质量为0.3千克静止的小球发生正碰．假设碰撞后第二个小球的速度为4.2$\Ums$，你算出的第一个小球的速度是多大？想一想，这种情况真的可能发生吗？这道题的毛病出在哪里？
+\begin{figure}[htbp]
+    \centering
+    \includegraphics{fig/A/8-11.pdf}
+    \caption{}\label{fig_A_8-11}
 \end{figure}
-   \item 一个质量$M=0.2$千克的小球放在高度$h=5$米的直杆顶端（图8.11），一颗质量$m=0.01$千克的子弹以$v_0=500\ms$的速度沿水平方向击中小球，并穿过球心，小球落地处离杆的距离$s=20$米．求子弹落地处离杆的距离．子弹的动能有多少转化成了热能？
-   \item 一个连同装备共有100千克的宇宙航行员，脱离宇宙飞船后，在离飞船45米处与飞船处于相对静止状态．他带着一个装有0.5千克氧气的贮氧筒，贮氧筒有个可以使氧气以50$\ms$的速度喷出的喷嘴，宇航员必须向着与返回飞船相反的方向释放氧气，才能回到飞船上去，同时又必须保留一部分氧气供他在飞回飞船的途中呼吸．飞行员呼吸的耗氧率为$2.5\times 10^{-4}{\rm kg}/{\rm s}$．如果他在开始返回的瞬间释放0.1千克的氧气，他能安全回到飞船吗？
+   \item 一个质量$M=0.2$千克的小球放在高度$h=5$米的直杆顶端（图~\ref{fig_A_8-11}），一颗质量$m=0.01$千克的子弹以$v_0=500\Ums$的速度沿水平方向击中小球，并穿过球心，小球落地处离杆的距离$s=20$米．求子弹落地处离杆的距离．子弹的动能有多少转化成了热能？
+   \item 一个连同装备共有100千克的宇宙航行员，脱离宇宙飞船后，在离飞船45米处与飞船处于相对静止状态．他带着一个装有0.5千克氧气的贮氧筒，贮氧筒有个可以使氧气以50$\Ums$的速度喷出的喷嘴，宇航员必须向着与返回飞船相反的方向释放氧气，才能回到飞船上去，同时又必须保留一部分氧气供他在飞回飞船的途中呼吸．飞行员呼吸的耗氧率为$2.5\times 10^{-4}{\rm kg}/{\rm s}$．如果他在开始返回的瞬间释放0.1千克的氧气，他能安全回到飞船吗？
 
 \begin{solution}
     宇航员向着与返回飞船相反的方向释放出$m=0.1$
-千克的氧气后，他将获得向着飞船运动的速度．要知道宇航员能否安全回到飞船，先要求出它返回飞船需要的时间$t$．取飞船为参照物，向着飞船运动的方向为正方向，氧气释放的速度$v=-50\ms$．设宇航员获得的速度为$V$，宇航员连同装备的总质量为$M$．原来宇航员相对于飞船是静止的，根据动量守恒定律可得：
+千克的氧气后，他将获得向着飞船运动的速度．要知道宇航员能否安全回到飞船，先要求出它返回飞船需要的时间$t$．取飞船为参照物，向着飞船运动的方向为正方向，氧气释放的速度$v=-50\Ums$．设宇航员获得的速度为$V$，宇航员连同装备的总质量为$M$．原来宇航员相对于飞船是静止的，根据动量守恒定律可得：
 \[(M-m)V+mv=0\]
 考虑到$M\gg m$，得$MV+mv=0$，所以
 \[V=-\frac{mv}{M}\]
