--- a/physics.tex
+++ b/physics.tex
@@ -32,7 +32,8 @@
 	%\include{1/A/05}
 	%\include{1/A/06}
 	%\include{1/A/07}
-	\include{1/A/08}
+	%\include{1/A/08}
+	\include{1/A/09}
 	
 \end{document}
 
